--- a/_posts/2021/2021-3-14-fear.md
+++ b/_posts/2021/2021-3-14-fear.md
@@ -11,6 +11,7 @@ second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.a
 gospel: 요한 3,14-21
 gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=3
 
+tags: 사순
 
 ---
 
