--- a/_posts/2022/2022-12-11-homily.md
+++ b/_posts/2022/2022-12-11-homily.md
@@ -13,6 +13,8 @@ first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.as
 second_reading: 야고보서 5,7-10
 second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=166&p=5
 
+tags: 대림
+
 ---
 
 영화 <a href="https://www.imdb.com/title/tt4627352/">'목자이자 도살자'</a>의
