--- a/_posts/2023/2023-2-26-homily.md
+++ b/_posts/2023/2023-2-26-homily.md
@@ -11,6 +11,7 @@ second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.a
 gospel: 마태 4,1-11
 gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=147&p=4
 
+tags: 사순
 
 ---
 
