--- a/_posts/2020/2020-12-6-buttons.md
+++ b/_posts/2020/2020-12-6-buttons.md
@@ -10,7 +10,7 @@ second_reading: 베드로 2서 3,8-14
 second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=168&p=3
 gospel: 마르코가 전한 거룩한 복음의 시작입니다. 1,1-8
 gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=148&p=1
-
+tags: 대림
 
 ---
 
