--- a/_posts/2021/2021-11-28-3300.md
+++ b/_posts/2021/2021-11-28-3300.md
@@ -10,7 +10,7 @@ second_reading: 테살로니카 1서 3,12―4,2
 second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=159&p=3
 gospel: 루카 21,25-28.34-36
 gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=149&p=21
-
+tags: 대림
 
 ---
 
