--- a/_posts/2021/2021-12-12-john.md
+++ b/_posts/2021/2021-12-12-john.md
@@ -10,7 +10,7 @@ second_reading: 필리피서 4,4-7
 second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=157&p=4
 gospel: 루카 3,10-18
 gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=149&p=3
-
+tags: 대림
 
 ---
 
