--- a/_posts/2021/2021-12-25-fire.md
+++ b/_posts/2021/2021-12-25-fire.md
@@ -10,6 +10,7 @@ second_reading: 히브리서1,1-6
 second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=165&p=1
 gospel: 요한 1,1-18
 gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=1
+tags: 성탄
 
 ---
 
