--- a/_posts/2023/2023-3-12-homily.md
+++ b/_posts/2023/2023-3-12-homily.md
@@ -11,6 +11,7 @@ second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.a
 gospel: 요한 4,5-42
 gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=4
 
+tags: 사순
 
 ---
 <a href="https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=148&p=14">마르코 복음 14,13</a>에서 주님께서는
