--- a/_posts/2023/2023-3-26-lazarus.md
+++ b/_posts/2023/2023-3-26-lazarus.md
@@ -9,6 +9,7 @@ second_reading: 로마서 말씀 8,8 - 11
 second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=8
 gospel: 요한 복음서 11,1 - 45
 gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=11
+tags: 사순
 
 ---
  
