--- a/_posts/2022/2022-2-3-homily.md
+++ b/_posts/2022/2022-2-3-homily.md
@@ -11,7 +11,7 @@ gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n
 
 ---
  
-예수님이 사도들에게 의무와 소명을 위임하시고, 동시에 다른 장소로 갈 자유를 부여하십니다. 예수님은 제자들에게 세가지 숙제를 주십니다. 사람들을 치료하고, 마귀를 쫓아내고, 사람들을 회개하라고 선포하라고.
+예수님이 사도들에게 의무와 소명을 위임하시고, 동시에 다른 장소로 갈 자유를 부여하십니다. 예수님은 제자들에게 세가지 숙제를 주십니다. 사람들을 치료하고, 마귀를 쫓아내고, 사람들에게 회개하라고 선포하라고.
 
 사제로 일하다보니, 몸이 아픈 사람을 위해 도와달라고, 기도해 달라고 매일 누군가 저에게 청합니다. 
 필요하다면 아픈 분의 집에도 찾아가고, 마귀도 쫓아냅니다.
