--- a/_posts/2021/2021-4-18-mug.md
+++ b/_posts/2021/2021-4-18-mug.md
@@ -13,7 +13,7 @@ gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n
 
 ---
 
-예전에 제가 광화문 광장 쪽 스타벅스에서 약속 때문에 커피를 마신 일이 있었습니다. 그런데 커피가 담긴 머그 잔에 자국이 있었는데 여자 립스틱 자국이 있었습니다. 그런 것에 따지는 것이 귀찮았던 저는 그냥 커피를 다 마셨고 내려가서 직원에게 잘 닦아야 하겠다고 이야기 하셨습니다. 그 머그잔을 닦았더라도 립스틱 자국이 남아 있었던 것이죠. 이것을 통해 ‘아무리 닦아도 흔적이 남는구나.’ 생각을 하게 됩니다.
+예전에 제가 광화문 광장 쪽 스타벅스에서 약속 때문에 커피를 마신 일이 있었습니다. 그런데 커피가 담긴 머그 잔에 자국이 있었는데 여자 립스틱 자국이 있었습니다. 그런 것을 따지는 것이 귀찮았던 저는 그냥 커피를 다 마셨고, 그 후 내려가서 직원에게 잘 닦아야 하겠다고 이야기 하였습니다. 그 머그잔을 닦았더라도 립스틱 자국이 남아 있었던 것이죠. 이것을 통해 ‘아무리 닦아도 흔적이 남는구나.’ 생각을 하게 됩니다.
 
 예수님은 부활 이후의 육신, 즉 새로운 몸을 가지고 계셨습니다. 그러나 그 몸에는 흔적이 있습니다. 우리가 알 수 없는 미래와 우리가 알았던 과거가 공존하는 것이 부활한 몸입니다. 부활하신 예수님은 그 새로운 몸을 가지고 제자들에게 당신 자신을 보여주셨습니다. 제자들은 놀라 공포에 떨었습니다.그리고 예수님이 유령인지 헷갈려했습니다. 그러자 예수님은 마치 머그잔에 남아있던 립스틱처럼 남아 있는 상처를 제자들에게 보여주셨습니다.
 
