--- a/_posts/2022/2022-09-25-klaus.md
+++ b/_posts/2022/2022-09-25-klaus.md
@@ -3,6 +3,8 @@ layout: post
 title: ""
 first_reading: 로마 14, 17-19
 first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=14
+second_reading: 티모테오 1서 6,11ㄱㄷ-16
+second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=161&p=6
 gospel: 마태 19, 27-29
 gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=147&p=19
 image: Seats_inside_a_flight.jpg
@@ -63,3 +65,5 @@ image: Seats_inside_a_flight.jpg
 <hr>
 
 <small>한국어: <a href="https://maria.catholic.or.kr/sa_ho/list/view.asp?menugubun=saint&ctxtSaintID=214">니콜라오 데 플뤼에 성인</a> <br> 독일어:<a href="https://de.wikipedia.org/wiki/Niklaus_von_Fl%C3%BCe">Niklaus von Flüe</a> <br> 영어:<a href="https://en.wikipedia.org/wiki/Nicholas_of_Fl%C3%BCe">Nicholas of Flüe </a></small>
+
+참고: 오늘 복음은 매일미사에 나오는 부분이 아니라, <a href="https://www.bibelwerk.de/verein/was-wir-bieten/sonntagslesungen/alle-sonntagslesungen">독일어 전례력</a>을 기준으로 합니다.
