--- a/future-dates/2023-4-23-homily.md
+++ b/future-dates/2023-4-23-homily.md
@@ -2,7 +2,7 @@
 
 title:  부활 제3주일
 layout: post 
-image:  
+image:  2023-04-23.jpeg
 first_reading:  사도행전 2,14.22ㄴ-33
 first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=151&p=2
 second_reading:  베드로 1서 1,17-21
