--- a/_posts/2020/2020-1-26-homily.md
+++ b/_posts/2020/2020-1-26-homily.md
@@ -12,7 +12,7 @@ gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n
 
 ---
 
-옛날에 이스라엘 안에서 교통이 좋은 이방인들이 많이 사는 도시 가버나움, 몇몇 도시가 있었습니다. 그 곳에서는 여러 가지 문화가 섞여 있어 혼란스러움이 적지 않았습니다. 예수님은 이스라엘 사람들은 꺼려하는 그 도시 중 가버나움에 가셨습니다.
+옛날에 이스라엘 안에서 교통이 좋은 이방인들이 많이 사는 도시 가버나움, 몇몇 도시가 있었습니다. 그 곳에서는 여러 가지 문화가 섞여 있어 혼란스러움이 적지 않았습니다. 오늘 복음에서 예수님은 이스라엘 사람들은 꺼려하는 그 도시 중 가버나움에 가셨습니다.
 그 곳에서 예수님께서 하신 말씀은 “나를 따르라.”였습니다.
 한국인이냐 독일인이냐 아니면 스위스인이냐 하는 것은 크게 중요하지 않습니다. 중요한 것은 진정한 그리스도인인가 입니다.
 
