--- a/_posts/2020/2020-9-27-tax.md
+++ b/_posts/2020/2020-9-27-tax.md
@@ -44,4 +44,4 @@ gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n
 
 포기는 하기 힘든 것입니다. 그러기에 자신을 위해 재화를 모으며 동시에 하느님께 인색한 모습을 보이기도 합니다. 자신의 이익을 지키기 위해 은근히 그리스도의 가치를 정신화 시키는 경우도 있는데 특히 가톨릭 신자들 상당수 그런 모습이 보입니다. 부모님들은 우리를 위해 정신적으로만 희생했는지요? 그것은 아닙니다. 실재적인 포기가 있었고 언젠가 죽을 우리도 구체적인 포기 행위를 할 것입니다.
 
-교무금 뿐만 아니라 이웃과 국가를 위해 우리를 포기하는 행위는 구체적으로 이루어져야 합니다. 이 세상의 병원의 3분의 1은 카톨릭 교회로 부터 생겼습니다. 생명을 위해 일하는 것은 구체적인 신앙의 행동입니다. 부모님의 큰 사랑을 기억하여야 겠습니다. 아멘.
+<a href="https://maria.catholic.or.kr/dictionary/bbs/bbs_view.asp?id=135640&ref=95&menu=4798">교무금</a>뿐만 아니라 이웃과 국가를 위해 우리를 포기하는 행위는 구체적으로 이루어져야 합니다. 이 세상의 병원의 3분의 1은 카톨릭 교회로부터 생겼습니다. 생명을 위해 일하는 것은 구체적인 신앙의 행동입니다. 부모님의 큰 사랑을 기억하여야 겠습니다. 아멘.
