--- a/_posts/2020/2020-12-13-wait.md
+++ b/_posts/2020/2020-12-13-wait.md
@@ -19,7 +19,7 @@ tags: 대림
 
 이태리에는 결혼식에 신부가 늦게 도착하는 관습이 있습니다. 그래야 더 행복하게 산답니다. 저도 이태리인들 혼인 예식을 거행한 적이 몇 차례 있었는데 보통 5-10분 정도 후 신부가 도착하더군요. 물론 더 오래 기다린 적도 있습니다. 아는 폴란드 신부님은 30분을 기다리다가 참지 못해 떠나려 하는데 신부가 도착했다는 얘기도 하더군요.
 
-기다리는 건 힘듭니다. 30분을 기다리는 것도 어려운데 수백년, 수천년을 기다리는 민족이 있습니다. 바로 이스라엘 민족입니다. 오늘 제1독서에서 나오는 메시아에 대한 희망은 기원전 6세기 바빌론 유배시절 형성되었습니다. 그 후 600백 년이 지난 후 (오늘 복음에서) 요한이 사막에서 다시금 메시아를 선포합니다. 그리고 사람들은 예루살렘에서 베타니아까지 약 40킬로 가량의 사막길을 걸어 그를 찾아옵니다. 하지만 그 역시 메시아는 아니었습니다. 얼마나 상심이 컸을까요? 반복되어 던져지는 “도대체 당신은 누구요? ”라는 질문은 그들의 간절함과 지친 모습을 함께 보여주고 있습니다.
+기다리는 건 힘듭니다. 30분을 기다리는 것도 어려운데 수백년, 수천년을 기다리는 민족이 있습니다. 바로 이스라엘 민족입니다. 오늘 제1독서에서 나오는 메시아에 대한 희망은 기원전 6세기 바빌론 유배시절 형성되었습니다. 그 후 600백 년이 지난 후 (오늘 복음에서) 요한이 사막에서 다시금 메시아를 선포합니다. 그리고 사람들은 예루살렘에서 <a href="https://home.catholic.or.kr/pdsm/bbs_view.asp?num=918&id=137662&SORT=C&menu=4797">베타니아</a>까지 약 40킬로 가량의 사막길을 걸어 그를 찾아옵니다. 하지만 그 역시 메시아는 아니었습니다. 얼마나 상심이 컸을까요? 반복되어 던져지는 “도대체 당신은 누구요? ”라는 질문은 그들의 간절함과 지친 모습을 함께 보여주고 있습니다.
 
 그런데 지쳤다고 포기하지 않습니다. 이들은 여전히 기다리고 있습니다. 특히 무너진 예루살렘 성벽 근처에 거주하는 유대인들은 율법을 철저히 지키며 여전히 메시아를 고대하고 있습니다. 왜 지치지 않았겠습니까? 그래도 기다리는 겁니다.
 
