--- a/_posts/2020/2020-9-13-zabelka.md
+++ b/_posts/2020/2020-9-13-zabelka.md
@@ -26,11 +26,11 @@ gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n
 그 중 일부 파일럿들은 폭탄 투하 후 사진을 촬영해서 돌아왔습니다. 그 사진을 본 신부님은 매우 놀랐습니다. 모든 것이 없어져 폐허로 되었기 때문이었습니다. 신부님은 ‚과연 내가 무슨 짓을 했나? 이것이 과연 옳은
 행동이었나?‘ 자문하였고 고백성사를 하러 가셨습니다. 고백을 하시고 훈계도 들으셨습니다.
 
-고백사제께서 자벨카 신부. 죄 사함을 받았습니다...“ 라고 말씀하셨을 때 자벨카 신부님은 스스로 놀랐습니다. ‚25 만명을 죽인 임무에 자신이 투입이 되었는데 이렇게 쉽게 사제경을 받다니..‘하고 말입니다. 이것은 가능합니다.
+고백사제께서 자벨카 신부. 죄 사함을 받았습니다...“ 라고 말씀하셨을 때 자벨카 신부님은 스스로 놀랐습니다. ‚25 만명을 죽인 임무에 자신이 투입이 되었는데 이렇게 쉽게 <a href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=5671&keyword=&gubun=02">사죄경</a>을 받다니..‘하고 말입니다. 이것은 가능합니다.
 
 하느님의 그릇은 인간의 그릇과 다릅니다. 뉘우치면 용서해주십니다. 숨이 붙어 있을 때 뉘우칩시다. 일반 신자가 생각하는 것들은 실상 큰 죄가 아닙니다. 진심으로 뉘우치면 무한한 용서를 받을 수 있습니다. 그러나 언제까지 무한할까요?
 
-복음의 앞부분은 기꺼이 용서를 해주라고 하십니다. 그러나 뒷부분에는 임금님의 이야기가 나옵니다. 그 임금님은 자기의 종을 벌하게 됩니다. 왜 그럴까요? 그 종은 ‚용서‘라는 것의 가치를 모르고 그냥 이용해 버렸기 때문입니다. 임금님은 은총을 그에게 주시지 않습니다.
+오늘 복음의 앞부분은 기꺼이 용서를 해주라고 하십니다. 그러나 뒷부분에는 임금님의 이야기가 나옵니다. 그 임금님은 자기의 종을 벌하게 됩니다. 왜 그럴까요? 그 종은 ‚용서‘라는 것의 가치를 모르고 그냥 이용해 버렸기 때문입니다. 임금님은 은총을 그에게 주시지 않습니다.
 
 우리가 누군가를 용서해줬을 때 그가 용서를 ‚이용‘하면 자비가 아니라 ‚정의‘를 실현해야 합니다.
 
