--- a/_posts/2021/2021-3-14-fear.md
+++ b/_posts/2021/2021-3-14-fear.md
@@ -18,7 +18,7 @@ tags: 사순
 찬미 예수님.
 요즈음 사순시기라서 영광송도 하지 않고 할렐루야도 하지 않으며 코로나 시기이기 때문에 성가도 부르지 않습니다. 그러기에 어쩌면 정적인 분위기라고 할 수 있겠습니다. 그러나 주님의 빛을 받아들여야 합니다. 마음이 어떠하셨는지요? 아쉬운 마음이었는지요? 그리스도께서는 우리를 기다리고 계십니다.
 
-성서에서는 빛으로 이스라엘 백성들을 이끌어 내셨습니다. 이 해방은 노력 없이 그냥 받은 것입니다. 이와 마찬가지로 우리도 그리스도께로 이끌어 주십니다. 이제 곧 지나면 부활이고, 코로나도 끝날 것이고 즐거움 가운데 미사도 드릴 수 있게 될 것입니다.
+(오늘 제1독서) 성서에서는 빛으로 이스라엘 백성들을 이끌어 내셨습니다. 이 해방은 노력 없이 그냥 받은 것입니다. 이와 마찬가지로 우리도 그리스도께로 이끌어 주십니다. 이제 곧 지나면 부활이고, 코로나도 끝날 것이고 즐거움 가운데 미사도 드릴 수 있게 될 것입니다.
 
 그런데 모두가 빛을 좋아할까요? 제가 필리핀에서 1년 동안 지냈을 때 아침에 부엌에 가서 불을 켜면 바퀴벌레가 있다가 도망갔습니다. 쥐도 빛을 보면 도망갑니다. 모두가 빛을 좋아하는 것은 아닌 것입니다. 그러나 우리는 무엇을 선택할까요? 힘들더라도 빛을 향해 갈 것인지 무엇을 선택할 것인지 생각해 봐야 하겠습니다.
 
