--- a/_posts/2021/2021-10-10-tree.md
+++ b/_posts/2021/2021-10-10-tree.md
@@ -22,11 +22,11 @@ gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n
 
 사람의 욕망이 그렇습니다. 그러나 사람들 가운데에 모든 것을 주님을 위해 포기하는 분들이 있습니다. 수도자들이 그렇습니다.
 
-프란치스칸들은 종신 선언 전 성대한 저녁식사를 합니다. 그 가운데 변호사들도 참석합니다. 프란치스칸들은 유산 상속을 포기선언하는데 그 포기 선언은 교회법적으로뿐만 아니라 사회법적으로도 효력이 있도록 변호사들이 참석하여 구체적으로 시행됩니다. 그 후에 성대한 저녁식사를 합니다. 프란치스코 회칙 안에는 모든 재산은 교황에게 귀속된다는 내용이 있습니다. 구체적으로 포기하며 사는 사람들인 것입니다.
+프란치스칸들은 <a href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=5116&keyword=%EC%84%9C%EC%9B%90&gubun=03">종신서원</a> 전 성대한 저녁식사를 합니다. 그 가운데 변호사들도 참석합니다. 프란치스칸들은 유산 상속을 포기선언하는데 그 포기 선언은 교회법적으로뿐만 아니라 사회법적으로도 효력이 있도록 변호사들이 참석하여 구체적으로 시행됩니다. 그 후에 성대한 저녁식사를 합니다. 프란치스코 회칙 안에는 모든 재산은 교황에게 귀속된다는 내용이 있습니다. 구체적으로 포기하며 사는 사람들인 것입니다.
 
 정말 이렇게 모든 것을 포기해야 할까요? <a href="https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=149&p=19">신약(루카복음 19장)에 보면 자캐오라는 사람이 나옵니다.</a> 이 사람은 모든 것을 포기하지 않습니다. 단 제안을 합니다. «주님 제가 가진 것의 반을 포기하겠습니다. 그 절반을 가난한 사람에게 주겠습니다.» 라고 말입니다. 이 말을 들은 주님은 아주 흡족해 하십니다. 기꺼이 스스로 포기하였기 때문입니다. 세상을 살아가는 데 어떻게 모든 것을 포기하겠습니까?
 
-주님을 믿는 사람들 가운데 두 집단이 있습니다. 첫쩨로는 예수님을 아주 적극적으로 따르는 집단이 그렇습니다. 모든 것을 버리는 사람들 성직자, 수도자, 그리고 서원을 한 신자들이 속합니다. 두번째로는 일반 신자들입니다. 이 분들은 재산을 가져도 됩니다. 단 일부를 포기합니다. 문제가 되는 것은 두 집단 가운데 어느 한 집단에 속하면서 그 속한 집단에 해당하는 포기를 하지 않는 것입니다. 예를 들어 신부가 자신을 위해 람보르기니를 타고 싶어 하여 욕심을 내는 경우가 있겠죠.
+주님을 믿는 사람들 가운데 두 집단이 있습니다. 첫쩨로는 예수님을 아주 적극적으로 따르는 집단이 그렇습니다. 모든 것을 버리는 사람들 성직자, 수도자, 그리고 <a href="https://maria.catholic.or.kr/dictionary/doctrine/doctrine_view.asp?menu=canon&kid=&seq=6634&level1=4&level2=2&level3=0&level4=5&level5=0&level6=0&level7=0&lang=ko">서원</a>을 한 신자들이 속합니다. 두번째로는 일반 신자들입니다. 이 분들은 재산을 가져도 됩니다. 단 일부를 포기합니다. 문제가 되는 것은 두 집단 가운데 어느 한 집단에 속하면서 그 속한 집단에 해당하는 포기를 하지 않는 것입니다. 예를 들어 신부가 자신을 위해 람보르기니를 타고 싶어 하여 욕심을 내는 경우가 있겠죠.
 
 여러분. 할 수 있는 만큼만 기꺼이 포기를 하십시오. <a href="https://maria.catholic.or.kr/bible/bbs/bbs_view.asp?id=170190&ref=739&menu=4797">자캐오</a>는 스스로 기꺼이 포기를 하였고 이 기꺼이를 예수님은 흡족해 하셨습니다. 복음에서 재산이 많았던 젊은이는 떠나갔습니다. 만일 떠나지 않고 재산의 반은 기꺼이 드리고, 나머지는 자신의 식구들을
 위해 쓰겠다고 하고 좀 멀리서 주님의 사역을 돕겠다고 제안을 하였다면 예수님께서 이 또한 흡족하게 여기지 않으셨을까 생각해봅니다.
@@ -37,3 +37,7 @@ gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n
 
 포기하는 것은 꾸준히 해야 합니다. 이는 우리의 힘으로 하기가 어렵습니다. 주님의
 은총이 필요합니다.
+
+---
+
+<a href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=3853&keyword=&gubun=01">프란치스코회</a>
