--- a/_posts/2021/2021-11-28-3300.md
+++ b/_posts/2021/2021-11-28-3300.md
@@ -16,13 +16,13 @@ tags: 대림
 
 벌써 대림절이 시작되었습니다. 금방 모든 대림초에 불이 붙는 성탄이 다가올 것입니다. 시간은 신비롭습니다. 한편으로는 느리게 가는 듯 하다가 다른 한편으로는 빠르게 갑니다. 시간은 두 가지로 나눠 집니다. Quantity 적인 그냥 지나가는 시간인 크로노스와 Quality 측면에서 밀도 있는 시간을 의미하는 카이로스가 있습니다. 여러분들은 어떤 삶을 사셨나요? 길기만 한 삶을 사셨나요, 아니면 열매 있는 삶을 사셨나요? 우리는 한 해를 보내고 새로운 한 해를 시작하면서 우리의 삶 안에 그리스도의 은총을 통하여 농밀한 삶이 되도록 겸손히 청해야 겠습니다.
 
-오늘 본문에서는 주님이 오시는 때에 볼 수 있는 제일 첫번째 표징이 나옵니다. 그것은 바다와 거센 파도 소리 입니다. 이것은 유대민족 이전에 이미 가나안 땅에 사는 사람들이 갖고 있던 표현이었습니다. 그들에게도 종말에 대한 이야기가 반복되어 전해져 왔던 것이고 뒤에 그 땅에 들어간 유대민족이 그 표현을 받아 쓴 것입니다. 정확히 표현하자면 세상이 뒤집어진다는 것을 뜻합니다. 이것은 유대인들의 믿음뿐 아니라 우리에게도 해당됩니다. 세상이 뒤집어지는 날에 우리는 과연 준비가 되었는지요? 아니면 방황, 만취, 혹은 일상의 근심이 계속되는 생활을 사시는지요?
+오늘 복음에서는 주님이 오시는 때에 볼 수 있는 제일 첫번째 표징이 나옵니다. 그것은 바다와 거센 파도 소리 입니다. 이것은 유대민족 이전에 이미 가나안 땅에 사는 사람들이 갖고 있던 표현이었습니다. 그들에게도 종말에 대한 이야기가 반복되어 전해져 왔던 것이고 뒤에 그 땅에 들어간 유대민족이 그 표현을 받아 쓴 것입니다. 정확히 표현하자면 세상이 뒤집어진다는 것을 뜻합니다. 이것은 유대인들의 믿음뿐 아니라 우리에게도 해당됩니다. 세상이 뒤집어지는 날에 우리는 과연 준비가 되었는지요? 아니면 방황, 만취, 혹은 일상의 근심이 계속되는 생활을 사시는지요?
 
 미사 시작 때에 말씀 드렸듯이 대림은 알파와 오메가, 시작과 끝을 의미합니다. 요즘 여러분들은 종말의 분위기를 느끼지 않으신가요? 특히 요즘 코로나 시대로 인해 그러한 분위기를 많이들 느끼실 것입니다. 코로나로 인해 돌아가시는 나이가 평균 86세라고 합니다. 어르신들은 공포감을 느끼십니다. 우리 사회 안에 존재하는 구체적인 형태가 아닌가 싶습니다.
 
 ‘백신을 맞아야 한다, 아니다.’ 라는 주제로 갈등을 빚고, 병에 걸리면 민폐를 끼치는 것 같아 고개를 숙이는 반면, 다른 사람들은 병에 걸린 사람들을 질타를 합니다. 가정 내에서도 ‘백신을 맞아야 하나, 말아야 하나’ 여부를 놓고 다투기도 합니다. 오늘날 우리는 전쟁 이후 분열을 맞이하고 있습니다. 여러분들 주변에도 그러한 분들이 많으실지 모르겠지만 저의 주변에는 확실히 있습니다.
 
-성당을 운영하는 차원에서 정말 조심할 수 밖에 없습니다. 사회 분위기가 종말이 다가올 때 나오는 현상을 환기시켜 주는 듯 합니다. 어떠한 통계를 보았는데 슬프게도 이전에 낙태 아이의 숫자가 한해에 5000만 명이라고 했다면 최근에는 한 해에 7000만 명이라고 합니다. 너무나도 슬픈 일입니다.
+성당을 운영하는 차원에서 정말 조심할 수 밖에 없습니다. 사회 분위기가 종말이 다가올 때 나오는 현상을 환기시켜 주는 듯 합니다. 어떠한 통계를 보았는데 슬프게도 이전에 낙태 아이의 숫자가 한해에 5000만 명이라고 했다면 <a href="https://www.worldometers.info/abortions/#:~:text=According%20to%20WHO%2C%20every%20year,around%2073%20million%20induced%20abortions.">최근에는 한 해에 7000만 명이라고 합니다.</a> 너무나도 슬픈 일입니다.
 
 우리는 과연 하느님을 대면할 때 과연 무엇으로 정당화시킬 수 있을지요? 그러나 우리는 이런 때일수록 주님의 말씀을 새겨야 겠습니다. (오늘 복음에서는) 이런 때일수록 «허리를 펴고 머리를 들어라.» 라고 하십니다. 갈등과 비극을 직시하고 문제를 인식하는 것이 종말을 맞이하는 우리들의 모습이어야 합니다.
 
