--- a/_posts/2022/2022-2-3-homily.md
+++ b/_posts/2022/2022-2-3-homily.md
@@ -21,5 +21,5 @@ gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n
 회개가 없으면 우리는 엉뚱한 방향으로 갑니다. 
 
 세례의 은총을 잊고 사는 사람들의 회개를 위해 기도합니다. 본인의 회개를 위해 기도하세요.
-그리고 그러한 미사 지향을 저에게 신청해 주시면 좋겠습니다. 
+그리고 그러한 <a href="https://maria.catholic.or.kr/dictionary/bbs/bbs_view.asp?id=173649&ref=185&menu=4798">미사 지향</a>을 저에게 신청해 주시면 좋겠습니다. 
 
