--- a/_posts/2022/2022-04-17-mom.md
+++ b/_posts/2022/2022-04-17-mom.md
@@ -31,10 +31,10 @@ closing: "그 먼 곳에서부터 오신 분은 예수 그리스도 이십니다
 않을 것이고 다시는 죽은 이들 가운데 있지 않을 것입니다.
 
 제가 어느 날 장례식을 치를 가정을 방문하였습니다. 장례식 준비와 관련해서 이런 저런
-이야기를 나누고 있었습니다. 그런데 과부가 된 80 세의 할머니께서 서럽게 울기
+이야기를 나누고 있었습니다. 그런데 과부가 된 80세의 할머니께서 서럽게 울기
 시작하신 것입니다. 사실 그런 경우는 많지 않고 특히 스위스에서는 별로 없습니다.
 그러나 제가 프로 아닙니까. 그래서 제가 위로를 하기 시작했습니다. 예수님은 죽었다가
-부활하셨고 등등 말입니다. 그런데도 그 할머니께서 계속 울다가 제가 2 분 정도
+부활하셨고 등등 말입니다. 그런데도 그 할머니께서 계속 울다가 제가 2분 정도
 이야기하고 나니 울음을 뚝 그치고 «이제 끝이다. 이 사람은 죽었고 그에겐 어둠만이
 있고 이제 끝이다.» 라고 이야기 하셨습니다. 그런데 저는 속으로 당황하였지만 침착히
 진정하시라고 위로를 하였습니다.
@@ -50,7 +50,7 @@ closing: "그 먼 곳에서부터 오신 분은 예수 그리스도 이십니다
 잘 슬퍼한다면 마음이 진정되고 앞으로 나아갈 수 있습니다. 그런데 실망은 참
 아픕니다. 그래서 실망을 야기하는 희망을 갖지 않는 것입니다. 희망이 없으면 마음은
 슬프지만 그래도 실망보다는 더 견디기 쉬우니까요. 그냥 희망 자체를 제거하고 ‘죽은
-남편은 그냥 끝이다. ‘ ‘예수님은 돌아가셨고 부활 따위는 없다.’ 고 치부해 버리는
+남편은 그냥 끝이다.‘ ‘예수님은 돌아가셨고 부활 따위는 없다.’ 고 치부해 버리는
 것입니다. 
 
 이것은 더 큰 실망을 피하기 위한 일종의 방어 기제입니다. 여러분은 실망을
@@ -76,27 +76,23 @@ closing: "그 먼 곳에서부터 오신 분은 예수 그리스도 이십니다
 찾으러 이탈리아를 떠나 그 먼 아르헨티나로 가고 그 곳에서 아픈 엄마를 병수발을 하며
 건강해지게 하여서 다시 아르헨티나에서 이탈리아까지 모셔 옵니다. 
 
-사랑하는 존재가
-있는 지점까지 우리 영혼은 갈 수 있습니다. 사랑하는 존재가 영원에 있다면 우리의
-영혼도 영원에 이를 수 있습니다.
+사랑하는 존재가 있는 지점까지 우리 영혼은 갈 수 있습니다. 
+사랑하는 존재가 영원에 있다면 우리의 영혼도 영원에 이를 수 있습니다.
 
 그런데 우리 주변의 많은 사람들은 자주 아프고
 우울증에 겪습니다. 왜 그럴까요? 사람들이 영원을 잊어 버렸기 때문입니다. 영혼이
 여기에만 머물러 있기 때문입니다. 영혼이 약해진 것입니다. 영혼은 운동해야 합니다.
 영혼은 멀리까지 갔다가 다시 돌아오고 영원까지 갔다가 다시 돌아오는 운동을 해야
-좋아합니다. 우리가 이러한 양극성 안에서 살아갈 때 영혼이 강해지고 사람이 건강해
-집니다.
+좋아합니다. 우리가 이러한 양극성 안에서 살아갈 때 영혼이 강해지고 사람이 건강해집니다.
 
 저는 항상 기쁘고 건강합니다. 물론 알레르기로 조금 고생을 하기는 하지만요.
 왜 그럴까요? 저는 저 먼 곳을 생각하면 힘이 넘치고 살아납니다.
 
-우리의 영혼 자체가
-그렇게 만들어져 있는 것입니다. 우리의 영혼이 영원으로 갔다가 돌아오는 운동을 하면
+우리의 영혼 자체가 그렇게 만들어져 있는 것입니다. 우리의 영혼이 영원으로 갔다가 돌아오는 운동을 하면
 강해지고, 강력한 영혼은 희망을 가질 수 있고 실망을 견뎌낼 수 있습니다.
 
 왜 우리 주변 스위스 친구들은 자주 아프고 우울증에 걸릴까요? 먼 곳, 영원을
-잃어버렸기 때문입니다. 우리 카톨릭 신자들은 그런 유혹에 빠지지 맙시다. 슬퍼하고
-실망하더라도 실망할 준비를 하고 더 큰 희망을 가지고 영혼을 먼 곳으로 갔다가 오도록
-운동을 시킵시다. 그렇게 한다면 여러분은 강한 영혼의 소유자가 될 것입니다. 여러분.
+잃어버렸기 때문입니다. 우리 카톨릭 신자들은 그런 유혹에 빠지지 맙시다. 슬퍼하고 실망하더라도 실망할 준비를 하고 더 큰 희망을 가지고 영혼을 먼 곳으로 갔다가 오도록 운동을 시킵시다. 
+그렇게 한다면 여러분은 강한 영혼의 소유자가 될 것입니다. 여러분.
 그렇게 훈련된 강한 영혼만이 죽은 후에 살아납니다. 다른 영혼들은 소멸될 것입니다.
 강한 영혼만이 견딜 수 있습니다. 우리 강한 모습으로 죽은 후에 만납시다. 아멘.
