--- a/_posts/2022/2022-07-17-martha.md
+++ b/_posts/2022/2022-07-17-martha.md
@@ -17,7 +17,8 @@ closing: "저 담벼락 너머에 기도하시는 분들, 수녀님들 덕분에
 
 사람들이 휴가 간 뒤의 고요함이 좋습니다. 그러나 모두가 쉬기만 해서는 안 되고, 누군가는 일을 해야 합니다. 일은 쉽지 않지만, 누군가는 해야 합니다.
 
-저는 사제이다보니 초대를 많이 받습니다. 초대받아 이야기를 나누게 됩니다. 한국 신부님은 저녁을 두번 드시기도 한답니다. 두부를 좋아하신다고 하면 한 댁에서 두부로 저녁을 드시고, 또 다음 댁에 가서 또 두부를 드시기도 합니다. 한달에 5-8번은 초대를 받아 식사를 하는 것 같습니다.
+저는 사제이다보니 초대를 많이 받습니다. 초대받아 이야기를 나누게 됩니다. 한국에서 신부님들은 저녁을 두번 드시기도 한답니다. 두부를 좋아하신다고 하면 한 댁에서 두부로 저녁을 드시고, 또 다음 댁에 가서 또 두부를 드시기도 합니다. 
+한달에 5-8번은 초대를 받아 식사를 하는 것 같습니다.
 항상 누군가는 부엌에서 일을 하고 있습니다. 아무도 부엌에 없다면 불안해집니다. 오늘 말씀에 나오는 마르타가 없으면 저녁은 배고픈 저녁이 됩니다.
 
 일을 하는 것은 기도를 하는 것만큼 중요합니다.
@@ -48,7 +49,7 @@ closing: "저 담벼락 너머에 기도하시는 분들, 수녀님들 덕분에
 하지만 마르타가 예수님께 마리아에게 무슨 말씀을 일러주십시오 하고 말씀드리는 것은 하느님에게 명령을 하는 것과 같습니다.
 인간은 하느님과 수평적 관계가 아니고, 하느님 말씀을 듣는 존재입니다. 마르타는 예수님을 이용하려합니다. 간교합니다. 거룩한 것을 이용하려하는 이러한 실수는 하지 맙시다.
 
-우리가 할 수 있는 것은 하느님과 계약 맺는 것입니다. 이것을 서원이라고 합니다.
+우리가 할 수 있는 것은 하느님과 계약 맺는 것입니다. 이것을 <a href="https://maria.catholic.or.kr/dictionary/doctrine/doctrine_view.asp?menu=canon&kid=&seq=6634&level1=4&level2=2&level3=0&level4=5&level5=0&level6=0&level7=0&lang=ko">서원</a>이라고 합니다.
 하느님의 도움을 받아 뭐가 잘 되면 댓가를 치르기로 약속을 할 수 있습니다.
 우리는 하느님께 명령을 내릴 수 없지만, 계약을 맺을 수 있으니, 이를 잘 이용하세요.
 서원을 세웠으면 지켜야합니다.
