--- a/_posts/2022/2022-2-27-beam.md
+++ b/_posts/2022/2022-2-27-beam.md
@@ -43,7 +43,7 @@ image: Domenico_Fetti_-_The_Parable_of_the_Mote_and_the_Beam.jpg
 모르게 됩니다.
 
 한편 우리는 한국 문화 속에서 불교 문화가 있습니다. 인간은 고통에
-이르고 고행을 하다 보면 도에 이른다는 ‘고집 멸도’를 이야기 합니다. 여기에서 ‘멸’은
+이르고 고행을 하다 보면 도에 이른다는 ‘<a href="https://ko.wikipedia.org/wiki/%EC%82%AC%EC%84%B1%EC%A0%9C">고집멸도(苦集滅道)</a>’를 이야기 합니다. 여기에서 ‘멸(滅)’은
 자기를 소멸시켜 버리는 것을 의미합니다. 아예 자기를 없애 버리는 것이죠. 스님들은
 결혼하지 않습니다. 왜냐하면 결혼하여 자식을 낳으면 고생을 하기 때문에 자기 선에서
 끊어버리는 의미로 혼인을 하지 않습니다.
