--- a/_posts/2022/2022-5-22-oma.md
+++ b/_posts/2022/2022-5-22-oma.md
@@ -15,7 +15,7 @@ gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n
 
 평화를 빕니다. 오늘 제 1 독서를 들으시고 여러분들이 좋아하셨을 듯 합니다. 바오로께서는 구원받기 위한 조건들을 몇 가지 이야기 하셨습니다. 바로 우상에게 바쳤던 제물과 목 졸라 죽인 짐승의 고기를 먹지 않고, 간음을 하지 않으면, 천국에 갈 수 있다고 하였습니다. 심지어 나중에는 우상에게 바쳐졌던 고기도 먹어도 된다고 이야기 합니다.
 
-그런데 구원을 받기 위해서는 이런 주어진 것 이상을 할 마음이 있어야 합니다. 사랑하는 사람이 꽃 1 항아리만 있으면 된다고 하더라도 그 사랑하는 사람에게 2 항아리를 갖다 주는 마음이 있어야 하는 것입니다. 그래야 요한 묵시록이 이야기하는 하느님의 성전에 이를 수 있습니다.
+그런데 구원을 받기 위해서는 이런 주어진 것 이상을 할 마음이 있어야 합니다. 사랑하는 사람이 꽃 한 항아리만 있으면 된다고 하더라도 그 사랑하는 사람에게 두 항아리를 갖다 주는 마음이 있어야 하는 것입니다. 그래야 (제 2 독서) 요한 묵시록이 이야기하는 하느님의 성전에 이를 수 있습니다.
 
 여러분들은 주어진 것 이상을 하려고 하나요, 아니면 해야할 것만 하려고 하나요?
 대부분 해야 할 것만 하게 됩니다.
@@ -27,7 +27,7 @@ gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n
 
 제가 아는 또 한 친구는 종소리만을 듣고 유럽의 어느 대성당 종소리인지 구분을 합니다. 그 친구는 대단한 청력을 갖고 있을 뿐만 아니라 관심이 있는 것이죠. 두 번째 작은 종소리가 다르지 않냐고 이야기를 하기도 합니다. 이 열정. 열정이 선을 넘도록 우리를 이끌어 줍니다.
 
-우리는 성령에 대해 선포합니다. 성령이 비로소 우리에게 그 길을 열어줍니다. 저는 살아오면서 이런 때가 올 지 상상도 못했는데 40대 중후반이 되니 조금 지쳤습니다. 헐떡 고개를 넘고 있는 것이죠. 여러 가지 일도 많이 있습니다. 그래서 저는 결심했습니다. ‘성령 강림 대축일을 앞두고 <a href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=380&keyword=9%EC%9D%BC+%EA%B8%B0%EB%8F%84&gubun=01">9일 기도</a>를 열심히 바쳐야겠다. 성령을 구해서 열정을 받아야 겠다.’고 작심하였습니다.
+우리는 성령에 대해 선포합니다. 성령이 비로소 우리에게 그 길을 열어줍니다. 저는 살아오면서 이런 때가 올 지 상상도 못했는데 40대 중후반이 되니 조금 지쳤습니다. 헐떡 고개를 넘고 있는 것이죠. 여러 가지 일도 많이 있습니다. 그래서 저는 결심했습니다. ‘성령 강림 대축일을 앞두고 <a href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=380&keyword=9%EC%9D%BC+%EA%B8%B0%EB%8F%84&gubun=01">9일 기도</a>를 열심히 바쳐야겠다. 성령을 구해서 열정을 받아야겠다.’고 작심하였습니다.
 
 성령을 받으십시오. 그렇게 된다면 복음에서 주님말씀을 비로소 깨달을 수 있습니다.
 
