--- a/_posts/2022/2022-6-26-apero.md
+++ b/_posts/2022/2022-6-26-apero.md
@@ -38,13 +38,11 @@ image: 오병이어.jpg
 이것도 아니고 저것도 아닌 애매한 삶이 있지만 예수님은 확실한 목적을
 가지고 집중해서 나아가십니다.
 
-저는 이것도 아니고 저것도 아닌 게
-힘듭니다.
+저는 이것도 아니고 저것도 아닌 게 힘듭니다.
 
 여러분들 결혼 전에 오래 연예를 하셨을 것입니다. 보통 결혼하자고 남자가 청혼을
 하는데, 여자 입장에서 때가 되었는데 남자가 결혼 이야기를 하지 않으면 답답할
-것입니다. 어쩌면 이것도 아니고 저것도
-아닌 상태로 살다가 가는 중에 삶이 끝날 수도 있습니다.
+것입니다. 어쩌면 이것도 아니고 저것도 아닌 상태로 살다가 가는 중에 삶이 끝날 수도 있습니다.
 
 결정을 내리는 과정, 옳은 결정을 내리기 위한 식별의 과정은 힘듭니다. 신학교에 가면
 그 50 여명의 어린 학생들이 있습니다. 그들은 열정이 가득하고 사제가 되려는 의욕이
