--- a/_posts/2022/2022-09-25-klaus.md
+++ b/_posts/2022/2022-09-25-klaus.md
@@ -29,7 +29,7 @@ image: Seats_inside_a_flight.jpg
 원하면 다 가질 수 있다 혹은 다 될 수 있다 하는 이데올로기, 네가 원하면 나을 수
 있다고, 모든 것을 극복할 수 있다고 합니다. 이러한 거짓된 세상을 바라보면 힘듭니다.
 
-제가 어느 날 유튜브를 보는데 짧은 클립이 나왔습니다. 그 클립 안에서는 비행기 안에
+<a href="https://www.facebook.com/watch/?v=664602728084589">제가 어느 날 유튜브를 보는데 짧은 클립이 나왔습니다.</a> 그 클립 안에서는 비행기 안에
 창가에 앉은 남자가 창밖을 바라보며 즐겁게 여행을 하고 있었습니다. 그 남자 옆에는
 한 어머니와 딸이 앉아 있습니다. 그런데 딸이 엄마에게 «엄마, 나도 창가에 앉고 싶어.»
 이야기를 하며 떼를 씁니다. 엄마가 옆에 앉은 남자에게 공손히 부탁을 합니다. 자리를
