--- a/_posts/2022/2022-12-11-homily.md
+++ b/_posts/2022/2022-12-11-homily.md
@@ -5,14 +5,10 @@ title: "대림 제 3주일"
 gospel: 마태오 11,2-11
 gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=147&p=11
 image: Battesimo_di_Cristo.jpg
-
-
-
 first_reading: 이사야서 35,1-6ㄴ.10
 first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=129&p=35
 second_reading: 야고보서 5,7-10
 second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=166&p=5
-
 tags: 대림
 
 ---
@@ -74,7 +70,7 @@ tags: 대림
 혹시 우리가 사는 이 시대도 광기에 사로잡혀 있는 게 아닐까요?
 인간이 하느님이 되려고 하기 때문입니다.
 
-이런 관점에서 세례자 요한을 볼 수도 있습니다.
+이런 관점에서 오늘 복음에 나오는 세례자 요한을 볼 수도 있습니다.
 그의 생존 당시 수많은 이들이 그를 추종했고
 심지어는 메시아라고 믿었습니다.
 일종의 세력이 형성되었던 것입니다.
