--- a/_posts/2022/2022-11-27-otto.md
+++ b/_posts/2022/2022-11-27-otto.md
@@ -36,12 +36,12 @@ tags: 대림
 
 우리가 이런 벌들과 비슷하지 않나 생각을 해봅니다. 벌들이 엄청 바쁘게 일하고 날아다니듯이
 복음에 나왔듯이 우리 인간도 먹고, 마시고, 결혼하고, 음탕하게 살다가 결국 죽습니다. 왜
-그럴까요? 벌집의 온도를 유지시켜야 하듯이 우리가 세워놓은 시스템을 유지 시켜야 하기
+그럴까요? 벌집의 온도를 유지시켜야 하듯이 우리가 세워놓은 시스템을 유지시켜야 하기
 때문입니다. 주님이 말씀하십니다. "겨울이 온다." 라고 말입니다. 우리도 이 사실을 알고
 있으나 잊기 위해 노력하기도 합니다. 그러나 끝이 있습니다. 온도가 내려가서 벌집 안에의
 생명이 더 이상 유지되지 않아 벌들이 죽듯이 우리도 언젠가 사라져 버립니다.
 
-제가 스위스에 와서 처음 부임한 곳이 Dietikon 입니다. 그 곳에는 다른 곳에서 보기 드문 큰
+제가 스위스에 와서 처음 부임한 곳이 <a href="https://www.pfarrei-schlieren.ch/">Dietikon</a>입니다. 그 곳에는 다른 곳에서 보기 드문 큰
 사제관이 있는데 내부도 시설이 옛모습 그대로 보존되어 있습니다. 그 사제관에서 특히 제가
 놀란 것은 지하실에 벙커가 있다는 것이었습니다. 그 벙커를 보고 놀란 제 모습을 보신 주임
 신부님은 스위스에는 집집마다 벙커가 있다고 하셨습니다. 왜 그럴까요? 살아남으려고 만든
@@ -49,7 +49,7 @@ tags: 대림
 
 핵전쟁이 나도 벙커 안에 들어가면 살아남을 수 있다고 스위스 사람들은 생각합니다.
 그러나 사실 핵전쟁이 나면 그 벙커는 무덤이 됩니다. 안간힘을 써서 벙커를 지으며 마음의
-안정을 도모할 뿐입니다. 그러나 끝은 옵니다. 사실 우리는 인간이 구축해 놓은 시스템안에서
+안정을 도모할 뿐입니다. 그러나 끝은 옵니다. 사실 우리는 인간이 구축해 놓은 시스템 안에서
 살고 있고 특히나 스위스는 그 체계가 안정적으로 잘 유지 되고 있습니다.
 
 여러분 Rudolf Otto 의 "Das Heilige (1917)"라는 책을 아시나요? 이 책이 다루는 주제가
@@ -66,6 +66,7 @@ Mysterium Tremendum (거룩한 전율) 입니다. 이것은 인간 근본 감정
 산다면 살아남으실 것입니다. 여러분들 살아남아 멋지게 만납시다. 아멘.
 
 <hr>
+
 언급하신 도서 Rudolf Otto 의 Das Heilige (1917): <a href="https://www.aladin.co.kr/shop/wproduct.aspx?ItemId=77542">한글(구매)</a>
 <a href="https://upload.wikimedia.org/wikipedia/commons/4/4b/Rudolf_Otto_%28translated_by_Harvey%29_-_The_Idea_of_the_Holy_-_An_Inquiry_into_the_Non-Rational_Factor_in_the_Idea_of_the_Divine_and_Its_Relation_to_the_Rational.pdf">영어(PDF 다운로드)</a>
 <a href="https://archive.org/details/RudolfOtto_dasHeilige">독일어(무료로 보기 가능)</a>
