성탄절 낮미사가 되도록 매일미사 링크를 수동으로 넣음

--- a/_posts/2022/2022-12-25-homily.md
+++ b/_posts/2022/2022-12-25-homily.md
@@ -11,7 +11,8 @@ second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.a
 gospel: 요한 1,1-18 
 gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=1
 tags: 성탄
-
+daily_read: https://maria.catholic.or.kr/mi_pr/missa/ordinary.asp?day=20221225&missaid=13790&missatype=DA#missa_02
+daily_listen: https://maria.catholic.or.kr/mi_pr/missa/missa.asp?menu=missa&missaid=13790&gomonth=2022-12-25&missatype=DA
 ---
 
 성탄 카드가 많이 도착하는 시기입니다 어제도 우편물이 몇 개 와 있더군요.
