--- a/_posts/2023/2023-4-9-homily.md
+++ b/_posts/2023/2023-4-9-homily.md
@@ -33,7 +33,7 @@ gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n
 
 간단하게 이 역사를 알아보겠습니다. Urbi는 도시, Orbi는 지구, 전체, 세상을 의미합니다.  
 
-<a href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=5454&keyword=%EB%9D%BC%ED%85%8C%EB%9D%BC%EB%85%B8&gubun=02">라테라노 대성당</a>이 4세기에 로마 한구석에 세워졌는데, 왜 구석에 세워졌을까요? 로마 중심지에 다른 이교도의 성전이 너무 많아서 그렇습니다. 이 성당에 이 문구(Urbi et Orbi)가 씌여 있었습니다. 세상 전체를 바라보는 관점입니다. 
+<a href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=5454&keyword=%EB%9D%BC%ED%85%8C%EB%9D%BC%EB%85%B8&gubun=02">라테라노 대성당</a>이 4세기에 로마 한구석에 세워졌는데, 왜 구석에 세워졌을까요? 로마 중심지에 다른 이교도의 성전이 너무 많아서 그렇습니다. 이 성당에 이 문구(Urbis et Orbis)가 씌여 있었습니다. 세상 전체를 바라보는 관점입니다. 
 그리고 13세기부터 이 문구를 가져와서 교황님이 특별한 기도를 해주십니다.
 
 오늘부터 <a href="https://pds.catholic.or.kr/pdsm/bbs_view.asp?id=25307&mwtype=S&menu=4826">부활 8부 축제</a>가 시작됩니다. 기뻐하고 즐깁시다.
