shorten href for bible reading

--- a/_posts/2020/2020-9-13-zabelka.md
+++ b/_posts/2020/2020-9-13-zabelka.md
@@ -5,11 +5,11 @@ title: 연중 제 24주일
 image: zabelka.jpeg
 
 first_reading: 집회서 27,30―28,7
-first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=128&p=27
+first_reading_link: m=1&n=128&p=27
 second_reading: 로마서 14,7-9
-second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=14
+second_reading_link: m=2&n=152&p=14
 gospel: 마태 18,21-35
-gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=147&p=18
+gospel_link: m=2&n=147&p=18
 
 ---
 
