--- a/_posts/2022/2022-11-27-otto.md
+++ b/_posts/2022/2022-11-27-otto.md
@@ -2,11 +2,11 @@
 layout: post
 title: 대림 첫 주일
 first_reading: 이사야서 2,1-5
-first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=129&p=2
+first_reading_link: m=1&n=129&p=2
 second_reading: 로마서 13,11-14 ᄀ
-second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=13
+second_reading_link: m=2&n=152&p=13
 gospel: 마태오 복음서 24,37-44
-gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=147&p=24
+gospel_link: m=2&n=147&p=24
 image: 루돌프옷토.jpeg
 tags: 대림
 
@@ -26,7 +26,7 @@ tags: 대림
 그리고는 소방서에 연락을 했습니다. 전화로 다급한 상황임을 알렸는데 소방관이 듣고 있다가
 이렇게 말했습니다. "선생님, 일단 침착하십시오. 겨울이 옵니다." "Der Winter kommt."
 말입니다. 그 말을 듣고 정신이 확 들었습니다. 그리고 스위스는 10월에 벌써 겨울이
-시작된다고 하였습니다. 그래서 '두 달만 기다려보자.' 하며 기다렸죠. 
+시작된다고 하였습니다. 그래서 '두 달만 기다려보자.' 하며 기다렸죠.
 
 이윽고 겨울이 오자
 그렇게 쌩쌩하던 벌들이 죽고 사라져 버려, 벌집만 남게 되었습니다. 이 벌들에 대해서 그 간에
@@ -45,7 +45,7 @@ tags: 대림
 사제관이 있는데 내부도 시설이 옛모습 그대로 보존되어 있습니다. 그 사제관에서 특히 제가
 놀란 것은 지하실에 벙커가 있다는 것이었습니다. 그 벙커를 보고 놀란 제 모습을 보신 주임
 신부님은 스위스에는 집집마다 벙커가 있다고 하셨습니다. 왜 그럴까요? 살아남으려고 만든
-것입니다. 
+것입니다.
 
 핵전쟁이 나도 벙커 안에 들어가면 살아남을 수 있다고 스위스 사람들은 생각합니다.
 그러나 사실 핵전쟁이 나면 그 벙커는 무덤이 됩니다. 안간힘을 써서 벙커를 지으며 마음의
