--- a/_posts/2022/2022-6-26-apero.md
+++ b/_posts/2022/2022-6-26-apero.md
@@ -2,22 +2,22 @@
 layout: post
 title: ""
 first_reading: 열왕기 상 19,16 ᄂ.19-21
-first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=111&p=19
+first_reading_link: m=1&n=111&p=19
 second_reading: 갈라티아서 5,1.13-18
-second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=155&p=5
+second_reading_link: m=2&n=155&p=5
 gospel: 루카복음 9,51-62
-gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=149&p=9
+gospel_link: m=2&n=149&p=9
 image: 오병이어.jpg
 
 ---
 
-평안을 빕니다. 오늘 복음을 보게 되면 제자들이 화가 나 있습니다. 
+평안을 빕니다. 오늘 복음을 보게 되면 제자들이 화가 나 있습니다.
 
 하늘에서 불을 내려
 예수님과 제자들이 지나가지 못하도록 막은 사마리아인들의 마을을 불사르게
 허락해달라고 합니다. 왜 사마리아인들이 예수님과 제자들을 받아들이지 않았을까요?
 사마리아인들의 입장에서 볼 때 예수님과 제자들이 이방인들이었기 때문에
-사마리아인들의 마음이 닫혀 있었던 것입니다. 
+사마리아인들의 마음이 닫혀 있었던 것입니다.
 
 그러나 예수님은 가는 길이 바쁘셨기
 때문에 서둘러 예루살렘으로 가십니다. 왜 예수님은 바쁘게 가셨을까요? 복음 서문에
@@ -29,11 +29,11 @@ image: 오병이어.jpg
 오라고 합니다. 하지만 예수님은 자신을 따르려고 하는 사람들에게 가족에게
 작별인사를 하는 것을 허락하지 않으십니다. ‚너는 나를 따라라.‘ 하시며 ‚쟁기에 손을
 얹고 뒤돌아 보는 자는 하느님 나라에 합당하지 않다.‘고 하십니다. 그리고 본인 자신도
-그렇게 나아가십니다. 
+그렇게 나아가십니다.
 
 이런 삶, 목적을 위해 투신을 하며 진리를 위해 모든 것을
 희생하는 예수님의 자세는 저에게 매력적인 모습으로 비춰지고, 배워야 하는 모습이라
-생각이 듭니다. 
+생각이 듭니다.
 
 이것도 아니고 저것도 아닌 애매한 삶이 있지만 예수님은 확실한 목적을
 가지고 집중해서 나아가십니다.
