--- a/_posts/2023/2023-3-12-homily.md
+++ b/_posts/2023/2023-3-12-homily.md
@@ -5,11 +5,11 @@ layout: post
 image: water.jpg
 
 first_reading: 탈출기 17,3-7
-first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=102&p=17
+first_reading_link: m=1&n=102&p=17
 second_reading: 로마서 5,1-2.5-8
-second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=5
+second_reading_link: m=2&n=152&p=5
 gospel: 요한 4,5-42
-gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=4
+gospel_link: m=2&n=150&p=4
 
 tags: 사순
 
