--- a/_posts/2023/2023-4-23-homily.md
+++ b/_posts/2023/2023-4-23-homily.md
@@ -4,11 +4,11 @@ title:  부활 제3주일
 layout: post 
 image:  2023-04-23.jpeg
 first_reading:  사도행전 2,14.22ㄴ-33
-first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=151&p=2
+first_reading_link: m=2&n=151&p=2
 second_reading:  베드로 1서 1,17-21
-second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=167&p=1
+second_reading_link: m=2&n=167&p=1
 gospel:  요한 21, 1-14
-gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=21
+gospel_link: m=2&n=150&p=21
 
 ---
 
@@ -28,4 +28,4 @@ gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n
 
 아가페 전 3분 교리 >
 
-오늘은 상식을 하나 알려드리겠습니다. 성품성사를 받은 사제는 사제로서 일을 하지 않고 사회적 결혼을 해도 계속해서 사제일까요? 네. 사제라는 신분은 유지됩니다. 그러면 신앙생활을 하는 것이 가능할까요? (미사 집전은 안됩니다.) 네. 특별한 조건 하에서 가능합니다. 실제로 세례받은 모든 사람은 결혼할 수 있는 자격이 있습니다. 그런데 성직자가 되는 동시에 주교님께서 결혼할 권리를 박탈하십니다. 그러나 사제가 결혼을 한 후에 신앙생활을 할 수 있도록 주교님께 간청을 하고 주교님께서 허락을 하시면 신앙생활을 할 수 있습니다. 
+오늘은 상식을 하나 알려드리겠습니다. 성품성사를 받은 사제는 사제로서 일을 하지 않고 사회적 결혼을 해도 계속해서 사제일까요? 네. 사제라는 신분은 유지됩니다. 그러면 신앙생활을 하는 것이 가능할까요? (미사 집전은 안됩니다.) 네. 특별한 조건 하에서 가능합니다. 실제로 세례받은 모든 사람은 결혼할 수 있는 자격이 있습니다. 그런데 성직자가 되는 동시에 주교님께서 결혼할 권리를 박탈하십니다. 그러나 사제가 결혼을 한 후에 신앙생활을 할 수 있도록 주교님께 간청을 하고 주교님께서 허락을 하시면 신앙생활을 할 수 있습니다.
