--- a/future-dates/2023-7-16-homily.md
+++ b/future-dates/2023-7-16-homily.md
@@ -4,11 +4,11 @@ title: 연중 제15주일(농민 주일)
 layout: post 
 image:  
 first_reading:  이사야서 55,10-11
-first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=129&p=55
+first_reading_link: m=1&n=129&p=55
 second_reading:  로마서 8,18-23
-second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=8
+second_reading_link: m=2&n=152&p=8
 gospel:  마태 13,1-23
-gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=147&p=13
+gospel_link: m=2&n=147&p=13
 
 ---
 
