--- a/_posts/2020/2020-10-11-marry.md
+++ b/_posts/2020/2020-10-11-marry.md
@@ -5,11 +5,11 @@ title: 연중 28주일
 image: cana.jpeg
 
 first_reading: 이사야서 25,6-10ㄱ
-first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=129&p=25
+first_reading_link: m=1&n=129&p=25
 second_reading: 필리피서 4,12-14.19-20
-second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=157&p=4
+second_reading_link: m=2&n=157&p=4
 gospel: 마태 22,1-14
-gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=147&p=22
+gospel_link: m=2&n=147&p=22
 
 ---
  
