--- a/_posts/2021/2021-11-14-sos.md
+++ b/_posts/2021/2021-11-14-sos.md
@@ -5,11 +5,11 @@ title: 연중 제33주일(세계 가난한 이의 날)
 image: sos.jpg
 
 first_reading: 다니엘 예언서12,1-3
-first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
+first_reading_link: m=1&n=133&p=37
 second_reading: 히브리서10,11-14.18 
-second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=165&p=10
+second_reading_link: m=2&n=165&p=10
 gospel: 마르코 13,24-32
-gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=148&p=13
+gospel_link: m=2&n=148&p=13
 
 
 ---
