--- a/_posts/2021/2021-5-23-mary.md
+++ b/_posts/2021/2021-5-23-mary.md
@@ -5,11 +5,11 @@ title: 성령강림대축일
 image: the-annunciation-on-the-left-the-archangel-gabriel-approaches-the-praying-virgin-87f3a2-1024.jpg
 
 first_reading: 사도행전 2,1-11
-first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=151&p=2
+first_reading_link: m=2&n=151&p=2
 second_reading: 코린토 1서 12,3ㄷ-7.12-13
-second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=153&p=12
+second_reading_link: m=2&n=153&p=12
 gospel: 요한 20,19-23
-gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=20
+gospel_link: m=2&n=150&p=20
 
 
 ---
