--- a/_posts/2021/2021-5-9-cpr.md
+++ b/_posts/2021/2021-5-9-cpr.md
@@ -5,11 +5,11 @@ title: 부활 제6주일
 image: cpr.jpeg
 
 first_reading: 사도행전 10,25-26.34-35.44-48
-first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=151&p=10
+first_reading_link: m=2&n=151&p=10
 second_reading: 요한 1서4,7-10
-second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=169&p=4
+second_reading_link: m=2&n=169&p=4
 gospel: 요한 15,9-17
-gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=15
+gospel_link: m=2&n=150&p=15
 
 
 --- 
