--- a/_posts/2021/2021-7-25-war.md
+++ b/_posts/2021/2021-7-25-war.md
@@ -5,11 +5,11 @@ title: 연중 제17주일
 image: war.jpeg
 
 first_reading: 열왕기 하권4,42-44
-first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=112&p=4
+first_reading_link: m=1&n=112&p=4
 second_reading: 에페소서 4,1-6
-second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=156&p=4
+second_reading_link: m=2&n=156&p=4
 gospel: 요한 6,1-15
-gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=6
+gospel_link: m=2&n=150&p=6
 
 
 --- 
