--- a/_posts/2022/2022-04-17-mom.md
+++ b/_posts/2022/2022-04-17-mom.md
@@ -2,11 +2,11 @@
 layout: post
 title: 부활주일
 first_reading: 이사야서 11,1-10
-first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=129&p=11
+first_reading_link: m=1&n=129&p=11
 second_reading: 로마서15,4-9
-second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=15
+second_reading_link: m=2&n=152&p=15
 gospel: 마태오 3,1-12
-gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=147&p=3
+gospel_link: m=2&n=147&p=3
 image: 엄마찾아삼만리.png
 
 closing: "그 먼 곳에서부터 오신 분은 예수 그리스도 이십니다. 우리가 모시는 성체를 통해
@@ -42,7 +42,7 @@ closing: "그 먼 곳에서부터 오신 분은 예수 그리스도 이십니다
 오늘 복음에서 우리는 비슷한 목소리를 들을 수 있습니다. 여자들이 무덤에 가서
 예수님이 부활하신 것을 목격하고 최소 5명의 여성들이 그 소식을 전달하지만
 제자들에게는 그것을 헛소리로 들렸고 사도들은 믿지 않았습니다. 왜 그럴까요? 이
-할머니 과부와 이 제자들은 왜 부활의 소식을 믿지 않았을까요? 왜 이럴까요? 
+할머니 과부와 이 제자들은 왜 부활의 소식을 믿지 않았을까요? 왜 이럴까요?
 
 다시는
 실망하고 싶지 않아서입니다. 혹시 믿었다가 다시 실망하면 너무 아프니 차라리 죽으면
@@ -51,7 +51,7 @@ closing: "그 먼 곳에서부터 오신 분은 예수 그리스도 이십니다
 아픕니다. 그래서 실망을 야기하는 희망을 갖지 않는 것입니다. 희망이 없으면 마음은
 슬프지만 그래도 실망보다는 더 견디기 쉬우니까요. 그냥 희망 자체를 제거하고 ‘죽은
 남편은 그냥 끝이다.‘ ‘예수님은 돌아가셨고 부활 따위는 없다.’ 고 치부해 버리는
-것입니다. 
+것입니다.
 
 이것은 더 큰 실망을 피하기 위한 일종의 방어 기제입니다. 여러분은 실망을
 할 용기가 있는지요? 다시 한번 희망을 가지실 의지가 있으신가요? 아니면 아무 것도
@@ -74,9 +74,9 @@ closing: "그 먼 곳에서부터 오신 분은 예수 그리스도 이십니다
 사랑하는 존재가 있으면 힘든 것도 모른 채 힘껏 죽을 힘을 다해 뛰어갈 수 있습니다.
 엄마 찾아 삼만리 아시죠? 삼만리는 14,000 km 입니다. 마르코가 사랑하는 엄마를
 찾으러 이탈리아를 떠나 그 먼 아르헨티나로 가고 그 곳에서 아픈 엄마를 병수발을 하며
-건강해지게 하여서 다시 아르헨티나에서 이탈리아까지 모셔 옵니다. 
+건강해지게 하여서 다시 아르헨티나에서 이탈리아까지 모셔 옵니다.
 
-사랑하는 존재가 있는 지점까지 우리 영혼은 갈 수 있습니다. 
+사랑하는 존재가 있는 지점까지 우리 영혼은 갈 수 있습니다.
 사랑하는 존재가 영원에 있다면 우리의 영혼도 영원에 이를 수 있습니다.
 
 그런데 우리 주변의 많은 사람들은 자주 아프고
@@ -92,7 +92,7 @@ closing: "그 먼 곳에서부터 오신 분은 예수 그리스도 이십니다
 강해지고, 강력한 영혼은 희망을 가질 수 있고 실망을 견뎌낼 수 있습니다.
 
 왜 우리 주변 스위스 친구들은 자주 아프고 우울증에 걸릴까요? 먼 곳, 영원을
-잃어버렸기 때문입니다. 우리 카톨릭 신자들은 그런 유혹에 빠지지 맙시다. 슬퍼하고 실망하더라도 실망할 준비를 하고 더 큰 희망을 가지고 영혼을 먼 곳으로 갔다가 오도록 운동을 시킵시다. 
+잃어버렸기 때문입니다. 우리 카톨릭 신자들은 그런 유혹에 빠지지 맙시다. 슬퍼하고 실망하더라도 실망할 준비를 하고 더 큰 희망을 가지고 영혼을 먼 곳으로 갔다가 오도록 운동을 시킵시다.
 그렇게 한다면 여러분은 강한 영혼의 소유자가 될 것입니다. 여러분.
 그렇게 훈련된 강한 영혼만이 죽은 후에 살아납니다. 다른 영혼들은 소멸될 것입니다.
 강한 영혼만이 견딜 수 있습니다. 우리 강한 모습으로 죽은 후에 만납시다. 아멘.
