--- a/_posts/2022/2022-09-25-klaus.md
+++ b/_posts/2022/2022-09-25-klaus.md
@@ -2,11 +2,11 @@
 layout: post
 title: ""
 first_reading: 로마 14, 17-19
-first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=14
+first_reading_link: m=2&n=152&p=14
 second_reading: 티모테오 1서 6,11ㄱㄷ-16
-second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=161&p=6
+second_reading_link: m=2&n=161&p=6
 gospel: 마태 19, 27-29
-gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=147&p=19
+gospel_link: m=2&n=147&p=19
 image: Seats_inside_a_flight.jpg
 
 ---
