--- a/_posts/2022/2022-12-11-homily.md
+++ b/_posts/2022/2022-12-11-homily.md
@@ -3,12 +3,12 @@
 layout: post
 title: "대림 제 3주일"
 gospel: 마태오 11,2-11
-gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=147&p=11
+gospel_link: m=2&n=147&p=11
 image: Battesimo_di_Cristo.jpg
 first_reading: 이사야서 35,1-6ㄴ.10
-first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=129&p=35
+first_reading_link: m=1&n=129&p=35
 second_reading: 야고보서 5,7-10
-second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=166&p=5
+second_reading_link: m=2&n=166&p=5
 tags: 대림
 
 ---
