--- a/_posts/2022/2022-12-25-homily.md
+++ b/_posts/2022/2022-12-25-homily.md
@@ -5,11 +5,11 @@ title: 주님 성탄 대축일
 image: pasteur.jpg
 
 first_reading: 이사야서 52,7-10
-first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=129&p=52
+first_reading_link: m=1&n=129&p=52
 second_reading: 히브리서 1,1-6
-second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=165&p=1
+second_reading_link: m=2&n=165&p=1
 gospel: 요한 1,1-18 
-gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=1
+gospel_link: m=2&n=150&p=1
 tags: 성탄
 daily_read: https://maria.catholic.or.kr/mi_pr/missa/ordinary.asp?day=20221225&missaid=13790&missatype=DA#missa_02
 daily_listen: https://maria.catholic.or.kr/mi_pr/missa/missa.asp?menu=missa&missaid=13790&gomonth=2022-12-25&missatype=DA
