--- a/_posts/2022/2022-5-22-oma.md
+++ b/_posts/2022/2022-5-22-oma.md
@@ -5,11 +5,11 @@ title: 부활 제 6주일
 image: anointing.jpg
 
 first_reading: 사도행전 15, 1-2.22-29
-first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=151&p=1
+first_reading_link: m=2&n=151&p=1
 second_reading: 요한 묵시록 21,10-14,22-23
-second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=173&p=21
+second_reading_link: m=2&n=173&p=21
 gospel: 요한복음서 14,23-29
-gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=14
+gospel_link: m=2&n=150&p=14
 
 ---
 
