--- a/_posts/2022/2022-6-12-bahn.md
+++ b/_posts/2022/2022-6-12-bahn.md
@@ -5,11 +5,11 @@ title: 지극히 거룩하신 삼위일체 대축일
 image: road.jpeg
 
 first_reading: 잠언 8,22-31
-first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
+first_reading_link: m=1&n=133&p=37
 second_reading: 로마서 5,1-5
-second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=5
+second_reading_link: m=2&n=152&p=5
 gospel: 요한 16,12-15
-gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=16
+gospel_link: m=2&n=150&p=16
 ---
 
 평화를 빕니다.
