--- a/_posts/2023/2023-3-19-blind.md
+++ b/_posts/2023/2023-3-19-blind.md
@@ -6,11 +6,11 @@ bonstetten: true
 image: blind.jpg
 
 first_reading:  사무엘기 상권 16,1ㄱㄹㅁㅂ.6-7.10-13ㄴ
-first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=109&p=16
+first_reading_link: m=1&n=109&p=16
 second_reading: 에페소서 5,8-14 
-second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=156&p=5
+second_reading_link: m=2&n=156&p=5
 gospel: 요한 9,1-41
-gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=9
+gospel_link: m=2&n=150&p=9
 tags: 사순
 
 ---
