--- a/future-dates/2023-10-1-homily.md
+++ b/future-dates/2023-10-1-homily.md
@@ -4,13 +4,13 @@ title:
 layout: post 
 image:  
 first_reading:  
-first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
+first_reading_link: m=1&n=133&p=37
 second_reading:  
-second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=8
+second_reading_link: m=2&n=152&p=8
 gospel:  
-gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=11
+gospel_link: m=2&n=150&p=11
 
 ---
 
-https://maria.catholic.or.kr/mi_pr/missa/ordinary.asp?day=20210403&missaid=12579#missa_02
+<https://maria.catholic.or.kr/mi_pr/missa/ordinary.asp?day=20210403&missaid=12579#missa_02>
 매일 미사 정보가 아직 안 올라옴
