--- a/future-dates/2023-5-20-homily.md
+++ b/future-dates/2023-5-20-homily.md
@@ -4,11 +4,11 @@ title:  주님 승천 대축일(홍보 주일) 특전미사 또는 스위스 주
 layout: post 
 image:  
 first_reading:  사도행전 8,5-8.14-17
-first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=151&p=8
+first_reading_link: m=2&n=151&p=8
 second_reading:  베드로 1서 3,15-18
-second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=167&p=3
+second_reading_link: m=2&n=167&p=3
 gospel:  요한 14,15-21
-gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=14
+gospel_link: m=2&n=150&p=14
 
 ---
 
