--- a/future-dates/2023-7-9-homily.md
+++ b/future-dates/2023-7-9-homily.md
@@ -5,11 +5,11 @@ layout: post
 image:  
 bonstetten: true
 first_reading:  즈카르야 예언서의 말씀입니다.9,9-10
-first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=151&p=8
+first_reading_link: m=2&n=151&p=8
 second_reading:  사도 바오로의 로마서 말씀입니다.8,9.11-13
-second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=167&p=3
+second_reading_link: m=2&n=167&p=3
 gospel:  마태오가 전한 거룩한 복음입니다.11,25-30
-gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=14
+gospel_link: m=2&n=150&p=14
 
 ---
 
