--- a/future-dates/2023-8-20-homily.md
+++ b/future-dates/2023-8-20-homily.md
@@ -4,11 +4,11 @@ title:  연중 제20주일
 layout: post 
 image:  
 first_reading:  이사야서의 말씀입니다.56,1.6-7
-first_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=1&n=133&p=37
+first_reading_link: m=1&n=133&p=37
 second_reading:  사도 바오로의 로마서 말씀입니다.11,13-15.29-32
-second_reading_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=152&p=8
+second_reading_link: m=2&n=152&p=8
 gospel:  마태오가 전한 거룩한 복음입니다.15,21-28
-gospel_link: https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=11
+gospel_link: m=2&n=150&p=11
 
 ---
 
