--- a/_posts/2023/2023-3-12-homily.md
+++ b/_posts/2023/2023-3-12-homily.md
@@ -14,7 +14,7 @@ gospel_link: m=2&n=150&p=4
 tags: 사순
 
 ---
-<a href="https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=148&p=14">마르코 복음 14,13</a>에서 주님께서는
+<a href="https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=148&p=14">마르코 복음 14장 13절</a>에서 주님께서는
 “물동이를 메고 가는 남자를 따라가”면 파스카 만찬이 열리는 장소에 이를 거라고 말씀하십니다.
 왜 남자를 따라가라고 하셨을까요? 유대교에서 물을 길러 가는 것은 여자들의 일이었던 겁니다.
 그런데 남자가 물을 길어가니 그 사람을 금방 알아볼 수 있었겠죠. 제자들이 따라갔던 그 남자는 아마 수도자였을 겁니다.
