--- a/_posts/2023/2023-4-23-homily.md
+++ b/_posts/2023/2023-4-23-homily.md
@@ -12,7 +12,7 @@ gospel_link: m=2&n=150&p=21
 
 ---
 
-주님께서 제자들을 갈릴레아로 보내신 이유가 오늘 복음을 통해 비로소 드러납니다. 앞서 말씀드렸듯이 제자들은 부활하신 그리스도의 말씀을 이해하지 못하고 일단 무덤으로 달려갑니다. 하지만 오늘 복음은 그들이 티베리아 호수가 (이방인은 갈릴레아 호수를 티베리아 호수라고 하였습니다.) 에 모여 있다고 전합니다. 유대인들은 이 호수를 갈릴레아 호수라고 불렀습니다. 갈릴레아로 온 겁니다. 구글 지도로 따지자면 약 150 km 를 걸어간 것입니다. 그런데 왔기는 왔는데 무엇을 하고 있나요? 최소 일곱 명의 사도들이 그냥 모여 있습니다. 그러다 베드로가 “나는 고기 잡으러 가네.”하고 말합니다. 할 일도 없으니, 더 짜증나기 전에 그냥 나가보겠다는 말투로 들립니다. 여기에 다른 사도들이 호응합니다. “우리도 함께 가겠소.” 같은 심정인 겁니다. “그들이 밖으로 나가 배를 탔지만 그날 밤에는 아무것도 잡지 못하였다.” 지긋지긋해서 나오기는 나왔으니 일이 제대로 될 리 없는 겁니다. 아침까지 그렇게 허탕을 칩니다.
+주님께서 제자들을 갈릴레아로 보내신 이유가 오늘 복음을 통해 비로소 드러납니다. 앞서 말씀드렸듯이 제자들은 부활하신 그리스도의 말씀을 이해하지 못하고 일단 무덤으로 달려갑니다. 하지만 오늘 복음은 그들이 티베리아 호숫가에 모여 있다고 전합니다. 이방인은 갈릴레아 호수를 티베리아 호수라고 하였습니다. 유대인들은 이 호수를 갈릴레아 호수라고 불렀습니다. 갈릴레아로 온 겁니다. 구글 지도로 따지자면 약 150킬로미터를 걸어간 것입니다. 그런데 왔기는 왔는데 무엇을 하고 있나요? 최소 일곱 명의 사도들이 그냥 모여 있습니다. 그러다 베드로가 “나는 고기 잡으러 가네.”하고 말합니다. 할 일도 없으니, 더 짜증나기 전에 그냥 나가보겠다는 말투로 들립니다. 여기에 다른 사도들이 호응합니다. “우리도 함께 가겠소.” 같은 심정인 겁니다. “그들이 밖으로 나가 배를 탔지만 그날 밤에는 아무것도 잡지 못하였다.” 지긋지긋해서 나오기는 나왔으니 일이 제대로 될 리 없는 겁니다. 아침까지 그렇게 허탕을 칩니다.
 
 형제, 자매 여러분, 오늘 제자들이 다시 그물을 쥐고 있습니다. 그런데 <a href="https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=147&p=4">마태오 복음 4장</a> 20절은 전합니다. “그러자 그들은 곧바로 그물을 버리고 예수님을 따랐다.” 그렇습니다. “나를 따라오너라. 내가 너희를 사람 낚는 어부로 만들겠다.” 라는 주님의 말씀을 듣고 버렸던 것이 바로 그들에게 생계 수단이었던 그물입니다. 이상은 무너지고 일상으로 돌아와 있는 것입니다. 사도가 다시 어부가 된 겁니다. 배운 게 도둑질이라고, 사람을 낚던 이들이 다시 물고기를 낚는 겁니다. 영광과 명예는 사라지고 초라한 배반자로 생계나 다시 유지하려는 모습입니다. 차마 가족들에게 가지는 못하고, 거창한 모습으로 뛰쳐나가더니 갑자기 왜 그런 몰골로 다시 돌아왔느냐는 구사리를 견딜 수 있는 자존감도 없으니 그냥 자기들끼리 모여 있는 겁니다. 출가가 ‘가출‘이 된 상황입니다.
 
