따옴표 고침

--- a/_posts/2022/2022-6-12-bahn.md
+++ b/_posts/2022/2022-6-12-bahn.md
@@ -28,7 +28,7 @@ gospel_link: m=2&n=150&p=16
 그런데 하나의 관건이 있습니다. 과연 «어떻게 천국에 가나?» 입니다.
 제가 며칠 전에 독일에 재교육을 위해 500km 떨어진 곳을 갔다가 새벽에 돌아왔습니다. 그런데 고속도로를 막아 놓았더군요. 어디 길을 따로 열어 놓은 것도 아니고 완전히 막아 놨던 것입니다. 바젤(Basel) 들어가기 전에 아이켄(Eiken)에서 고속도로를 막아 놨는데 굉장히 당황스러웠습니다. 제 앞에 있는 차도 당황하는 기색이 역력했습니다.
 
-잠시 고민을 하고 앞에 차를 보니 취리히 번호판을 갖고 있길래 ‚이 차를 따라 가야겠다.‘ 마음을 먹었습니다. 제 앞에 있던 차는 고속도로를 벗어나서 다리를 건너고 루체른 방향으로 갔습니다. 저도 그대로 따라갔습니다. 산을 건너니 고속도로로 다시 들어가게 되었고 멋지게 달려서 다행히 집으로 돌아왔습니다. 제 앞에 차를 몰던 사람은 저를 도와줬다는 것을 모를 것입니다.
+잠시 고민을 하고 앞에 차를 보니 취리히 번호판을 갖고 있길래 '이 차를 따라 가야겠다.‘ 마음을 먹었습니다. 제 앞에 있던 차는 고속도로를 벗어나서 다리를 건너고 루체른 방향으로 갔습니다. 저도 그대로 따라갔습니다. 산을 건너니 고속도로로 다시 들어가게 되었고 멋지게 달려서 다행히 집으로 돌아왔습니다. 제 앞에 차를 몰던 사람은 저를 도와줬다는 것을 모를 것입니다.
 
 구원의 길도 마찬가지입니다. 여러분이 고속도로 안에서 달린다 생각해보세요. 그 때 예수님만 따라가가면 됩니다. 성령님의 목소리를 듣고 따라 가는 것입니다. 우리가 모든 길을 알 필요는 없습니다. 예수님을 만나십시오. 예수님을 만나지 않는다면 고속도로에서 깜깜하게 헤매는 것과 마찬가지입니다. 삼위일체에 이르는 고속도로가 있습니다. 그것은 성체성사이며 그 외에 다른 길은 없습니다. 아멘.
 
