--- a/_posts/2022/2022-6-26-apero.md
+++ b/_posts/2022/2022-6-26-apero.md
@@ -21,13 +21,13 @@ image: 오병이어.jpg
 
 그러나 예수님은 가는 길이 바쁘셨기
 때문에 서둘러 예루살렘으로 가십니다. 왜 예수님은 바쁘게 가셨을까요? 복음 서문에
-보면 ‚하늘에 올라가실 때가 차자.‘ 라는 말이 나옵니다. 때가 찼기 때문에 결심을 하시고
+보면 '하늘에 올라가실 때가 차자.‘ 라는 말이 나옵니다. 때가 찼기 때문에 결심을 하시고
 가십니다.
 
 제 1 독서와 복음을 보면 큰 차이가 있습니다. 엘리야는 자신의 후계자로 엘리사를
 삼으려고 할 때 엘리사가 어머니와 아버지에게 인사를 하겠다고 하니 작별인사를 하고
 오라고 합니다. 하지만 예수님은 자신을 따르려고 하는 사람들에게 가족에게
-작별인사를 하는 것을 허락하지 않으십니다. ‚너는 나를 따라라.‘ 하시며 ‚쟁기에 손을
+작별인사를 하는 것을 허락하지 않으십니다. '너는 나를 따라라.‘ 하시며 '쟁기에 손을
 얹고 뒤돌아 보는 자는 하느님 나라에 합당하지 않다.‘고 하십니다. 그리고 본인 자신도
 그렇게 나아가십니다.
 
@@ -48,9 +48,9 @@ image: 오병이어.jpg
 그 50 여명의 어린 학생들이 있습니다. 그들은 열정이 가득하고 사제가 되려는 의욕이
 넘칩니다. 그러나 신학교에 있는 양성 담당 사제는 이 학생들이 사제 자질이 있는지
 가려내야 합니다. 이 사람이 사제가 될 사람은 아닌 것 같다 하면 잘라냅니다. 그러나
-자르지 않고 „계속 해보자„ 하며 놔두면 더 큰 문제가 생깁니다.
+자르지 않고 "계속 해보자" 하며 놔두면 더 큰 문제가 생깁니다.
 
-다이어트도 마찬가지입니다. 매일 다이어트 한다고 하면서 ‚내일부터 해야지.‘미루면
+다이어트도 마찬가지입니다. 매일 다이어트 한다고 하면서 '내일부터 해야지.‘미루면
 안됩니다. 저는 이런 생각을 하면서 우리 아이들이 걱정이 되었습니다. 우리 세대는
 옳은 결정을 하도록 요구되는 시대에 살았습니다. 그러나 우리 아이들이 자라나는
 스위스에는 선택의 상황들이 매우 많습니다. 어느 자매의 70세 생일 행사에 초대되어
@@ -61,4 +61,4 @@ image: 오병이어.jpg
 부모는 옳고 명확한 길을 알려줘야 합니다. 우리가 정말 좋은 게 무엇인지
 안다면 그것을 전해주려 사력을 다해야 합니다. 부모님들은 옳은 목적을 위해 치열하게
 달려가는 예수님의 모습을 닮아야 합니다. 여러분이 찾으신 진리를 아이들에게 전해
-주셔야 합니다. 우리는 ‚도‘를 찾았습니다. 그 ‚도‘는 바로 예수 그리스도 이십니다. 아멘.
+주셔야 합니다. 우리는 '도‘를 찾았습니다. 그 '도‘는 바로 예수 그리스도 이십니다. 아멘.
