--- a/_posts/2023/2023-4-23-homily.md
+++ b/_posts/2023/2023-4-23-homily.md
@@ -24,7 +24,7 @@ gospel_link: m=2&n=150&p=21
 
 강론 후 미사 중 메세지 >
 
-인생을 사는 것은 쉽지 않습니다. 어려운 순간들이 항상 찾아오기 때문입니다. 그러나 이 ‚어려운 순간‘ 자체가 아니고 이 ‚어려운 순간‘이 끝나지 않을 것만 같은 우리의 착각, 우리의 상상속에서 펼쳐지는 부정적인 시나리오가 우리를 더욱 힘들게 합니다. 이러한 어려움이 찾아올 때 이 상황에만 몰두하고 매몰되는 것이 아니라 먼 곳을 바라보십시오. 차갑고 검은 물을 너머 뭍을 봐야 합니다. 그렇게 멀리 바라보기 위해서 사랑이 있어야 합니다. 예수님을 사랑하는 제자인 사도요한은 고기잡이 배에서 뭍에 계시는 예수님을 보았습니다. 주님을 향한 사랑은 그 분을 바라볼 수 있게 합니다. 아멘.
+인생을 사는 것은 쉽지 않습니다. 어려운 순간들이 항상 찾아오기 때문입니다. 그러나 이 '어려운 순간‘ 자체가 아니고 이 '어려운 순간‘이 끝나지 않을 것만 같은 우리의 착각, 우리의 상상속에서 펼쳐지는 부정적인 시나리오가 우리를 더욱 힘들게 합니다. 이러한 어려움이 찾아올 때 이 상황에만 몰두하고 매몰되는 것이 아니라 먼 곳을 바라보십시오. 차갑고 검은 물을 너머 뭍을 봐야 합니다. 그렇게 멀리 바라보기 위해서 사랑이 있어야 합니다. 예수님을 사랑하는 제자인 사도요한은 고기잡이 배에서 뭍에 계시는 예수님을 보았습니다. 주님을 향한 사랑은 그 분을 바라볼 수 있게 합니다. 아멘.
 
 아가페 전 3분 교리 >
 
