--- a/_posts/2020/2020-9-27-tax.md
+++ b/_posts/2020/2020-9-27-tax.md
@@ -16,7 +16,7 @@ gospel_link: m=2&n=147&p=21
  
 우리는 이번에 행사가 없이 단촐하게 추석 명절을 보내게 되었습니다. 그러나 마음은 주님께 감사하여야겠고 생명 그리고 영적 은혜를 주신 부모님들, 조상들께 감사를 드려야겠습니다.
 
-감사는 어떻게 드릴까요? 세상이, 남들이 공평하기보다는 우리 스스로가 먼저 공평하도록 해야 겠습니다. 태어나서 이 자리까지 부모님께 원망의 마음은 없었는지요? ‘난 왜 이런 환경에서 태어났을까? 남이 받는 혜택은 왜 나는 받지 못할까?’ 등등 말입니다. 세상은 불공평하고 출발은 누구나 다 똑같지 않습니다.
+감사는 어떻게 드릴까요? 세상이, 남들이 공평하기보다는 우리 스스로가 먼저 공평하도록 해야 겠습니다. 태어나서 이 자리까지 부모님께 원망의 마음은 없었는지요? '난 왜 이런 환경에서 태어났을까? 남이 받는 혜택은 왜 나는 받지 못할까?' 등등 말입니다. 세상은 불공평하고 출발은 누구나 다 똑같지 않습니다.
 
 그러나 중요한 것은 지금까지 어떤 것을 이루었고 그 중 큰 부분은 부모님의 덕이었음을 잊지 않는 것입니다.
 
