--- a/_posts/2022/2022-04-17-mom.md
+++ b/_posts/2022/2022-04-17-mom.md
@@ -49,15 +49,15 @@ closing: "그 먼 곳에서부터 오신 분은 예수 그리스도 이십니다
 끝이라고 믿고 슬퍼하는 것입니다. 그런데 슬퍼하는 것이 실망하는 것보다 더 쉽습니다.
 잘 슬퍼한다면 마음이 진정되고 앞으로 나아갈 수 있습니다. 그런데 실망은 참
 아픕니다. 그래서 실망을 야기하는 희망을 갖지 않는 것입니다. 희망이 없으면 마음은
-슬프지만 그래도 실망보다는 더 견디기 쉬우니까요. 그냥 희망 자체를 제거하고 ‘죽은
-남편은 그냥 끝이다.‘ ‘예수님은 돌아가셨고 부활 따위는 없다.’ 고 치부해 버리는
+슬프지만 그래도 실망보다는 더 견디기 쉬우니까요. 그냥 희망 자체를 제거하고 '죽은
+남편은 그냥 끝이다.' '예수님은 돌아가셨고 부활 따위는 없다.' 고 치부해 버리는
 것입니다.
 
 이것은 더 큰 실망을 피하기 위한 일종의 방어 기제입니다. 여러분은 실망을
 할 용기가 있는지요? 다시 한번 희망을 가지실 의지가 있으신가요? 아니면 아무 것도
 기대하지 않고 쭉 슬프고 그냥 그대로 편안한 상태로 머무르려고 하시나요?
 
-세상은 우리에게 이런 유혹을 줍니다. ‘기대하지 마. 너만 다쳐.’ 라고 말입니다.
+세상은 우리에게 이런 유혹을 줍니다. '기대하지 마. 너만 다쳐.' 라고 말입니다.
 아닙니다. 우리가 우리 영혼을 강하게 하고 실망을 할 것 같아도 각오를 하고 희망을
 갖는 삶이 그리스도 안의 삶입니다.
 
