--- a/_posts/2022/2022-09-25-klaus.md
+++ b/_posts/2022/2022-09-25-klaus.md
@@ -39,14 +39,14 @@ image: Seats_inside_a_flight.jpg
 있습니다. 그러나 딸아이가 그 자리에 앉도록 하십시오. 이 세상에는 원하는 것이 다
 이루어지지 않을 수도 있다는 것을 배워야 합니다.» 라고 말입니다.
 
-우리는 다행히도 ‘포기하는 것’ 을 배운 세대입니다. 제가 어릴 적 어머니와 함께 시장에
+우리는 다행히도 '포기하는 것' 을 배운 세대입니다. 제가 어릴 적 어머니와 함께 시장에
 가면 제가 원하는 것을 다 장바구니에 담을 때 등짝 마사지를 받곤 했었죠. 세상을 실제
 살아가다 보면 우리는 우리가 원하는 것을 다 얻을 수가 없다는 것과 때로는
 세상으로부터의 커다란 배반감을 느끼게 됩니다. 그러나 우리는 그것을 받아들여야
 합니다.
 
-복음에서 ‘사람의 아들이 영광스러운 곳에 앉고 너희도 내 나라에서 내 식탁에 앉아
-먹고 마실 것이며, 옥좌에 앉아 이스라엘의 열 두 지파를 심한 할 것’ 이라고 하십니다.
+복음에서 '사람의 아들이 영광스러운 곳에 앉고 너희도 내 나라에서 내 식탁에 앉아
+먹고 마실 것이며, 옥좌에 앉아 이스라엘의 열 두 지파를 심한 할 것' 이라고 하십니다.
 저도 여러분과 함께 그 자리에 앉고 싶습니다. 그러면 우리가 어떻게 그 자리에 앉을 수
 있을까요? 그것을 위해서 우리가 알아야 할 것이 있습니다.
 
@@ -56,7 +56,7 @@ image: Seats_inside_a_flight.jpg
 있습니다.
 
 우리는 이민자로서 스위스에 살고 있습니다. 저도 이민자로서 스위스에
-사는데 장애를 갖고 삽니다. 이른바 ‘언어 장애’를 갖고 사는 것이죠.
+사는데 장애를 갖고 삽니다. 이른바 '언어 장애'를 갖고 사는 것이죠.
 
 우리 모두 우리의
 어려움들, 십자가를 받아들여야 하겠습니다. 이를 감수하고 인내할 때 언젠가 우리는
