--- a/_posts/2022/2022-5-8-mary.md
+++ b/_posts/2022/2022-5-8-mary.md
@@ -27,7 +27,7 @@ closing: "그 먼 곳에서부터 오신 분은 예수 그리스도 이십니다
 그 이면에 있는 그림을 공유할 수 있을 때 비로소 알아들은 것이죠.
 따라서 우리는 언어를 넘어서 그 이면에 있는 그림에 다가가야 합니다.
 
-오늘 복음에서 주님께서는 “내 양들은 내 목소리를 알아듣는다.”고 말씀하십니다.
+오늘 복음에서 주님께서는 "내 양들은 내 목소리를 알아듣는다."고 말씀하십니다.
 과연 우리는 주님의 목소리를 잘 알아듣고 있을까요?
 달리 묻자면, 주님의 목소리 이면에 있는 그림을 보고 있는지요?
 그 그림을 보셨다면 그분의 목소리를 알아들으신 겁니다.
