--- a/_posts/2023/2023-3-12-homily.md
+++ b/_posts/2023/2023-3-12-homily.md
@@ -15,7 +15,7 @@ tags: 사순
 
 ---
 <a href="https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=148&p=14">마르코 복음 14장 13절</a>에서 주님께서는
-“물동이를 메고 가는 남자를 따라가”면 파스카 만찬이 열리는 장소에 이를 거라고 말씀하십니다.
+"물동이를 메고 가는 남자를 따라가"면 파스카 만찬이 열리는 장소에 이를 거라고 말씀하십니다.
 왜 남자를 따라가라고 하셨을까요? 유대교에서 물을 길러 가는 것은 여자들의 일이었던 겁니다.
 그런데 남자가 물을 길어가니 그 사람을 금방 알아볼 수 있었겠죠. 제자들이 따라갔던 그 남자는 아마 수도자였을 겁니다.
 오직 수도자들만 스스로 물을 길어 왔습니다. 그런데 물을 길어 온다는 것, 그것은 과연 어떤 일이었을까요?
@@ -33,15 +33,15 @@ tags: 사순
 누구에게나 저마다의 우물이 있습니다. 하지만 그곳으로 가야하는 게 우리의 운명입니다.
 
 형제, 자매 여러분, 그런데 바로 그 곳으로 주님이 오십니다. 하필이면 그곳으로 오십니다. 뿐만 아니라 오셔서 물 좀 달라고 귀찮게 하십니다.
-우물에서 물 떠가는 것도 귀찮은데 그 일을 방해하시는 겁니다. “유대인이 왜 사마리아인에게 말을 거시나요?”하고 말하는 이 여인처럼 우리도 쏘아 붙일 수 있습니다.
-“이거 하는 것도 힘든데 왜 또 그것까지 부탁하느냐”고 말입니다. 이렇게 힘든데 더 힘들게 하는 존재, 그런 사람을 우리 역시 각자의 우물가에서 만날 수 있습니다. 그런데 그분이 바로 주님이십니다.
+우물에서 물 떠가는 것도 귀찮은데 그 일을 방해하시는 겁니다. "유대인이 왜 사마리아인에게 말을 거시나요?"하고 말하는 이 여인처럼 우리도 쏘아 붙일 수 있습니다.
+"이거 하는 것도 힘든데 왜 또 그것까지 부탁하느냐"고 말입니다. 이렇게 힘든데 더 힘들게 하는 존재, 그런 사람을 우리 역시 각자의 우물가에서 만날 수 있습니다. 그런데 그분이 바로 주님이십니다.
 
 여기서 한 번 상상해 봅시다. 이 여인은 주님과 헤어진 후 물을 길어가려고 분명히 다시 우물가로 왔을 겁니다. 이전처럼 말입니다. 그러면 이제 그녀는 어떤 마음으로 그곳으로 왔을까요?
 옛날처럼 짜증 가득한 마음으로? 아닐 겁니다. 이제는 기쁘고 설레는 마음으로 왔을 겁니다. 그녀가 바로 그곳에서 주님을 만났기에 이제는 우물가가 소중한 장소가 된 것입니다.
 혐오하던 곳이 이제는 그리워하는 곳으로 변한 겁니다. 우리 각자의 우물, 그 지겨운 곳에서 주님을 만난다면 그 우물가는 변합니다. 상황이 바뀌는 게 아닙니다. 주님께서는 상황을 바꾸지 않으십니다.
 하지만 새로운 의미를 부여해주십니다. 그리고 그 의미를 통해 모든 게 바뀝니다. 그곳이 새로운 색으로 빛나게 됩니다.
 
-혹시 “<a href="https://www.pauline.or.kr/bookview?gcode=bo1003802">러시아에서 그분과 함께</a>”라는 책을 읽어보신 적이 있는지요?
+혹시 "<a href="https://www.pauline.or.kr/bookview?gcode=bo1003802">러시아에서 그분과 함께</a>"라는 책을 읽어보신 적이 있는지요?
 <a href="https://www.jesuits.org/stories/jesuit-father-walter-ciszek-a-life-in-service/">어떤 젊은 미국 예수회 신부님</a>이
 서품을 받은 후 2차 세계 대전 중 선교를 위해 러시아로 몰래 잠입하십니다. 그러다 체포가 되어 23년간 수용소와 강제노동을 하시다 1963년도에 포로교환 형식을 통해 미국으로 돌아오십니다.
 다시 미국으로 돌아가게 될 줄은 본인도 모르고 있었습니다. 고국에 있던 가족들과 동료신부님들은 이 분이 돌아가신 줄 알고 장례미사까지 치렀습니다.
