--- a/_posts/2023/2023-3-18-retreat.md
+++ b/_posts/2023/2023-3-18-retreat.md
@@ -27,14 +27,14 @@ tags: 사순
  <section>
  <h1> 2. 우울함 </h1>
 
-우울함은 크게 두가지로 분류하여 논할 수 있습니다. “특수한 우울함” 과 ”일반적인 우울함” 입니다.
+우울함은 크게 두가지로 분류하여 논할 수 있습니다. "특수한 우울함" 과 "일반적인 우울함" 입니다.
 
  <h2> 2.1 특수한 우울함 </h2>
 
 먼저 특수한 우울함은 다시 상위단계와 하위단계로 나뉩니다.
  <h3> 2.1.1 특수한 우울함 - 상위단계 </h3>
 
-인간이 영적으로 고차원적인 단계에 도달하여, 내가 좋아했던 감각적인 것들, 예를 들어 커피, 골프등이 싫어질 수도 있습니다. 이것을 “감각의 밤”이라고 합니다. "영혼의 밤”이 시작되면 영적으로 우울해집니다. 이어서 “신앙의 밤”에 이르면 하느님에 대한 의문을 가지면서 깊은 슬픔에 빠집니다. 매우 고차원적인 단계고, 영적 가치가 무너집니다. 불교와는 또 다른 개념입니다. 우리가 3년 전 성지순례로 방문하였던 스페인 아빌라 데레사의 책을 읽어보시면 이해가 될 것입니다. 심지어 죽음에 대한 동경, 순교와 가까워집니다. 심지어 성 프란치스코 성인도 2-3년 동안 영혼의 밤을 겪으셨습니다.
+인간이 영적으로 고차원적인 단계에 도달하여, 내가 좋아했던 감각적인 것들, 예를 들어 커피, 골프등이 싫어질 수도 있습니다. 이것을 "감각의 밤"이라고 합니다. "영혼의 밤"이 시작되면 영적으로 우울해집니다. 이어서 "신앙의 밤"에 이르면 하느님에 대한 의문을 가지면서 깊은 슬픔에 빠집니다. 매우 고차원적인 단계고, 영적 가치가 무너집니다. 불교와는 또 다른 개념입니다. 우리가 3년 전 성지순례로 방문하였던 스페인 아빌라 데레사의 책을 읽어보시면 이해가 될 것입니다. 심지어 죽음에 대한 동경, 순교와 가까워집니다. 심지어 성 프란치스코 성인도 2-3년 동안 영혼의 밤을 겪으셨습니다.
 <p>
 <a href="https://m.catholictimes.org/mobile/article_view.php?aid=172447">참고도서: 아빌라 데레사 "영혼의 성"</a>
 <p>
@@ -66,7 +66,7 @@ tags: 사순
 <section>
  <h1> 3. 일반적인 우울함의 두 형태 </h1>
 
-우울함은 두가지 형태로 나타납니다. “존재상실의 공포로 인한 우울함” 과 ”스트레스에 의한 우울함”입니다.
+우울함은 두가지 형태로 나타납니다. "존재상실의 공포로 인한 우울함" 과 "스트레스에 의한 우울함"입니다.
  <h2> 3.1 존재상실의 공포, 고통으로 인한 우울함  </h2>
 
 어린이들이 부모님의 불행을 목격하거나 부모님을 잃고 고통스러운 삶을 살아야 했습니다.
@@ -124,7 +124,7 @@ tags: 사순
 
  <h2> 6.3 강해진다는 것은? </h2>
 
-지성으로 되지 않습니다. 사랑을 통해서만 강해질 수 있습니다. 이때 우리는 “강한 대상” 을 사랑함으로써 진정으로 강해질 수 있습니다. 내가 사랑하는 대상이 크고 강할수록 나도 크고 강해질 수 있습니다. 우리는 이러한 강한 롤모델이 필요합니다. 위대하고 크고 고귀한 존재를 사랑해야 합니다. 즉, 절대자를 사랑하고 그 존재와 하나가 되려고 할 때 우리는 진정으로 강해질 수 있습니다.
+지성으로 되지 않습니다. 사랑을 통해서만 강해질 수 있습니다. 이때 우리는 "강한 대상" 을 사랑함으로써 진정으로 강해질 수 있습니다. 내가 사랑하는 대상이 크고 강할수록 나도 크고 강해질 수 있습니다. 우리는 이러한 강한 롤모델이 필요합니다. 위대하고 크고 고귀한 존재를 사랑해야 합니다. 즉, 절대자를 사랑하고 그 존재와 하나가 되려고 할 때 우리는 진정으로 강해질 수 있습니다.
 
 <p>
 어떤 대상을 사랑하게 되면 그 대상에 대해 알게 됩니다. 사랑은 앎입니다. 사랑이 있는 곳에 눈이 있기 때문에 사랑이 있으면 눈이 떠집니다. (자녀가 참석한 학예회에서 자녀 모습만 눈에 보이듯이. 사랑이 있는 곳에 눈이 있다. 라틴어: Ubi amor ibi oculus) 즉, 하느님을 알게 되는 것이 아니라 사랑하게 되는 것입니다.
@@ -162,7 +162,7 @@ tags: 사순
 <p>
 수도원 앞에 서 있는 나무는 참 많은 것을 보았습니다. 수도자의 소명을 받아 들어오는 사람들, 그리고 떠나는 사람들...
 <p>
-하강을 하고 고통을 겪고 이를 견디지 않으면 “우울함”에 잠식 되고, “슬픔”의 단계로 넘어가게 됩니다. 슬픔이 끝나면 “절망”의 단계에 가고 이때 되면 "될데로 되라"가 됩니다. 이것은 생의 “끝”과 같습니다. 이것이 바로 “무기력” 단계에 이르게 된 것입니다.
+하강을 하고 고통을 겪고 이를 견디지 않으면 "우울함"에 잠식 되고, "슬픔"의 단계로 넘어가게 됩니다. 슬픔이 끝나면 "절망"의 단계에 가고 이때 되면 "될데로 되라"가 됩니다. 이것은 생의 "끝"과 같습니다. 이것이 바로 "무기력" 단계에 이르게 된 것입니다.
 
  <section>
  <h1> 8. 소명은 어떻게 찾나요? </h1>
@@ -170,7 +170,7 @@ tags: 사순
 라틴어로 소명은 보카치오 Vocatio. 소명은 목소리를 듣는 것입니다.
  <h2> 8.1 소명을 찾기 위해서는 하느님 말씀을 들어야 합니다. </h2>
 
-<a href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=7593&keyword=&gubun=04">구약에서 “들어라 이스라엘” 이라고 하십니다.</a> 우리는 끊임없이 전례를 읽고 성서를 통해서 들어야 합니다. 그러면 들립니다. 인생을 돌아보고, 주변인과 많은 이야기를 하면서 자신의 모습을 찾아야 하고 자신이 가장 잘하는 일을 찾게 됩니다.
+<a href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=7593&keyword=&gubun=04">구약에서 "들어라 이스라엘" 이라고 하십니다.</a> 우리는 끊임없이 전례를 읽고 성서를 통해서 들어야 합니다. 그러면 들립니다. 인생을 돌아보고, 주변인과 많은 이야기를 하면서 자신의 모습을 찾아야 하고 자신이 가장 잘하는 일을 찾게 됩니다.
 <p>
 내가 가장 기쁘고 잘할 수 있는 일, 바로 그것이 소명입니다.
 
