--- a/_posts/2023/2023-4-2-palm.md
+++ b/_posts/2023/2023-4-2-palm.md
@@ -13,4 +13,4 @@ opening: "오늘 성지 주일 미사와 함께 성주간(Karwoche)이 시작됩
 ---
  
 
-오늘 복음에 등장하는 여러 사물들 - 망치, 회초리, 십자가 등을 우리는 마음 속에 가지고 있습니다. 우리들이 예수님을 고발하여 십자가에 못 박은 것입니다. 그리고 예수님은 침묵하십니다. 우리의 고발에 아무 대답이 없으십니다. 우리가 예수 그리스도를 고발한 것에 대하여 아무 대답이 없으십니다. 뿐만 아니라, 예수님께서 "저의 하느님, 저의 하느님, 어찌하여 저를 버리셨습니까?” 하고 하느님께 여쭈셨지만 하느님은 거기에 대해서도 아무 대답이 없으십니다. 형제 자매 여러분, 우리는 지금 침묵 속에 있습니다. 이는 예수님의 목소리를 듣기 위한 침묵입니다. 그리고 부활의 희망을 갖고 있습니다. 결국 마지막에는 모든 것이 다 좋아질 것이라는 희망입니다.
+오늘 복음에 등장하는 여러 사물들 - 망치, 회초리, 십자가 등을 우리는 마음 속에 가지고 있습니다. 우리들이 예수님을 고발하여 십자가에 못 박은 것입니다. 그리고 예수님은 침묵하십니다. 우리의 고발에 아무 대답이 없으십니다. 우리가 예수 그리스도를 고발한 것에 대하여 아무 대답이 없으십니다. 뿐만 아니라, 예수님께서 "저의 하느님, 저의 하느님, 어찌하여 저를 버리셨습니까?" 하고 하느님께 여쭈셨지만 하느님은 거기에 대해서도 아무 대답이 없으십니다. 형제 자매 여러분, 우리는 지금 침묵 속에 있습니다. 이는 예수님의 목소리를 듣기 위한 침묵입니다. 그리고 부활의 희망을 갖고 있습니다. 결국 마지막에는 모든 것이 다 좋아질 것이라는 희망입니다.
