--- a/_posts/2020/2020-12-6-buttons.md
+++ b/_posts/2020/2020-12-6-buttons.md
@@ -20,15 +20,15 @@ tags: 대림
 
 반대로 성실히 살아가는 종교인이라면 옷에 상관 없이 수려한 모습을 발산합니다. 특별히 대중 앞에 나서지 않아도 그의 명성은 널리 알려지고, 굳이 꾸며 말하지 않아도 영혼을 뒤흔드는 목소리가 나옵니다.
 
-그래서 오늘 복음에서 요한은 “낙타 털 옷을 입고 가죽띠를 두르고” 살아도 되었고, 아무도 듣지 않는 광야에서 복음을 선포해도 사람들이 찾아왔던 것입니다. 달콤한 말을 했나요? 오히려 회개를 요구하는 서슬 퍼런 말을 해도 사람들이 그에게 귀를 기울였습니다. 진리는 그 자체로 광채를 가지고 있으니 꾸밀 이유가 없습니다.
+그래서 오늘 복음에서 요한은 "낙타 털 옷을 입고 가죽띠를 두르고" 살아도 되었고, 아무도 듣지 않는 광야에서 복음을 선포해도 사람들이 찾아왔던 것입니다. 달콤한 말을 했나요? 오히려 회개를 요구하는 서슬 퍼런 말을 해도 사람들이 그에게 귀를 기울였습니다. 진리는 그 자체로 광채를 가지고 있으니 꾸밀 이유가 없습니다.
 
 막 태어난 아기가 얼마나 아름다운지 여러분들은 보셨을 것 같습니다. 발가벗은 채 울고 보채도 창조된 생명의 빛 그 자체가 발산되니 눈부시게 아름답지 않을 수 없습니다.
 이런 생각을 하다 보면 어쩌면 우리는 연예인으로 살고 있지 않나 싶습니다.
 
 그런데 연예인과 예술인은 마땅히 구분이 되어야 합니다. 전자는 타인의 시선에 자신의 역할을 맞추지만 후자는 실제 세계의 이면에 감추어진 진선미를 재현하려 합니다. 때문에 만약 시인이 사람들이 듣고 싶은 시어를 찾아 쓰려 한다면 그는 글쟁이에 불과합니다. 심지어는 <a href="https://encykorea.aks.ac.kr/Article/E0052011">어용 문인</a>으로 활동할 수도 있습니다. 글 좀 쓴다는 사람들이 얼마나 일제와 독재를 칭송했는지 우리는 알고 있습니다. 시인은 굶더라도 사람들의 귀를 위해 시를 쓰지 않습니다.
 
-오늘 제2독서는 “새 하늘과 새 땅”을 예고하고 있습니다. 아무나 들어갈 수 없을 것 같습니다. 조건이 있겠죠. 그것은 대중목욕탕의 이용 규칙처럼 꾸민 것들을 벗은 후에야 들어갈 수 있다는 것입니다.
+오늘 제2독서는 "새 하늘과 새 땅"을 예고하고 있습니다. 아무나 들어갈 수 없을 것 같습니다. 조건이 있겠죠. 그것은 대중목욕탕의 이용 규칙처럼 꾸민 것들을 벗은 후에야 들어갈 수 있다는 것입니다.
 
-가톨릭 교회 성직자의 정복은 <a href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=1956&keyword=%EC%88%98%EB%8B%A8&gubun=01">“수단(Soutane)”</a>이라고 불립니다. 단추가 많은 긴 검은 원피스를 상상하시면 됩니다. 남성인 사제들이 왜 저런 옷을 입나 궁금해 하실 수도 있을 것 같습니다. 하지만 엄연히 교회의 공식 복장이고 특히 신학생들에게 입게 하는데 이유가 있습니다. 수단에는 33개의 단추가 달려 있습니다. 서른 셋의 나이에 십자가에서 돌아가신 주님의 삶을 상징하는 겁니다. 따라서 수단을 입을 때마다 이 단추들을 채우며 세상이 아니라 주님께 자신을 맞추는 것을 배웁니다.
+가톨릭 교회 성직자의 정복은 <a href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=1956&keyword=%EC%88%98%EB%8B%A8&gubun=01">"수단(Soutane)"</a>이라고 불립니다. 단추가 많은 긴 검은 원피스를 상상하시면 됩니다. 남성인 사제들이 왜 저런 옷을 입나 궁금해 하실 수도 있을 것 같습니다. 하지만 엄연히 교회의 공식 복장이고 특히 신학생들에게 입게 하는데 이유가 있습니다. 수단에는 33개의 단추가 달려 있습니다. 서른 셋의 나이에 십자가에서 돌아가신 주님의 삶을 상징하는 겁니다. 따라서 수단을 입을 때마다 이 단추들을 채우며 세상이 아니라 주님께 자신을 맞추는 것을 배웁니다.
 
-가끔 “내가 누구인가?”라는 생각을 하실 때가 있을 것 같습니다. 참 좋은 질문입니다. 그동안의 어색한 공연을 끝내야 한다는 뜻이니까요. 이제는 수퍼스타 예수 그리스도께 무대를 양보해야 할 시간이 다가오고 있습니다. 아멘.
+가끔 "내가 누구인가?"라는 생각을 하실 때가 있을 것 같습니다. 참 좋은 질문입니다. 그동안의 어색한 공연을 끝내야 한다는 뜻이니까요. 이제는 수퍼스타 예수 그리스도께 무대를 양보해야 할 시간이 다가오고 있습니다. 아멘.
