--- a/_posts/2020/2020-4-12-bird.md
+++ b/_posts/2020/2020-4-12-bird.md
@@ -13,7 +13,7 @@ gospel_link: m=2&n=150&p=20
 
 ---
 
-마음에 품고 있었던 큰 희망이 사라졌다는 것을 확인하는 순간 절망이 시작됩니다. 오늘 복음에서 사도 베드로와 요한, 그리고 마리아 막달레나는 이 절망을 체험합니다. 이들은 주님의 시신이 사라졌다는 소식을 접하고 놀라 무덤으로 달려갑니다. 그리고 모두 “몸을 숙여” 무덤 안을 바라보고 슬퍼하고 절망합니다.
+마음에 품고 있었던 큰 희망이 사라졌다는 것을 확인하는 순간 절망이 시작됩니다. 오늘 복음에서 사도 베드로와 요한, 그리고 마리아 막달레나는 이 절망을 체험합니다. 이들은 주님의 시신이 사라졌다는 소식을 접하고 놀라 무덤으로 달려갑니다. 그리고 모두 "몸을 숙여" 무덤 안을 바라보고 슬퍼하고 절망합니다.
 
 이게 그리스도가 원하시는 게 아닐까요? 몸을 숙여 절망을 직시하는 것 말입니다. 이 쓰디쓴 시간이 지난 후 부활하신 주님께서는 당신의 모습을 보여주십니다. 몸을 숙이기 전에, 내려가기 전에는 위로 올라갈 수 없는 게 부활의 원칙인 것 같습니다.
 
@@ -28,7 +28,7 @@ gospel_link: m=2&n=150&p=20
 손 막달레나 자매님도 천사들의 손에 의해 주님께 인도되실 겁니다.
 부활절에 죽음의 의미를 다시 묵상합니다.
 
-성당에서 <a href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=2992&keyword=%EC%9E%A5%EB%A1%80%EB%AF%B8%EC%82%AC&gubun=01">장례미사</a>가 끝난 후 관을 묘지로 보내기 전에 관에 사제는 성수를 뿌리며 고별식을 거행합니다. 그러면서 다음의 기도를 바칩니다. “하느님의 성인들이여, 오소서. 주님의 천사들이여, 마주 오소서. 이 영혼을 받아 지극히 높으신 하느님 앞에 바치소서. 이 영혼을 부르신 그리스도님, 이 영혼을 받아들이소서. 천사들이여, 이 영혼을 아브라함의 품안으로 데려가소서. 이 영혼을 받아 지극히 높으신 하느님 앞에 바치소서. 주님, 그에게 영원한 안식을 주소서. 영원한 빛을 그에게 비추소서. 이 영혼을 받아 지극히 높으신 천주 앞에 바치소서.”
+성당에서 <a href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=2992&keyword=%EC%9E%A5%EB%A1%80%EB%AF%B8%EC%82%AC&gubun=01">장례미사</a>가 끝난 후 관을 묘지로 보내기 전에 관에 사제는 성수를 뿌리며 고별식을 거행합니다. 그러면서 다음의 기도를 바칩니다. "하느님의 성인들이여, 오소서. 주님의 천사들이여, 마주 오소서. 이 영혼을 받아 지극히 높으신 하느님 앞에 바치소서. 이 영혼을 부르신 그리스도님, 이 영혼을 받아들이소서. 천사들이여, 이 영혼을 아브라함의 품안으로 데려가소서. 이 영혼을 받아 지극히 높으신 하느님 앞에 바치소서. 주님, 그에게 영원한 안식을 주소서. 영원한 빛을 그에게 비추소서. 이 영혼을 받아 지극히 높으신 천주 앞에 바치소서."
 
 사실 우리가 날아오르는 게 아닙니다.
 팔을 뻗어 성인들과 천사들, 부활하신 주님의 손을 움켜줘야겠습니다. 아멘.
