--- a/_posts/2020/2020-9-13-zabelka.md
+++ b/_posts/2020/2020-9-13-zabelka.md
@@ -13,9 +13,9 @@ gospel_link: m=2&n=147&p=18
 
 ---
 
-빚을 져 보신 적이 있으신가요? 아는 분 중에 채무를 진 분이 계십니다. 그 분에 따르면‚ 채무자로서의 삶은 삶을 사는 게 아니다.‘라고 합니다. 세상 사람들이 모두 자기 빚을 갚으라고 요구하는 사람들처럼 보인다고 합니다. 공포감이 큽니다.
+빚을 져 보신 적이 있으신가요? 아는 분 중에 채무를 진 분이 계십니다. 그 분에 따르면‚ 채무자로서의 삶은 삶을 사는 게 아니다.'라고 합니다. 세상 사람들이 모두 자기 빚을 갚으라고 요구하는 사람들처럼 보인다고 합니다. 공포감이 큽니다.
 
-금전의 빚은 아니더라도 살면서 진 빚이 있습니다. 바로 영혼의 빚입니다. 죄인인 이상 항상 갖고 있습니다. 주님은 밖에서 문을 두드리면서 빚을 갚으라고 요구하시는 채권자로 보일 수도 있습니다. 주님은 심판자이십니다. 우리는 어쩌면 몰래 숨어 있는 죄인일 수도 있습니다. 우리는 "잘못했습니다. 용서해 주십시오.“ 라는 말을 하기에 어려움을 느낍니다. 뉘우치지 않았기 때문입니다.
+금전의 빚은 아니더라도 살면서 진 빚이 있습니다. 바로 영혼의 빚입니다. 죄인인 이상 항상 갖고 있습니다. 주님은 밖에서 문을 두드리면서 빚을 갚으라고 요구하시는 채권자로 보일 수도 있습니다. 주님은 심판자이십니다. 우리는 어쩌면 몰래 숨어 있는 죄인일 수도 있습니다. 우리는 "잘못했습니다. 용서해 주십시오." 라는 말을 하기에 어려움을 느낍니다. 뉘우치지 않았기 때문입니다.
 
 8/15 집회 이후에 우리 나라는 어려운 시기를 갖고 있습니다. 그 대규모 집회에 대해 사과를 한 사람이 있나요? 없습니다. 그에 대해 뉘우치지 않았고, 책임지지 않으려 하기 때문입니다. 코로나 위기같이 어려운 시기에 파업을 한 의사들 중에 사과를 한 사람이 있나요? 없습니다. 뉘우치지 않고 책임지지 않으려 하기 때문입니다. 어찌보면 우리 가운데 죄인이 없는 것 같아 보입니다. 용서를 구하고 책임을 지려는 사람이 없어 보입니다.
 
@@ -32,6 +32,6 @@ gospel_link: m=2&n=147&p=18
 
 오늘 복음의 앞부분은 기꺼이 용서를 해주라고 하십니다. 그러나 뒷부분에는 임금님의 이야기가 나옵니다. 그 임금님은 자기의 종을 벌하게 됩니다. 왜 그럴까요? 그 종은 '용서'라는 것의 가치를 모르고 그냥 이용해 버렸기 때문입니다. 임금님은 은총을 그에게 주시지 않습니다.
 
-우리가 누군가를 용서해줬을 때 그가 용서를 '이용'하면 자비가 아니라 '정의‘를 실현해야 합니다.
+우리가 누군가를 용서해줬을 때 그가 용서를 '이용'하면 자비가 아니라 '정의'를 실현해야 합니다.
 
 사도 바오로는 고린도 교회 사람들에게 자비와 정의의 관계를 설명해줍니다. 그리스도인들은 우리의 영혼 뿐만 아니라 타인의 영혼도 고려해야 합니다. 그가 죄에 빠지지 않도록 큰 자비를 베푸시되 그 자비를 이용하는 사람이 있다면 정의에 호소하십시오. 아멘.
