--- a/_posts/2021/2021-11-28-3300.md
+++ b/_posts/2021/2021-11-28-3300.md
@@ -20,7 +20,7 @@ tags: 대림
 
 미사 시작 때에 말씀 드렸듯이 대림은 알파와 오메가, 시작과 끝을 의미합니다. 요즘 여러분들은 종말의 분위기를 느끼지 않으신가요? 특히 요즘 코로나 시대로 인해 그러한 분위기를 많이들 느끼실 것입니다. 코로나로 인해 돌아가시는 나이가 평균 86세라고 합니다. 어르신들은 공포감을 느끼십니다. 우리 사회 안에 존재하는 구체적인 형태가 아닌가 싶습니다.
 
-‘백신을 맞아야 한다, 아니다.’ 라는 주제로 갈등을 빚고, 병에 걸리면 민폐를 끼치는 것 같아 고개를 숙이는 반면, 다른 사람들은 병에 걸린 사람들을 질타를 합니다. 가정 내에서도 ‘백신을 맞아야 하나, 말아야 하나’ 여부를 놓고 다투기도 합니다. 오늘날 우리는 전쟁 이후 분열을 맞이하고 있습니다. 여러분들 주변에도 그러한 분들이 많으실지 모르겠지만 저의 주변에는 확실히 있습니다.
+'백신을 맞아야 한다, 아니다.' 라는 주제로 갈등을 빚고, 병에 걸리면 민폐를 끼치는 것 같아 고개를 숙이는 반면, 다른 사람들은 병에 걸린 사람들을 질타를 합니다. 가정 내에서도 '백신을 맞아야 하나, 말아야 하나' 여부를 놓고 다투기도 합니다. 오늘날 우리는 전쟁 이후 분열을 맞이하고 있습니다. 여러분들 주변에도 그러한 분들이 많으실지 모르겠지만 저의 주변에는 확실히 있습니다.
 
 성당을 운영하는 차원에서 정말 조심할 수 밖에 없습니다. 사회 분위기가 종말이 다가올 때 나오는 현상을 환기시켜 주는 듯 합니다. 어떠한 통계를 보았는데 슬프게도 이전에 낙태 아이의 숫자가 한해에 5000만 명이라고 했다면 <a href="https://www.worldometers.info/abortions/#:~:text=According%20to%20WHO%2C%20every%20year,around%2073%20million%20induced%20abortions.">최근에는 한 해에 7000만 명이라고 합니다.</a> 너무나도 슬픈 일입니다.
 
