--- a/_posts/2021/2021-12-25-fire.md
+++ b/_posts/2021/2021-12-25-fire.md
@@ -21,13 +21,13 @@ tags: 성탄
 
 지난 시간 동안 우리가 잃은 것은 우리의 목숨이 아니라 인간의 인간됨을 잃어버린 것입니다. 우리 공동체에서 코로나로 죽은 사람은 없었습니다. 3년 전에 미사를 드릴 때에는 470명이 왔었고 성당이 꽉 찼었습니다. 그러나 어제에는 250명이 왔었습니다. 거의 절반이었습니다. 나머지 250명은 어디에 갔는지요? 어디에서 주님을 경배하고 계시는지 궁금할 뿐입니다. 악마가 세례 받은 신자의 반을 가져가 버린 것입니다.
 
-코로나 이후 두번째 성탄을 거행하면서 인간이라는 조건에 대해서 생각해 보았습니다. ‘경배하지 않는 인간이, 무릎 꿇지 않는 인간이 인간일 수 있는가.’ 라고 말입니다. 우리는 성탄시기에 서로 기뻐하면서도 생각해 봐야 하겠습니다.
+코로나 이후 두번째 성탄을 거행하면서 인간이라는 조건에 대해서 생각해 보았습니다. '경배하지 않는 인간이, 무릎 꿇지 않는 인간이 인간일 수 있는가.' 라고 말입니다. 우리는 성탄시기에 서로 기뻐하면서도 생각해 봐야 하겠습니다.
 
 여러분 선물 많이 주고 받으셨나요? 저는 꽤 받았습니다. 저는 성탄 때 선물들을 받으면 카드들은 읽고 사무실에 놓고 음식은 사제관 주방에 전시해 놓고 크리스마스 제대를 차립니다. 보고 있으면 뿌듯합니다. 그리고 12월 21일부터 제대 위에 놓은 음식들을 먹기 시작합니다. 12월 21일부터 카톨릭 전례가 새로 시작되고 기도 양식도 바뀌기 때문입니다.
 
 그런데 이번 12월 21일에는 너무 바빠서 하나도 먹지 못하고 일을 마친 후 집에 와서 밤 10시에 음식을 먹었습니다. 그런데 배가 아프기 시작하더니 식중독 수준으로 11년 만에 처음으로 배앓이를 하였습니다. 버섯이 문제였던 것이죠. 그래서 22일도 누워 지내고 23일도 누워 지냈는데, 한 사목위원과 통화할 일이 있어서 통화하는 중에 이러한 저의 상황을 이야기하니 그 위원이 그럴 때에는 Schnaps를 마시는 거라고 하더군요. 그래서 Schnaps를 마셨는데 숨이 트이는 느낌을 받았습니다. 그 뒤 24일에 무사히 성탄 전야 미사를 드릴 수 있었습니다.
 
-제가 아픈 동안 성탄미사를 드리지 못하면 어쩌나 하는 불안에 시달려서 누워 있어도 누워 있는 것이 아니었습니다. 그 가운데 ‘아 독한 게 있어야 하는 구나.’ 라는 생각이 들었습니다. 균들을 죽이는 독한 술, 그 술은 몸을 정화시키고 사람을 살려주는 것입니다.
+제가 아픈 동안 성탄미사를 드리지 못하면 어쩌나 하는 불안에 시달려서 누워 있어도 누워 있는 것이 아니었습니다. 그 가운데 '아 독한 게 있어야 하는 구나.' 라는 생각이 들었습니다. 균들을 죽이는 독한 술, 그 술은 몸을 정화시키고 사람을 살려주는 것입니다.
 
 오늘 복음에서 주님은 한 처음에 하느님과 계셨던 말씀이라고 하십니다. 이것은 무슨 말씀일까요? 칼 같이 날카로워 살과 뼈를 꿰뚫는 그 말씀은 빛입니다. 그 빛은 어둠 속에 비쳐 세상 속에 왔고
 그것은 우리를 비춰줍니다. 말씀은 창과 살과 같은 빛이고 날카로운 빛입니다. 또한 그 말씀은 불입니다. 그 불은 여러 분들 안에 있는 잘못들을 태워버릴 것입니다. 여러분들을 정화시킬 것입니다. 이 빛에 여러분들을 열어야 합니다. 그 빛에 여러분들의 잘못들이 드러나서 절망스럽거나 실망스러울 수도 있습니다.
