--- a/_posts/2021/2021-5-9-cpr.md
+++ b/_posts/2021/2021-5-9-cpr.md
@@ -29,6 +29,6 @@ gospel_link: m=2&n=150&p=15
 
 우리가 선택을 한다는 것은 자유의 실현입니다. 그런데 우리의 선택이 항상 옳고 존중 받아야 하는 것일까요? 우리의 선택이 옳고 존중받아야 한다는 말은 악마가 하는 말일 수도 있지 않을까요? 우리가 사는 세상은 하느님의 섭리에 반하는 선택을 존중하기도 합니다.
 
-얼마 전에 백신 접종이 가능하기에 어느 날 낮에 사이트에 들어가서 등록을 하는데 성별을 선택하는 칸에 남자, 여자 그리고 andere(other, 기타)가 있어서 황당하였습니다. 왜 andere라는 선택을 해 놓았을 까요? 이것은 심지어 성별도 선택할 수 있다고 생각하는 것입니다. ‘네 선택을 존중해’라는 말은 ‘그것은 네 결정이니 나는 책임지지 않을거야.’의 다른 표현인 것입니다.
+얼마 전에 백신 접종이 가능하기에 어느 날 낮에 사이트에 들어가서 등록을 하는데 성별을 선택하는 칸에 남자, 여자 그리고 andere(other, 기타)가 있어서 황당하였습니다. 왜 andere라는 선택을 해 놓았을 까요? 이것은 심지어 성별도 선택할 수 있다고 생각하는 것입니다. '네 선택을 존중해'라는 말은 '그것은 네 결정이니 나는 책임지지 않을거야.'의 다른 표현인 것입니다.
 
 예수님은 요구가 많습니다. 귀찮을 수도 있습니다. 그러나 예수님은 자기의 뜻도 있으나 아버지의 뜻이 이루어지도록 기도하는 분입니다. 혼란한 세상에는 진실한 친구가 필요합니다. 주님은 벗을 위해 목숨을 바치는 친구입니다. 오늘 세례를 받는 박진우 요한도 진실된 친구인 예수님을 따라 훌륭한 제자가 되기를 진심으로 기도합니다.
