--- a/_posts/2022/2022-2-13-prolife.md
+++ b/_posts/2022/2022-2-13-prolife.md
@@ -17,7 +17,7 @@ gospel_link: m=2&n=149&p=6
 
 그러니 신비 중 하나가 행복입니다. 우리는 가련한 존재입니다. 우리가 뭔지도 모르는 것을 추구하며 살기 때문입니다. 그러나 행복합니까? 네 행복합니다. 우리가 행복하다는 것을 증명해 보이겠습니다.
 
-어떤 사람이 여러분에게 와서 ‘당신이 50년 전 2월 13일에 어디에 있었는지 기억하시오.’하고 요구합니다. 저는 지난 주 일요일에 무엇을 먹었는지 기억이 잘 나지 않습니다. 여러분들은 기억하시나요? 그런데 그 사람은 50년 전 당신은 어디에 있었고 범죄에 가담했다고 이야기를 한다면, 여러분은 당황하실 것입니다. 그러나 이런 상황이 실제로 우리가 살고 있는 이 시대에 일어나고 있습니다.
+어떤 사람이 여러분에게 와서 '당신이 50년 전 2월 13일에 어디에 있었는지 기억하시오.'하고 요구합니다. 저는 지난 주 일요일에 무엇을 먹었는지 기억이 잘 나지 않습니다. 여러분들은 기억하시나요? 그런데 그 사람은 50년 전 당신은 어디에 있었고 범죄에 가담했다고 이야기를 한다면, 여러분은 당황하실 것입니다. 그러나 이런 상황이 실제로 우리가 살고 있는 이 시대에 일어나고 있습니다.
 
 언론인이 94세가 된 베네딕토 교황에게 50년 전 어디에 있었는지 물었습니다. 94세가 된 베네딕토 교황님은 잘 기억을 하지 못하셨겠죠. 그러자 그 언론인은 교황님을 비웃고 범죄에 가담했다고 몰아세우며 교황이었던 사람도 이렇다고 조롱하였습니다.
 
@@ -35,9 +35,9 @@ gospel_link: m=2&n=149&p=6
 
 이런 세상 안에서 우리가 슬퍼할 수 있는 것은 건전한 이성을 갖고 있기 때문입니다. 건전한 정신을 갖고 있기 때문에 이렇게 슬퍼하고, 아파할 수 있는 것입니다. 안쓰러운 마음이 안에 있을 줄 압니다.
 
-‘그러면 신부님이 정상인 것을 어떻게 아십니까?‘ 하고 누가 물어본다면 저는 이렇게 말합니다. ‘저는 여태껏 제가 말한 것을 틀릴 수도 있다는 것을 알기 때문에 저는 정상입니다.‘ 라고요. 미친 사람은 자기가 항상 옳다고 합니다.
+'그러면 신부님이 정상인 것을 어떻게 아십니까?' 하고 누가 물어본다면 저는 이렇게 말합니다. '저는 여태껏 제가 말한 것을 틀릴 수도 있다는 것을 알기 때문에 저는 정상입니다.' 라고요. 미친 사람은 자기가 항상 옳다고 합니다.
 
-요즘 ‘교회의 위기다, 신앙의 위기이다‘ 등의 말들을 많이 합니다. 그러나 더 큰 위기가 있습니다. 그것은 바로 이성의 위기입니다. 이성의 위기가 닥치면 자연히 교회의 위기가 따라오게 됩니다. 위험한 사람은 생각을 하지 않는 사람입니다.
+요즘 '교회의 위기다, 신앙의 위기이다' 등의 말들을 많이 합니다. 그러나 더 큰 위기가 있습니다. 그것은 바로 이성의 위기입니다. 이성의 위기가 닥치면 자연히 교회의 위기가 따라오게 됩니다. 위험한 사람은 생각을 하지 않는 사람입니다.
 
 점점 더 많은 사람이 생각하는 법을 잃어버리고 있습니다. Netflix 구독자 수가 많아질수록 생각하는 법을 잃어버리는 사람들도 많아질 것입니다. 우리가 이런 문화들을 접할수록 생각을 해야 합니다. 우리도 이성을 구해야 겠습니다. 아멘.
 
