--- a/_posts/2022/2022-2-27-beam.md
+++ b/_posts/2022/2022-2-27-beam.md
@@ -27,23 +27,23 @@ image: Domenico_Fetti_-_The_Parable_of_the_Mote_and_the_Beam.jpg
 있게 되면 우리 각자를 불편하게 하는 것이 있음을 깨닫게 됩니다. 우리를 불편하게
 하는 것이 우리의 내면에 있다는 걸 알고 계신지요? 여러분들은 알고 계실 줄을 압니다.
 
-여러분 내면에 있는 ‘그 무엇’이 여러분을 불편하게 만드는데, 현대 문화는 그 불편함을
+여러분 내면에 있는 '그 무엇'이 여러분을 불편하게 만드는데, 현대 문화는 그 불편함을
 잊을 수 있는 요소들을 제공합니다. 예를 들어 넷플릭스, 술, 마약 등이 있죠. 그들은
 무한정 제공을 합니다. 우리가 불편함을 느끼는 게 정상인데 현대 문화는 그것을
 무감각하게 만들어 버리고 그 불편함을 잊고 살게 합니다.
 
-그 불편함에 대한 또 다른 해결책의 하나는 소위 ‘치유자’를 찾으러 가게 합니다.
+그 불편함에 대한 또 다른 해결책의 하나는 소위 '치유자'를 찾으러 가게 합니다.
 
 제가
 어느 날 TV 프로를 보고 있었는데 그 프로가 끝난 후에 유튜브 채널에서 어떤 할머니가
-무지개 색 옷을 입고 ‘마음이 힘들면 자기를 찾아오라.’고 광고를 하더군요.
-스위스에서는 이와 같은 ‘스위스 무당’들이 굉장히 성행을 하고 있는데 많은 이들은 그
+무지개 색 옷을 입고 '마음이 힘들면 자기를 찾아오라.'고 광고를 하더군요.
+스위스에서는 이와 같은 '스위스 무당'들이 굉장히 성행을 하고 있는데 많은 이들은 그
 사람들을 찾아 가기도 합니다. 그러나 그들은 눈에 티가 있어서 불편함을 느낄 때 티를
 빼주는 것이 아니라 눈을 빼버립니다. 영혼을 빼앗아 버리기 때문에 아픈 것 조차
 모르게 됩니다.
 
 한편 우리는 한국 문화 속에서 불교 문화가 있습니다. 인간은 고통에
-이르고 고행을 하다 보면 도에 이른다는 ‘<a href="https://ko.wikipedia.org/wiki/%EC%82%AC%EC%84%B1%EC%A0%9C">고집멸도(苦集滅道)</a>’를 이야기 합니다. 여기에서 ‘멸(滅)’은
+이르고 고행을 하다 보면 도에 이른다는 '<a href="https://ko.wikipedia.org/wiki/%EC%82%AC%EC%84%B1%EC%A0%9C">고집멸도(苦集滅道)</a>'를 이야기 합니다. 여기에서 '멸(滅)'은
 자기를 소멸시켜 버리는 것을 의미합니다. 아예 자기를 없애 버리는 것이죠. 스님들은
 결혼하지 않습니다. 왜냐하면 결혼하여 자식을 낳으면 고생을 하기 때문에 자기 선에서
 끊어버리는 의미로 혼인을 하지 않습니다.
@@ -54,8 +54,8 @@ image: Domenico_Fetti_-_The_Parable_of_the_Mote_and_the_Beam.jpg
 
 그러나 오늘날 우리는
 들보를 갖고 있는 것을 당연하게 생각합니다. 여러분들 가운데 스위스 친구들
-가운데에서도 남자가 외도를 하거나 바람을 피우는 경우를 보며 ‘그럴 수도 있지,
-새롭게 시작하면 되지.’ 라고 서로 봐줍니다. 이런 비정상적인 것들을 정상적인 것으로
+가운데에서도 남자가 외도를 하거나 바람을 피우는 경우를 보며 '그럴 수도 있지,
+새롭게 시작하면 되지.' 라고 서로 봐줍니다. 이런 비정상적인 것들을 정상적인 것으로
 인정합니다. 법적으로 합리화를 시키기도 합니다. 예를 들어 낙태도 마찬가지 입니다.
 예수님이 만일 우리를 보신다면 얼마나 웃길까요? 서로 엄청 큰 들보를 갖고 있으면서
 서로 정상이라고 인정을 하는 우리들의 모습을 보신다면 말입니다.
