--- a/_posts/2022/2022-4-10-listen.md
+++ b/_posts/2022/2022-4-10-listen.md
@@ -17,7 +17,7 @@ gospel_link: m=2&n=149&p=22
 
 대신 사람들이 대부분 말을 하고 그 가운데 다툼, 분노 등이 담겨 있습니다. 저는 사제로 살아가면서 제가 이끄는 공동체 혹은 저의 동료들이 이끄는 공동체를 보면 많은 것을 느끼게 됩니다. 사람들이 말하기 시작할 때 그리고 예수님께 필요한 것만 말하라고 할 때 공동체가 흔들리는 것을 많이 보게 됩니다.
 
-그런데 그와 달리 우리 공동체는 대단히 모범적입니다. 자기 목소리를 높여가며 주장을 관철하는 경우가 없습니다. 예수님을 못박지 않고 예수님을 섬기는 공동체인 것입니다. 성지 주일을 되새기며 예수님께 침묵을 요구하기 보다는 예수님의 말을 듣는 공동체, 즉 듣는 공동체가 우리가 지향해야 할 모습입니다. ‘듣다’ 가 라틴어로 ’obedientia’ 입니다. 이것은 순종이란 뜻입니다. 우리가 좋은 계획을 추진하고 성과를 이루기 보다는 주님의 말씀을 잘 들어야 하겠습니다.
+그런데 그와 달리 우리 공동체는 대단히 모범적입니다. 자기 목소리를 높여가며 주장을 관철하는 경우가 없습니다. 예수님을 못박지 않고 예수님을 섬기는 공동체인 것입니다. 성지 주일을 되새기며 예수님께 침묵을 요구하기 보다는 예수님의 말을 듣는 공동체, 즉 듣는 공동체가 우리가 지향해야 할 모습입니다. '듣다' 가 라틴어로 'obedientia' 입니다. 이것은 순종이란 뜻입니다. 우리가 좋은 계획을 추진하고 성과를 이루기 보다는 주님의 말씀을 잘 들어야 하겠습니다.
 
 여러분은 넷플릭스를 안보시죠? 저는 봅니다. 그런데 휴가 3주 간 넷플릭스를 보려고 하면 1주일만 보면 더 이상 볼 것이 없습니다. 그 수많은 드라마들이 재미가 없습니다.
 
