--- a/_posts/2023/2023-2-12-homily.md
+++ b/_posts/2023/2023-2-12-homily.md
@@ -45,8 +45,8 @@ gospel_link: m=2&n=147&p=5
 우리가 어떤 것을 넘어서기 위해서는 그것을 절실히 갈구했던 시간이 선행되어야 합니다.
 따라서 마이너스의 단계를 겪은 자만이 플러스의 삶을 추구합니다.
 같은 원리에 따라 고통을 겪었던 이들 안에서 비로소 삶을 살려는 열정이 생겨나는 겁니다.
-‘고통’은 라틴어로 <a href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=1950&keyword=passio&gubun=01">passio</a>입니다.
-이 단어는 동시에 ‘열정’을 뜻합니다. 우연이 아니라고 생각합니다.
+'고통'은 라틴어로 <a href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=1950&keyword=passio&gubun=01">passio</a>입니다.
+이 단어는 동시에 '열정'을 뜻합니다. 우연이 아니라고 생각합니다.
 
 단, 모든 고통이 우리에게 열정을 가져다주는 것은 아닙니다.
 <a href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=2915&keyword=%EC%9D%B8%EA%B0%84%ED%95%99&gubun=01">그리스도교 인간학</a>은 고통을 두 가지로 구분합니다.
