--- a/_posts/2023/2023-2-26-homily.md
+++ b/_posts/2023/2023-2-26-homily.md
@@ -23,10 +23,10 @@ tags: 사순
 감각적 만족에 대한 큰 관심은 정신을 흐리게 만듭니다. 정신이 흐리니 일처리가 원만하지 못할 수밖에 없습니다.
 말씀 드린 바와 같이 다른 종류의 어리석음이 있습니다. 간교함입니다. 이 아둔한 사람과는 달리 부지런하게 움직여 일처리를 잘 하면서 능력을 과시합니다.
 때로는 다른 사람을 이용하기도 합니다. 하지만 어리석습니다. 왜 그럴까요? 그것은 이 사람은 자기만 알고 다른 것은 모르기 때문입니다.
-이렇게 혼자 잘난 줄 아는, 간교한 어리석음의 원인을 토마스는 ‘인색함’이라고 말합니다. 이는 자기 자신에 대한 과도한 사랑을 말하는 겁니다.
+이렇게 혼자 잘난 줄 아는, 간교한 어리석음의 원인을 토마스는 '인색함'이라고 말합니다. 이는 자기 자신에 대한 과도한 사랑을 말하는 겁니다.
 
-오늘 제 1 독서에서 하와가 뱀의 유혹에 빠져 금단의 열매를 바라보니까 그것이 “먹음직하고 소담스러워 보였다”고 합니다.
-감각적 황홀함, 색이 그녀의 오감을 지배하기 시작하는 겁니다. 그 후 그 열매가 그녀를 “슬기롭게 해 줄 것처럼” 탐스럽게 보였다고 합니다.
+오늘 제 1 독서에서 하와가 뱀의 유혹에 빠져 금단의 열매를 바라보니까 그것이 "먹음직하고 소담스러워 보였다"고 합니다.
+감각적 황홀함, 색이 그녀의 오감을 지배하기 시작하는 겁니다. 그 후 그 열매가 그녀를 "슬기롭게 해 줄 것처럼" 탐스럽게 보였다고 합니다.
 이제는 남들보다 뛰어나고 싶은, 심지어는 하느님처럼 되고 싶은 간교함이 동하는 겁니다.
 결국 하와는 이 욕망들을 받아들입니다. 그래서 열매를 먹고 남편에게도 건네주어 둘 다 어리석게 됩니다. 그 결과 눈이 어두워지고, 본인들이 <a href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=3857&keyword=%EB%AA%A8%EC%83%81&gubun=01">하느님의 모상</a>이라는 것을 볼 수 없게 됩니다. 이제는 그들의 육체에만 시선을 돌려 부끄러워하게 되는 겁니다. 이렇게 인류의 타락은 어리석음에 빠지는 형식으로 일어났습니다. 이런 타락을 우리는 원죄라고 부릅니다.
 
@@ -39,12 +39,12 @@ tags: 사순
 색과 자기 자신에 대한 애착에 빠트려 어리석게 만들려는 겁니다. 물론 실패로 끝납니다. 그렇다면 악마는 이제 조용히 있나요? 아닙니다.
 여전히 부지런히 사람들을 힘과 권력, 재물과 쾌락으로 유혹하고 있습니다. 그리고 많은 사람들이 그 유혹에 넘어갑니다.
 
-‘부탄’이라는 나라를 아시나요? 행복도 조사를 하면 가장 행복한 나라로 꼽히던 곳이었습니다. <a href="https://news.koreadaily.com/2022/06/05/society/opinion/20220605154904763.html">그런데 얼마 전 인터넷을 보니까 이 나라가 70위권 밖으로 밀려났다고 하더군요.</a>
+'부탄'이라는 나라를 아시나요? 행복도 조사를 하면 가장 행복한 나라로 꼽히던 곳이었습니다. <a href="https://news.koreadaily.com/2022/06/05/society/opinion/20220605154904763.html">그런데 얼마 전 인터넷을 보니까 이 나라가 70위권 밖으로 밀려났다고 하더군요.</a>
 나라 자체에는 아무것도 변한 게 없다고 합니다. 변한 게 있다면 그 사이 부탄에 인터넷이 보급되었다는 겁니다. 다른 사람들이 얼마나 잘 사는지, 즐기며 사는지를 보게 된 겁니다.
 그리고 그 화려함에 넘어가 행복하던 사람들이 불행한 사람들로 변한 겁니다. 에덴과도 같았던 그 곳이 이제는 탈출하고 싶은 장소가 되었습니다.
 
 그렇다면 유혹을 이길 수 있는 방법이 있을까요? 저는 특별한 방법을 알고, 또 사용하고 있습니다. 저라고 왜 세상 좋은 것들 다 갖고 즐기고, 보란 듯이 살고 싶은 마음이 왜 없겠습니까?
-그런데 그런 유혹이 들 때 저는 “하느님, 감사합니다.”라고 말합니다. 그러면 유혹들이 안개처럼 사라집니다. 왜 그런지는 설명할 수 없습니다. 하지만 통합니다.
+그런데 그런 유혹이 들 때 저는 "하느님, 감사합니다."라고 말합니다. 그러면 유혹들이 안개처럼 사라집니다. 왜 그런지는 설명할 수 없습니다. 하지만 통합니다.
 여러분도 유혹에 빠질 것 같으면 한 번 사용해 보시기 바랍니다. 우리가 유혹의 극복에 적극적으로 나서지 않으면 하느님이 나서실 겁니다.
 
 어머니가 젊으셨을 때였습니다. 주일인데 겨울이라 날씨가 춥고 눈도 내려 미사에 가지 않고 따뜻한 방에서 누워 계셔 잠이 드셨습니다.
