--- a/_posts/2021/2021-11-14-sos.md
+++ b/_posts/2021/2021-11-14-sos.md
@@ -22,14 +22,14 @@ gospel_link: m=2&n=148&p=13
 
 주님은 (오늘 제1독서) 다니엘 예언서처럼 생명의 책을 들고 오실 것입니다. 그 책에는 세례를 통해, 성체 성사를 통해 주님의 자녀가 된 사람들의 이름이 적혀져 있습니다. 만일 주님의 일에 소홀해져 있다면 그 이름이 흐려져 있을 수도 있습니다. 그렇다면 오직 회개만이 그 이름을 다시 진하게 남아 있게 해 줄 것입니다. 성인의 삶을 사셨던 <a href="https://www.vaticannews.va/ko/vatican-city/news/2022-12/benedetto-xvi-dio-amore-editoriale-tornielli.html">베네딕토 16세 교황님</a>조차도 생애를 뒤돌아보면서 주님의 심판이 얼마나 두려운지 신앙적으로 잘 표현하지 못한 아쉬움에 대해서 말씀하셨다고 합니다.
 
-<a href="https://en.wikipedia.org/wiki/G._K._Chesterton">체스터톤</a>을 아시나요? 그 사람은 영국 작가인데 독자들에게 다음과 같은 질문을 하였습니다. «여러분이 어떤 배를 타고 가는데, 그 배가 난파된 후 어떤 섬에 홀로 있게 된다면 어느 책을 지니고 싶으신가요?» 성경, 혹은 고전 문학을 선택하시겠습니까? 그런데 그 체스터톤이란 작가는 «나라면 배를 만드는 법에 대한 책을 갖겠다.» 고 말했습니다. 위기에 처했을 때
+<a href="https://en.wikipedia.org/wiki/G._K._Chesterton">체스터톤</a>을 아시나요? 그 사람은 영국 작가인데 독자들에게 다음과 같은 질문을 하였습니다. "여러분이 어떤 배를 타고 가는데, 그 배가 난파된 후 어떤 섬에 홀로 있게 된다면 어느 책을 지니고 싶으신가요?" 성경, 혹은 고전 문학을 선택하시겠습니까? 그런데 그 체스터톤이란 작가는 "나라면 배를 만드는 법에 대한 책을 갖겠다." 고 말했습니다. 위기에 처했을 때
 일단 살고 봐야 하는 것이 아닐까요?
 
 때로는 이론이 아무 소용 없고 실전이 필요한 때가 있습니다. 최후의 심판의 때가 그 때일 듯 싶습니다. 오직 실전이 필요한 순간일 것입니다. 실전이 무엇인지 알려드리겠습니다.
 
-보통 우리는 초등학교 혹은 국민학교에서 수업이 끝난 후 청소를 하였습니다. 청소 후 친구 하나가 선생님이 오는지 망을 보고 선생님이 오시면 «선생님 오신다!» 하면서 알려주었습니다. 그러면 우리는 조용히 있으면서 선생님을 기다리고 있었습니다. 선생님이 교실로 오시면 최후의 심판이 이루어졌죠. 선생님께서 «누가 여기 바닥 청소 했어?» 물으시면 누군가가 손을 들고 «제가 했습니다..» 대답을 하였고 선생님이 보시고 잘 되어 있으면 잘 했으니 집에 가라고 하셨습니다.
+보통 우리는 초등학교 혹은 국민학교에서 수업이 끝난 후 청소를 하였습니다. 청소 후 친구 하나가 선생님이 오는지 망을 보고 선생님이 오시면 "선생님 오신다!" 하면서 알려주었습니다. 그러면 우리는 조용히 있으면서 선생님을 기다리고 있었습니다. 선생님이 교실로 오시면 최후의 심판이 이루어졌죠. 선생님께서 "누가 여기 바닥 청소 했어?" 물으시면 누군가가 손을 들고 "제가 했습니다.." 대답을 하였고 선생님이 보시고 잘 되어 있으면 잘 했으니 집에 가라고 하셨습니다.
 
-저는 한번은 쓰레기통을 비우고 안쪽까지 다 닦았어야 하는 쓰레기통 담당이었는데 대충 쓰레기만 버리고 닦지 않았습니다. 선생님께서 쓰레기통을 보시고 «쓰레기통 청소 안했지?» 물으셨고 저는 «했어요.» 라고 대답했습니다. 몇 번이나 같은 대화가 오갔던 것 같습니다. 제가 보기에는 그럴 듯 해보이게 청소를 했었지만 선생님이 보시기에는 아니었던 것입니다. 결국 선생님께서는 «영덕아. 한달 동안 쓰레기통 청소를 해라.» 라고 하셨습니다.
+저는 한번은 쓰레기통을 비우고 안쪽까지 다 닦았어야 하는 쓰레기통 담당이었는데 대충 쓰레기만 버리고 닦지 않았습니다. 선생님께서 쓰레기통을 보시고 "쓰레기통 청소 안했지?" 물으셨고 저는 "했어요." 라고 대답했습니다. 몇 번이나 같은 대화가 오갔던 것 같습니다. 제가 보기에는 그럴 듯 해보이게 청소를 했었지만 선생님이 보시기에는 아니었던 것입니다. 결국 선생님께서는 "영덕아. 한달 동안 쓰레기통 청소를 해라." 라고 하셨습니다.
 
 그 때 저는 우겨도 안되는 때가 있구나를 깨달았습니다. 그 때에는 손을 모으고 무릎을 꿇고 간절히 애원해야 하는 것이었습니다.
 
