--- a/_posts/2021/2021-11-28-3300.md
+++ b/_posts/2021/2021-11-28-3300.md
@@ -24,7 +24,7 @@ tags: 대림
 
 성당을 운영하는 차원에서 정말 조심할 수 밖에 없습니다. 사회 분위기가 종말이 다가올 때 나오는 현상을 환기시켜 주는 듯 합니다. 어떠한 통계를 보았는데 슬프게도 이전에 낙태 아이의 숫자가 한해에 5000만 명이라고 했다면 <a href="https://www.worldometers.info/abortions/#:~:text=According%20to%20WHO%2C%20every%20year,around%2073%20million%20induced%20abortions.">최근에는 한 해에 7000만 명이라고 합니다.</a> 너무나도 슬픈 일입니다.
 
-우리는 과연 하느님을 대면할 때 과연 무엇으로 정당화시킬 수 있을지요? 그러나 우리는 이런 때일수록 주님의 말씀을 새겨야 겠습니다. (오늘 복음에서는) 이런 때일수록 «허리를 펴고 머리를 들어라.» 라고 하십니다. 갈등과 비극을 직시하고 문제를 인식하는 것이 종말을 맞이하는 우리들의 모습이어야 합니다.
+우리는 과연 하느님을 대면할 때 과연 무엇으로 정당화시킬 수 있을지요? 그러나 우리는 이런 때일수록 주님의 말씀을 새겨야 겠습니다. (오늘 복음에서는) 이런 때일수록 "허리를 펴고 머리를 들어라." 라고 하십니다. 갈등과 비극을 직시하고 문제를 인식하는 것이 종말을 맞이하는 우리들의 모습이어야 합니다.
 
 만일 예수님이 구름 타고 다시 오시거든 어디로 오실까요? 답은 교회로 다시 오실 것입니다. 교회는 예수님의 정배이시기 때문입니다. 주님은 우리가 모여 예배하는 곳에 오실 것입니다. 여기서 우리가 예수님을 바라는 마음으로 꼿꼿이 서서 기도합시다. 여러분들 기도 잘 하시나요? 공동체 안에 있으면 잘 기도 할 수 있습니다.
 
