--- a/_posts/2022/2022-09-25-klaus.md
+++ b/_posts/2022/2022-09-25-klaus.md
@@ -25,19 +25,19 @@ image: Seats_inside_a_flight.jpg
 
 스위스로 많은 사람들이 안락사를 받으러 옵니다. 편안한 죽음을
 맞이하러 오는 것입니다. 이런 것들을 접하며 사탄이 아담과 하와를 유혹할 때 한 말이
-떠올랐습니다. «네가 원하는 존재로 될 수 있으니 따먹어라.» 라고 말입니다. 네가
+떠올랐습니다. "네가 원하는 존재로 될 수 있으니 따먹어라." 라고 말입니다. 네가
 원하면 다 가질 수 있다 혹은 다 될 수 있다 하는 이데올로기, 네가 원하면 나을 수
 있다고, 모든 것을 극복할 수 있다고 합니다. 이러한 거짓된 세상을 바라보면 힘듭니다.
 
 <a href="https://www.facebook.com/watch/?v=664602728084589">제가 어느 날 유튜브를 보는데 짧은 클립이 나왔습니다.</a> 그 클립 안에서는 비행기 안에
 창가에 앉은 남자가 창밖을 바라보며 즐겁게 여행을 하고 있었습니다. 그 남자 옆에는
-한 어머니와 딸이 앉아 있습니다. 그런데 딸이 엄마에게 «엄마, 나도 창가에 앉고 싶어.»
+한 어머니와 딸이 앉아 있습니다. 그런데 딸이 엄마에게 "엄마, 나도 창가에 앉고 싶어."
 이야기를 하며 떼를 씁니다. 엄마가 옆에 앉은 남자에게 공손히 부탁을 합니다. 자리를
 바꿔줄 수 있는지 말입니다.
 
-그러자 남자가 이야기 합니다. «그럼요, 바꿔줄 수
+그러자 남자가 이야기 합니다. "그럼요, 바꿔줄 수
 있습니다. 그러나 딸아이가 그 자리에 앉도록 하십시오. 이 세상에는 원하는 것이 다
-이루어지지 않을 수도 있다는 것을 배워야 합니다.» 라고 말입니다.
+이루어지지 않을 수도 있다는 것을 배워야 합니다." 라고 말입니다.
 
 우리는 다행히도 '포기하는 것' 을 배운 세대입니다. 제가 어릴 적 어머니와 함께 시장에
 가면 제가 원하는 것을 다 장바구니에 담을 때 등짝 마사지를 받곤 했었죠. 세상을 실제
