--- a/_posts/2023/2023-3-26-lazarus.md
+++ b/_posts/2023/2023-3-26-lazarus.md
@@ -19,7 +19,7 @@ tags: 사순
 
 우리는 기꺼이 눈물을 흘리려고 할까요? 어떻게 우리가 눈물을 흘리지 않고 그리스도께 진정 호소할 수 있을까요? 마르타는 눈물을 흘리며 예수님께 호소했을 것입니다. 왜 늦게 오셨는지 원망도 했을 테고 큰 슬픔에 눈물을 보였겠죠. 한편 오늘날 우리가 사는 환경은 죽음에 대한 슬픔을 촌스럽다 생각하고 그러한 슬픔을 외면하려는 경향을 보입니다. 그러한 슬픔은 우리 삶에 맞지 않는다 하며 인생은 그냥 즐거워야 한다고 생각하게 합니다. 그런데 그것이 인간의 바른 모습일까요?
 
-제가 독일어권에서 지내는 동안 겪었던 것 중에 한 장례식이 제 기억에 남습니다. 500명 정도 사는 작은 마을에서 한 빵집을 운영하신 한 아주머니가 돌아가셨습니다. 그 장례 미사가 평일인 수요일에 이루어 졌는데 전체 마을 인구 500 명 중에 300 명이 장례식에 왔고 미사를 드리면서 사람들이 처절히 울었습니다. 장례식이 끝난 후 아주머니의 남편분께서 저에게 «굉장히 슬펐다. 그러나 이제 살 것 같다.» 라고 하셨습니다. 독일어권에서 그렇게 운 장례식은 저에게 처음이었습니다. 참으로 사람답게 울었던 것 같습니다. 이렇게 우는 것이 인정이 안되는 상황이 맞을까요? 예수님도 우셨습니다. 슬퍼하며 우는 것이 인정되지 않고 기뻐하기만 해야 하는 것은 참 삶이 아닐 것입니다.
+제가 독일어권에서 지내는 동안 겪었던 것 중에 한 장례식이 제 기억에 남습니다. 500명 정도 사는 작은 마을에서 한 빵집을 운영하신 한 아주머니가 돌아가셨습니다. 그 장례 미사가 평일인 수요일에 이루어 졌는데 전체 마을 인구 500 명 중에 300 명이 장례식에 왔고 미사를 드리면서 사람들이 처절히 울었습니다. 장례식이 끝난 후 아주머니의 남편분께서 저에게 "굉장히 슬펐다. 그러나 이제 살 것 같다." 라고 하셨습니다. 독일어권에서 그렇게 운 장례식은 저에게 처음이었습니다. 참으로 사람답게 울었던 것 같습니다. 이렇게 우는 것이 인정이 안되는 상황이 맞을까요? 예수님도 우셨습니다. 슬퍼하며 우는 것이 인정되지 않고 기뻐하기만 해야 하는 것은 참 삶이 아닐 것입니다.
 
 인생을 살면서 슬픈 순간이 있는지요? 그러면 마음 껏 슬퍼하십시오. 그렇지 않으면 슬픈 상황에서 슬퍼할 수 있는 능력을 잃어 버리고 그저 즐거워야만 하는 광대로 살아가게 됩니다. 마르타처럼, 예수님처럼 우리는 기꺼이 울 수 있어야 하겠습니다. 아멘.
 
