--- a/_posts/2021/2021-5-23-mary.md
+++ b/_posts/2021/2021-5-23-mary.md
@@ -18,12 +18,12 @@ gospel_link: m=2&n=150&p=20
 
 예수님이 제자들을 처음 만나셨을 때 하신 말씀이 <a href="https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=148&p=1">마르코 1장 17절</a>에 따르면 '내 뒤로 오너라. 그리고 나를 따라라.' 였습니다. 그러나 이제는 마지막 하신 말씀이 <a href="https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=147&p=28">마태오 28장 19절</a>에 따르면 '가거라.' 라고 말씀하십니다. <a href="https://maria.catholic.or.kr/mobile/bible/read/bible_read.asp?m=2&n=150&p=20">요한복음</a>에서는 '나는 너희를 보낸다.' 라고 말씀 하십니다. 성령을 받았는지 못 받았는지의 잣대가 있습니다. 이는 <a href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=3737&keyword=%ED%8C%8C%EA%B2%AC&gubun=01">파견</a>된 삶을 사는가, 내가 예수님을 <a href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=7247&keyword=%EC%84%A0%ED%8F%AC&gubun=04">선포</a>하는 깨어 있는 삶을 사는가 아니면 끌려가는 삶을 사는가 입니다.
 
-오늘 복음에서, 주님은 제자들에게 «성령을 받아라. 너희가 용서하면 용서를 받을 것이고 아니면 그대로 남아 있을 것이다.» 라고 말씀하셨습니다. 주님이 성령을 받아라 하셨지만 제자들은 아직 받지 못했습니다. 여드레가 지나서도 문을 잠궈놓고 두려워하고 있었습니다. 그러나 주신다고 다 받는 것이 아닙니다. 준비가 되어 있어야 받을 수 있습니다. 제자들은 «예.» 라고 답하지 않았습니다. 답이 없으면 못 받습니다.
+오늘 복음에서, 주님은 제자들에게 "성령을 받아라. 너희가 용서하면 용서를 받을 것이고 아니면 그대로 남아 있을 것이다." 라고 말씀하셨습니다. 주님이 성령을 받아라 하셨지만 제자들은 아직 받지 못했습니다. 여드레가 지나서도 문을 잠궈놓고 두려워하고 있었습니다. 그러나 주신다고 다 받는 것이 아닙니다. 준비가 되어 있어야 받을 수 있습니다. 제자들은 "예." 라고 답하지 않았습니다. 답이 없으면 못 받습니다.
 
 반면, 이 복음의 시작에 성령을 '예' 하고 받은 사람이 있었습니다. 바로 '성모님' 입니다. 14세 정도 되는 소녀가 앞으로 자신에게 닥칠 운명을 듣고 '예.' 라고 대답했습니다. 그 뒤로 성령님을 통해 예수님을 잉태하셨습니다.
 
-우리는 성령강림 대축일에 성모님의 모습을 닮아야 하겠습니다. 성령을 받으라고 할 때 제자들은 왜 «예.» 라고 답하지 못했을까요? 사제들이 서품을 받을 때에 온 몸으로 «예.» 대답을 합니다.
+우리는 성령강림 대축일에 성모님의 모습을 닮아야 하겠습니다. 성령을 받으라고 할 때 제자들은 왜 "예." 라고 답하지 못했을까요? 사제들이 서품을 받을 때에 온 몸으로 "예." 대답을 합니다.
 
 성령을 받는 것은 힘듭니다. 왜 그럴까요? 우리의 삶이 우리만의 것이 아니기 때문입니다. 우리는 그것을 알고 있기 때문에 답을 하지 않고 있고 성령님은 여전히 기다리십니다. 성모님은 '주님의 뜻이 이루어지소서.' 하시고 예수님도 '제 뜻이 아니라 아버지의 뜻이 이루어지게 하소서.' 합니다.
 
-그 대답을 어떻게 할 수 있을까요? 공동체가 함께 답하면 쉽습니다. 제 1 독서, 제 2 독서에 제자들이 모여 성령을 받습니다. «예.» 라고 답하는 것은 공동체를 통해 가능하고 성령님은 공동체를 통해 오십니다. 공동체 안에서 '예.' 답하십시오. 성령님이 이끄실 것입니다. 저는 15 년 전에 '예.' 대답을 하였고 그 뒤로 힘든 일은 많았지만 근본적으로 후회해 본 적이 없습니다. 함께 서품을 받은 성직자들로부터 후회를 들어본 적이 없습니다. 답을 하십시오. 후회하지 않을 것입니다.
+그 대답을 어떻게 할 수 있을까요? 공동체가 함께 답하면 쉽습니다. 제 1 독서, 제 2 독서에 제자들이 모여 성령을 받습니다. "예." 라고 답하는 것은 공동체를 통해 가능하고 성령님은 공동체를 통해 오십니다. 공동체 안에서 '예.' 답하십시오. 성령님이 이끄실 것입니다. 저는 15 년 전에 '예.' 대답을 하였고 그 뒤로 힘든 일은 많았지만 근본적으로 후회해 본 적이 없습니다. 함께 서품을 받은 성직자들로부터 후회를 들어본 적이 없습니다. 답을 하십시오. 후회하지 않을 것입니다.
