--- a/_posts/2021/2021-5-9-cpr.md
+++ b/_posts/2021/2021-5-9-cpr.md
@@ -21,11 +21,11 @@ gospel_link: m=2&n=150&p=15
 
 실제로 있었던 일을 이야기 해드리겠습니다. 요셉이라는 70세 친구가 있습니다. 그 친구가 80년대 중반에 산책을 숲에서 하고 있었던 일입니다. 그 날 유독 햇빛도 좋고 사람도 적었다고 합니다. 2시간 정도 걷는데 저 앞에 있는 나무에 사람이 매달려 있는 것을 보았습니다. 자살을 한 것입니다. 요셉은 서둘러 달려가서 나무에 올라가서 항상 소지하고 있던 스위스 칼로 밧줄을 빨리 끊고 젊은 이를 내려서 심폐소생술을 하였습니다. 이미 밧줄을 끊고 내리는 것까지 이미 너무 지쳤지만 그래도 15분 가량 심폐소생술을 하고 있었고 다행히 숨이 붙어 있어서 희망을 갖고 있었습니다.
 
-그러던 중 다행히 멀리에서 부부로 보이는 남녀가 보여서 빨리 와달라고 불렀는데 이상하게도 천천히 왔다고 합니다. 요셉이 그 남녀에게 심폐소생술을 도와주면 자신이 연락을 취해서 구급차를 부르겠다고 도와달라고 말하였다고 하였습니다. 그러나 그 남녀가 도와주지 않았고 남자가 «나는 돕지 않겠다.»고 말하였다고 합니다. 그러면서 «저 사람이 선택한 건데 존중해야 하지 않겠소?'»하며 이야기 하고 천천히 가버렸다고 하였습니다.
+그러던 중 다행히 멀리에서 부부로 보이는 남녀가 보여서 빨리 와달라고 불렀는데 이상하게도 천천히 왔다고 합니다. 요셉이 그 남녀에게 심폐소생술을 도와주면 자신이 연락을 취해서 구급차를 부르겠다고 도와달라고 말하였다고 하였습니다. 그러나 그 남녀가 도와주지 않았고 남자가 "나는 돕지 않겠다."고 말하였다고 합니다. 그러면서 "저 사람이 선택한 건데 존중해야 하지 않겠소?'"하며 이야기 하고 천천히 가버렸다고 하였습니다.
 
 요셉은 다시 15분 가량 심폐 소생술을 하였으나 그 사람이 사망한 것을 확인하였다고 합니다. 요셉은 너무 슬퍼서 울다가 지쳐 기절을 하였습니다. 깨어나서 보니까 날씨가 너무 화창하였는데 한편으로는 어둡기도 했다고 합니다. 40년 전에 실제로 있었던 일입니다.
 
-이 일에 대해서 더욱 생각을 해보았습니다. 과연 그렇게 지나쳤던 남녀가 지옥에 간다면 어떤 일이 벌어질까요? 악마가 기다리고 있을 것입니다. 남녀는 악마를 보고 따지겠죠. «내가 왜 지옥에 왔느냐?»고 말입니다. 그러면 악마가 대답할 것입니다. "너의 선택이었다."라고요.
+이 일에 대해서 더욱 생각을 해보았습니다. 과연 그렇게 지나쳤던 남녀가 지옥에 간다면 어떤 일이 벌어질까요? 악마가 기다리고 있을 것입니다. 남녀는 악마를 보고 따지겠죠. "내가 왜 지옥에 왔느냐?"고 말입니다. 그러면 악마가 대답할 것입니다. "너의 선택이었다."라고요.
 
 우리가 선택을 한다는 것은 자유의 실현입니다. 그런데 우리의 선택이 항상 옳고 존중 받아야 하는 것일까요? 우리의 선택이 옳고 존중받아야 한다는 말은 악마가 하는 말일 수도 있지 않을까요? 우리가 사는 세상은 하느님의 섭리에 반하는 선택을 존중하기도 합니다.
 
