--- a/_posts/2021/2021-7-25-war.md
+++ b/_posts/2021/2021-7-25-war.md
@@ -21,7 +21,7 @@ gospel_link: m=2&n=150&p=6
 
 대부분의 기대는 실망으로 바뀝니다. 적 그리스도는 끊임없이 사람들에게 기대를 심어줍니다. 인간은 기대와 희망을 먹고 사는 존재입니다. 그래야 인간의 존재를 부정할 수 있기 때문입니다. 많은 수도자들도 기대와 희망을 품고 삽니다. 성북동 수도원에 큰 나무가 있습니다. 그 나무는 얼마나 많은 젊은이들이 들어오고 떠나가는 것을 봤을까 생각이 듭니다. 수도원 생활을 하면서 실망을 하여 떠나는 경우가 있습니다. 떠나는 형제들이 수도원을 나가는 전 날 좋은 식사를 다같이 모여서 합니다. 떠나는 형제들 중 다른 소명을 발견하고 나가는 젊은이도 있고 수도원 생활에 실망을 하여 나가는 젊은이도 있습니다.
 
-인간은 기대를 가지고 있고 그 기대하는 바를 하느님이 이루어 주셔야 한다는 생각을 갖고 있기도 합니다. «하느님은 나에게 이렇게 해주셔야 해..» 라고 말입니다.
+인간은 기대를 가지고 있고 그 기대하는 바를 하느님이 이루어 주셔야 한다는 생각을 갖고 있기도 합니다. "하느님은 나에게 이렇게 해주셔야 해.." 라고 말입니다.
 
 한편 예수님도 여러분들에게 기대를 갖고 계십니다. 그 예수님이 갖고 계시는 기대는 우리가 갖는 기대보다 더 클 수도 있습니다. 오늘 복음에서 사람들은 빵을 주시기를 기대하고 배고픔이 없는 세상을 기대하여 예수님을 왕으로 삼으려고 했으나 예수님은 사라져 버리십니다. 우리가 갖고 있는 기대를 억지로 물리적으로 실행시키려 할 때 예수님은 사라지십니다. 우리의 기대가 너무 크고 그것을 억지로 이루고자 노력을 할 뿐입니다.
 
