--- a/_posts/2022/2022-04-17-mom.md
+++ b/_posts/2022/2022-04-17-mom.md
@@ -35,8 +35,8 @@ closing: "그 먼 곳에서부터 오신 분은 예수 그리스도 이십니다
 시작하신 것입니다. 사실 그런 경우는 많지 않고 특히 스위스에서는 별로 없습니다.
 그러나 제가 프로 아닙니까. 그래서 제가 위로를 하기 시작했습니다. 예수님은 죽었다가
 부활하셨고 등등 말입니다. 그런데도 그 할머니께서 계속 울다가 제가 2분 정도
-이야기하고 나니 울음을 뚝 그치고 «이제 끝이다. 이 사람은 죽었고 그에겐 어둠만이
-있고 이제 끝이다.» 라고 이야기 하셨습니다. 그런데 저는 속으로 당황하였지만 침착히
+이야기하고 나니 울음을 뚝 그치고 "이제 끝이다. 이 사람은 죽었고 그에겐 어둠만이
+있고 이제 끝이다." 라고 이야기 하셨습니다. 그런데 저는 속으로 당황하였지만 침착히
 진정하시라고 위로를 하였습니다.
 
 오늘 복음에서 우리는 비슷한 목소리를 들을 수 있습니다. 여자들이 무덤에 가서
