https://en.wikipedia.org/wiki/Paraclete

--- a/_posts/2023/2023-5-14-homily.md
+++ b/_posts/2023/2023-5-14-homily.md
@@ -18,7 +18,7 @@ gospel_link: m=2&n=150&p=14
 
 세상에는 즉시 답을 찾을 수 없는 커다란 물음이 있습니다. 아마 여러분들도 이런 질문을 품고 계실 것입니다. 성직자의 역할은 소소한 문제들에 답을 주는 게 아니라 이 큰 질문을 품고 있는 이들을 동반하는 것입니다. 그렇게 해서 그들이 찾고 있는 그 궁극적인 답에 함께 도달하는 것입니다. 즉각적인 답을 찾고 싶으신가요? 그러면 주변 사람들에게 물어보시면 됩니다. 영원한 답을 찾고 계신가요? 그러면 저희에게 오십시오. 영원하고 완벽한 답이신 그리스도께 함께 걸어갑시다.
 
-오늘 복음에서 주님은 당신의 영, 즉 성령을 보내시겠다고 약속하시며 그분을 보호자라고 칭하십니다. 그리스어로는 Paracletos입니다. 이 명사는 παρακαλεῖν이라는 그리스어 동사에서 파생되었습니다. 옆에 함께하면서 말을 한다는 뜻입니다. 따라서 동반자, 위로자, 변호인의 역할을 나타냅니다. 성령께서는 단지 소소한 질문에 답하시기 위해 오시는 게 아닙니다. 그분은 영원한 답을 찾고 있는 우리들을 동반하시기 위해 오십니다. 즉문에 즉답하는 동네 아저씨 정도가 아니라 진정한 친구로 인생이라는 혼란의 길을 벗어나 영원한 생명으로 인도하기 위해 오십니다. 그렇습니다. 이런 동반자야말로 우리가 진정으로 필요로 하는 존재입니다.
+오늘 복음에서 주님은 당신의 영, 즉 성령을 보내시겠다고 약속하시며 그분을 보호자라고 칭하십니다. 그리스어로는 <a href="https://en.wikipedia.org/wiki/Paraclete">Paracletos</a>입니다. 이 명사는 παρακαλεῖν이라는 그리스어 동사에서 파생되었습니다. 옆에 함께하면서 말을 한다는 뜻입니다. 따라서 동반자, 위로자, 변호인의 역할을 나타냅니다. 성령께서는 단지 소소한 질문에 답하시기 위해 오시는 게 아닙니다. 그분은 영원한 답을 찾고 있는 우리들을 동반하시기 위해 오십니다. 즉문에 즉답하는 동네 아저씨 정도가 아니라 진정한 친구로 인생이라는 혼란의 길을 벗어나 영원한 생명으로 인도하기 위해 오십니다. 그렇습니다. 이런 동반자야말로 우리가 진정으로 필요로 하는 존재입니다.
 
 이번 휴가 때 보문역에서 1111번을 타고 성북동사무소으로 향했습니다. 15분이면 도달하는 짧은 거리입니다. 뒷문 바로 앞에 한 젊은 어머니와 십대 초반으로 보이는 딸이 타고 있더군요. 그 여자아이는 지적장애가 있는 것으로 보였습니다. 그런데 이 아이가 엄마에게 질문을 던지기 시작하더군요. 15분 동안 한 100개의 질문을 던지는 것 같았습니다. 물론 말도 안 되는 질문들이었습니다. 그러면 어머니는 어떻게 하셨을까요? 그 모든 질문들에 역시나 말도 안 되는 답들을 하시더군요. 하지만 지극한 친절과 인내로 정성껏 답해주시는 모습이 놀라웠습니다. 저는 이 어머니 안에서 두 가지 모습을 볼 수 있었습니다. 소소한 질문들에 재치있게 답해주는 동네 아주머니의 모습, 그리고 자신의 딸이 지녔던 큰 질문에 대한 답을 찾을 수 있도록 동반해 주는 성직자의 모습. 사실 딸의 수많은 작은 질문들 이면에는 큰 질문이 숨겨져 있었습니다. 이 아이가 궁극적으로 알고 싶고, 체험하고 싶었던 것이 있었습니다. 그것은 바로 어머니의 사랑입니다. 그렇지 않았을까요? 어머니의 날, 자녀된 마음으로 축하드리며 자녀들을 잘 동반하십사 부탁드립니다.
 
