--- a/future-dates/2023-9-24-homily.md
+++ b/future-dates/2023-9-24-homily.md
@@ -1,14 +1,14 @@
 ---
 
-title:  연중 제16주일(조부모와 노인의 날) (스위스 독서 확인)
+title:  연중 제25주일(세계 이주민과 난민의 날)
 layout: post 
 image:  
 bonstetten: true
-first_reading:  지혜서의 말씀입니다.12,13.16-19
+first_reading:  이사야서의 말씀입니다.55,6-9
 first_reading_link: m=2&n=151&p=8
-second_reading:  사도 바오로의 로마서 말씀입니다.8,26-27
+second_reading:  사도 바오로의 필리피서 말씀입니다.1,20ㄷ-24.27ㄱ
 second_reading_link: m=2&n=167&p=3
-gospel:  마태오가 전한 거룩한 복음입니다.13,24-43
+gospel:  마태오가 전한 거룩한 복음입니다.20,1-16
 gospel_link: m=2&n=150&p=14
 
 ---
