2023년 모든 독서 추가 (링크는 아직)

--- a/future-dates/2023-11-5-homily.md
+++ b/future-dates/2023-11-5-homily.md
@@ -1,13 +1,13 @@
 ---
 
-title:  
+title:  연중 제31주일
 layout: post 
 image:  
-first_reading:  
+first_reading:   말라키 예언서의 말씀입니다.1,14ㄴ-2,2ㄴ.8-10
 first_reading_link: m=1&n=133&p=37
-second_reading:  
+second_reading: 사도 바오로의 테살로니카 1서 말씀입니다.2,7ㄴ-9.13 
 second_reading_link: m=2&n=152&p=8
-gospel:  
+gospel:  마태오가 전한 거룩한 복음입니다.23,1-12
 gospel_link: m=2&n=150&p=11
 
 ---
