--- a/future-dates/2023-10-1-homily.md
+++ b/future-dates/2023-10-1-homily.md
@@ -3,11 +3,14 @@
 title:  연중 제26주일
 layout: post 
 image:  
-first_reading:  
+first_reading:  에제키엘 예언서의 말씀입니다.18,25-28
+
 first_reading_link: m=1&n=133&p=37
-second_reading:  
+second_reading:  사도 바오로의 필리피서 말씀입니다.2,1-11
+
 second_reading_link: m=2&n=152&p=8
-gospel:  
+gospel:  마태오가 전한 거룩한 복음입니다.21,28-32
+
 gospel_link: m=2&n=150&p=11
 
 ---
