--- a/future-dates/2023-10-8-homily.md
+++ b/future-dates/2023-10-8-homily.md
@@ -4,11 +4,12 @@ title:  연중 제27주일(군인 주일)
 layout: post 
 image:  
 bonstetten: true
-first_reading:  지혜서의 말씀입니다.12,13.16-19
+first_reading:  이사야서의 말씀입니다.5,1-7
 first_reading_link: m=2&n=151&p=8
-second_reading:  사도 바오로의 로마서 말씀입니다.8,26-27
+second_reading: 사도 바오로의 필리피서 말씀입니다.4,6-9
 second_reading_link: m=2&n=167&p=3
-gospel:  마태오가 전한 거룩한 복음입니다.13,24-43
+gospel: 마태오가 전한 거룩한 복음입니다.21,33-43
+
 gospel_link: m=2&n=150&p=14
 
 ---
