--- a/future-dates/2023-11-12-homily.md
+++ b/future-dates/2023-11-12-homily.md
@@ -1,14 +1,14 @@
 ---
 
-title:  연중 제16주일(조부모와 노인의 날) (스위스 독서 확인)
+title:  연중 제32주일(평신도 주일) (스위스 독서 확인)
 layout: post 
 image:  
 bonstetten: true
-first_reading:  지혜서의 말씀입니다.12,13.16-19
+first_reading: 지혜서의 말씀입니다.6,12-16
 first_reading_link: m=2&n=151&p=8
-second_reading:  사도 바오로의 로마서 말씀입니다.8,26-27
+second_reading: 사도 바오로의 테살로니카 1서 말씀입니다.4,13-18
 second_reading_link: m=2&n=167&p=3
-gospel:  마태오가 전한 거룩한 복음입니다.13,24-43
+gospel:  마태오가 전한 거룩한 복음입니다.25,1-13
 gospel_link: m=2&n=150&p=14
 
 ---
