--- a/future-dates/2023-11-26-homily.md
+++ b/future-dates/2023-11-26-homily.md
@@ -1,13 +1,13 @@
 ---
 
-title:  
+title:  온 누리의 임금이신 우리 주 예수 그리스도왕 대축일(성서 주간)
 layout: post 
 image:  
-first_reading:  
+first_reading:  에제키엘 예언서의 말씀입니다.34,11-12.15-17
 first_reading_link: m=1&n=133&p=37
-second_reading:  
+second_reading: 사도 바오로의 코린토 1서 말씀입니다.15,20-26.28 
 second_reading_link: m=2&n=152&p=8
-gospel:  
+gospel:  마태오가 전한 거룩한 복음입니다.25,31-46
 gospel_link: m=2&n=150&p=11
 
 ---
