--- a/future-dates/2023-10-15-homily.md
+++ b/future-dates/2023-10-15-homily.md
@@ -4,13 +4,13 @@ title:  연중 제28주일
 layout: post 
 image:  
 bonstetten: true
-first_reading: 이사야서의 말씀입니다.25,6-10ㄱ
+first_reading: 이사야서 25,6-10ㄱ
 
 first_reading_link: m=2&n=151&p=8
-second_reading: 사도 바오로의 필리피서 말씀입니다.4,12-14.19-20
+second_reading: 필리피서 4,12-14.19-20
 
 second_reading_link: m=2&n=167&p=3
-gospel: 마태오가 전한 거룩한 복음입니다.22,1-14
+gospel: 마태복음 22,1-14
 
 gospel_link: m=2&n=150&p=14
 
