--- a/future-dates/2023-10-29-homily.md
+++ b/future-dates/2023-10-29-homily.md
@@ -4,11 +4,11 @@ title:  연중 제30주일
 layout: post 
 image:  
 bonstetten: true
-first_reading:  탈출기의 말씀입니다.22,20-26
+first_reading:  탈출기 22,20-26
 first_reading_link: m=2&n=151&p=8
-second_reading: 사도 바오로의 테살로니카 1서 말씀입니다.1,5ㄴ-10
+second_reading: 테살로니카 1서  1,5ㄴ-10
 second_reading_link: m=2&n=167&p=3
-gospel:  마태오가 전한 거룩한 복음입니다.22,34-40
+gospel:  마태복음 22,34-40
 gospel_link: m=2&n=150&p=14
 
 ---
