--- a/future-dates/2023-9-24-homily.md
+++ b/future-dates/2023-9-24-homily.md
@@ -4,12 +4,11 @@ title:  연중 제25주일(세계 이주민과 난민의 날)
 layout: post 
 image:  
 bonstetten: true
-first_reading:  이사야서의 말씀입니다.55,6-9
-
+first_reading:  이사야서 55,6-9
 first_reading_link: m=2&n=151&p=8
-second_reading:  사도 바오로의 필리피서 말씀입니다.1,20ㄷ-24.27ㄱ
+second_reading:  필리피서 1,20ㄷ-24.27ㄱ
 second_reading_link: m=2&n=167&p=3
-gospel:  마태오가 전한 거룩한 복음입니다.20,1-16
+gospel:  마태복음 20,1-16
 gospel_link: m=2&n=150&p=14
 
 ---
