--- a/future-dates/2023-10-22-homily.md
+++ b/future-dates/2023-10-22-homily.md
@@ -3,13 +3,13 @@
 title:  연중 제29주일 - 민족들의 복음화를 위한 미사(전교 주일)
 layout: post 
 image:  
-first_reading:  이사야서의 말씀입니다.2,1-5
+first_reading:  이사야서 2,1-5
 
 first_reading_link: m=1&n=133&p=37
-second_reading:  사도 바오로의 로마서 말씀입니다.10,9-18
+second_reading:  로마서 10,9-18
 
 second_reading_link: m=2&n=152&p=8
-gospel:  마태오가 전한 거룩한 복음입니다.28,16-20
+gospel:  마태복음 28,16-20
 
 gospel_link: m=2&n=150&p=11
 
