--- a/future-dates/2023-11-19-homily.md
+++ b/future-dates/2023-11-19-homily.md
@@ -4,11 +4,11 @@ title:  연중 제33주일(세계 가난한 이의 날) (스위스 독서 확인
 layout: post 
 image:  
 bonstetten: true
-first_reading:  잠언의 말씀입니다.31,10-13.19-20.30-31
+first_reading:  잠언 31,10-13.19-20.30-31
 first_reading_link: m=2&n=151&p=8
-second_reading: 사도 바오로의 테살로니카 1서 말씀입니다.5,1-6
+second_reading: 테살로니카 1서  5,1-6
 second_reading_link: m=2&n=167&p=3
-gospel:  마태오가 전한 거룩한 복음입니다.25,14-30
+gospel:  마태복음 25,14-30
 gospel_link: m=2&n=150&p=14
 
 ---
