--- a/future-dates/2023-12-10-homily.md
+++ b/future-dates/2023-12-10-homily.md
@@ -3,11 +3,11 @@
 title:  대림 제2주일(인권 주일, 사회 교리 주간)
 layout: post 
 image:  
-first_reading:  이사야서의 말씀입니다.40,1-5.9-11
+first_reading:  이사야서 40,1-5.9-11
 first_reading_link: m=1&n=133&p=37
-second_reading: 베드로 2서의 말씀입니다.3,8-14 
+second_reading: 베드로 2서 3,8-14 
 second_reading_link: m=2&n=152&p=8
-gospel:  마르코가 전한 거룩한 복음의 시작입니다.1,1-8
+gospel:  마르코가 전한 거룩한 복음의 시작입니다. 1,1-8
 gospel_link: m=2&n=150&p=11
 
 ---
