--- a/future-dates/2023-12-25-homily.md
+++ b/future-dates/2023-12-25-homily.md
@@ -3,9 +3,9 @@
 title:  주님 성탄 대축일 - 낮 미사
 layout: post 
 image:  
-first_reading: 이사야서의 말씀입니다.9,1-6  
+first_reading: 이사야서 9,1-6  
 first_reading_link: m=1&n=133&p=37
-second_reading: 사도 바오로의 티토서 말씀입니다.2,11-14
+second_reading: 티토서  2,11-14
 second_reading_link: m=2&n=152&p=8
 gospel:  루카가 전한 거룩한 복음입니다.2,1-14
 gospel_link: m=2&n=150&p=11
