--- a/future-dates/2023-6-18-homily.md
+++ b/future-dates/2023-6-18-homily.md
@@ -4,11 +4,11 @@ title:  연중 제11주일
 layout: post 
 image:  
 bonstetten: true
-first_reading: 탈출기의 말씀입니다.19,2-6ㄱ
+first_reading: 탈출기 19,2-6ㄱ
 first_reading_link: m=2&n=151&p=8
-second_reading:  사도 바오로의 로마서 말씀입니다.5,6-11
+second_reading:  로마서 5,6-11
 second_reading_link: m=2&n=167&p=3
-gospel: 마태오가 전한 거룩한 복음입니다.9,36-10,8
+gospel: 마태복음 9,36-10,8
 gospel_link: m=2&n=150&p=14
 
 ---
