--- a/future-dates/2023-7-30-homily.md
+++ b/future-dates/2023-7-30-homily.md
@@ -3,11 +3,11 @@
 title: 연중 제17주일
 layout: post 
 image:  
-first_reading:  열왕기 상권의 말씀입니다.3,5-6ㄱ.7-12
+first_reading:  열왕기 상권 3,5-6ㄱ.7-12
 first_reading_link: m=1&n=133&p=37
-second_reading:  사도 바오로의 로마서 말씀입니다.8,28-30
+second_reading:  로마서 8,28-30
 second_reading_link: m=2&n=152&p=8
-gospel:  마태오가 전한 거룩한 복음입니다.13,44-52
+gospel:  마태복음 13,44-52
 gospel_link: m=2&n=150&p=11
 
 ---
