--- a/future-dates/2023-8-20-homily.md
+++ b/future-dates/2023-8-20-homily.md
@@ -3,11 +3,11 @@
 title:  연중 제20주일
 layout: post 
 image:  
-first_reading:  이사야서의 말씀입니다.56,1.6-7
+first_reading:  이사야서 56,1.6-7
 first_reading_link: m=1&n=133&p=37
-second_reading:  사도 바오로의 로마서 말씀입니다.11,13-15.29-32
+second_reading:  로마서 11,13-15.29-32
 second_reading_link: m=2&n=152&p=8
-gospel:  마태오가 전한 거룩한 복음입니다.15,21-28
+gospel:  마태복음 15,21-28
 gospel_link: m=2&n=150&p=11
 
 ---
