--- a/future-dates/2023-9-10-homily.md
+++ b/future-dates/2023-9-10-homily.md
@@ -3,11 +3,11 @@
 title:  연중 제23주일
 layout: post 
 image:  
-first_reading:  에제키엘 예언서의 말씀입니다.33,7-9
+first_reading:  에제키엘 예언서 33,7-9
 first_reading_link: m=1&n=133&p=37
-second_reading:  사도 바오로의 로마서 말씀입니다.13,8-10
+second_reading:  로마서 13,8-10
 second_reading_link: m=2&n=152&p=8
-gospel:  마태오가 전한 거룩한 복음입니다.18,15-20
+gospel:  마태복음 18,15-20
 gospel_link: m=2&n=150&p=11
 
 ---
