--- a/future-dates/2023-9-17-homily.md
+++ b/future-dates/2023-9-17-homily.md
@@ -4,11 +4,11 @@ title:  연중 제24주일
 layout: post 
 image:  
 bonstetten: true
-first_reading:  집회서의 말씀입니다.27,30―28,7
+first_reading:  집회서 27,30―28,7
 first_reading_link: m=2&n=151&p=8
-second_reading: 사도 바오로의 로마서 말씀입니다.14,7-9
+second_reading: 로마서 14,7-9
 second_reading_link: m=2&n=167&p=3
-gospel: 마태오가 전한 거룩한 복음입니다.18,21-35
+gospel: 마태복음 18,21-35
 gospel_link: m=2&n=150&p=14
 
 ---
