--- a/future-dates/2023-9-3-homily.md
+++ b/future-dates/2023-9-3-homily.md
@@ -4,11 +4,11 @@ title:  연중 제22주일
 layout: post 
 image:  
 bonstetten: true
-first_reading:  예레미야서의 말씀입니다.20,7-9
+first_reading:  예레미야서 20,7-9
 first_reading_link: m=2&n=151&p=8
-second_reading:  사도 바오로의 로마서 말씀입니다.12,1-2
+second_reading:  로마서 12,1-2
 second_reading_link: m=2&n=167&p=3
-gospel: 마태오가 전한 거룩한 복음입니다.16,21-27
+gospel: 마태복음 16,21-27
 gospel_link: m=2&n=150&p=14
 
 ---
