--- a/_posts/2020/2020-6-28-shunem.md
+++ b/_posts/2020/2020-6-28-shunem.md
@@ -5,10 +5,13 @@ title: 연중 제13주일 (교황 주일)
 image: shunem.jpeg
 
 first_reading: 열왕기 하권 4,8-11.14-16ㄴ
+first_reading_link_cbck: 2Kgs/4
 first_reading_link: m=1&n=112&p=4
 second_reading: 로마서 6,3-4.8-11
+second_reading_link_cbck: Rom/6
 second_reading_link: m=2&n=152&p=6
 gospel: 마태 10,37-42
+gospel_link_cbck: Mt/10
 gospel_link: m=2&n=147&p=10
 
 ---
