--- a/_posts/2022/2022-12-25-homily.md
+++ b/_posts/2022/2022-12-25-homily.md
@@ -5,10 +5,13 @@ title: 주님 성탄 대축일
 image: pasteur.jpg
 
 first_reading: 이사야서 52,7-10
+first_reading_link_cbck: Ls/52
 first_reading_link: m=1&n=129&p=52
 second_reading: 히브리서 1,1-6
+second_reading_link_cbck: Heb/1 
 second_reading_link: m=2&n=165&p=1
 gospel: 요한 1,1-18 
+gospel_link_cbck: Jn/1
 gospel_link: m=2&n=150&p=1
 tags: 성탄
 daily_missa: 20221225/15274
