--- a/future-dates/2023-10-1-homily.md
+++ b/future-dates/2023-10-1-homily.md
@@ -5,12 +5,15 @@ layout: post
 image:  
 first_reading:  에제키엘 예언서 18,25-28
 
+first_reading_link_cbck: Ez/18
 first_reading_link: m=1&n=133&p=37
 second_reading:  필리피서 2,1-11
 
+second_reading_link_cbck: Rom/
 second_reading_link: m=2&n=152&p=8
 gospel:  마태복음 21,28-32
 
+gospel_link_cbck: Jn/
 gospel_link: m=2&n=150&p=11
 
 ---
