--- a/future-dates/2023-10-15-homily.md
+++ b/future-dates/2023-10-15-homily.md
@@ -6,12 +6,15 @@ image:
 bonstetten: true
 first_reading: 이사야서 25,6-10ㄱ
 
+first_reading_link_cbck: Acts/
 first_reading_link: m=2&n=151&p=8
 second_reading: 필리피서 4,12-14.19-20
 
+second_reading_link_cbck: 1Pt/
 second_reading_link: m=2&n=167&p=3
 gospel: 마태복음 22,1-14
 
+gospel_link_cbck: Jn/
 gospel_link: m=2&n=150&p=14
 
 ---
