--- a/_posts/2020/2020-9-13-zabelka.md
+++ b/_posts/2020/2020-9-13-zabelka.md
@@ -5,10 +5,13 @@ title: 연중 제 24주일
 image: zabelka.jpeg
 
 first_reading: 집회서 27,30―28,7
+first_reading_link_cbck: Sir/27
 first_reading_link: m=1&n=128&p=27
 second_reading: 로마서 14,7-9
+second_reading_link_cbck: Rom/14
 second_reading_link: m=2&n=152&p=14
 gospel: 마태 18,21-35
+gospel_link_cbck: Mt/18
 gospel_link: m=2&n=147&p=18
 
 ---
