--- a/_posts/2021/2021-10-24-blind.md
+++ b/_posts/2021/2021-10-24-blind.md
@@ -5,10 +5,13 @@ title: 연중 제30주일 민족들의 복음화를 위한 미사 (전교 주일
 image: blind.jpeg
 
 first_reading: 이사야서2,1-5
+first_reading_link_cbck: Ls/2
 first_reading_link: m=1&n=129&p=2
 second_reading: 로마서 10,9-18
+second_reading_link_cbck: Rom/10
 second_reading_link: m=2&n=152&p=10
 gospel: 마르코 10,46b-52 (독일어 전례력 Lesejahr B)
+gospel_link_cbck: Mk/10
 gospel_link: m=2&n=148&p=10
 
 ---
