--- a/_posts/2021/2021-12-12-john.md
+++ b/_posts/2021/2021-12-12-john.md
@@ -4,11 +4,14 @@ layout: post
 title: 대림 3주일 (자선 주일)
 image: john.jpeg
 
-first_reading: 스바니야 예언서3,14-18ㄱ
+first_reading: 스바니야 예언서 3,14-18ㄱ
+first_reading_link_cbck: Zep/3
 first_reading_link: m=1&n=143&p=3
 second_reading: 필리피서 4,4-7
+second_reading_link_cbck: Phil/4
 second_reading_link: m=2&n=157&p=4
 gospel: 루카 3,10-18
+gospel_link_cbck: Lk/3
 gospel_link: m=2&n=149&p=3
 tags: 대림
 
