--- a/_posts/2021/2021-12-9-homily.md
+++ b/_posts/2021/2021-12-9-homily.md
@@ -5,8 +5,10 @@ title: 대림 제2주간 목요일
 image: christmas_cancelled.jpeg
 bonstetten: true
 first_reading: 이사야서 41,13-20
+first_reading_link_cbck: Ls/41
 first_reading_link: m=1&n=129&p=41
 gospel: 마태오 11,11-15
+gospel_link_cbck: Mt/11
 gospel_link: m=2&n=147&p=11
 
 ---
