--- a/_posts/2021/2021-3-14-fear.md
+++ b/_posts/2021/2021-3-14-fear.md
@@ -5,10 +5,13 @@ title: 사순 제4주일
 image: Stefan_Lochner_-_Last_Judgement_-_circa_1435.jpg
 
 first_reading: 역대기 하권36,14-16.19-23
+first_reading_link_cbck: 2Chr/36
 first_reading_link: m=1&n=133&p=37
 second_reading: 에페소서 2,4-10
+second_reading_link_cbck: Eph/2
 second_reading_link: m=2&n=156&p=2
 gospel: 요한 3,14-21
+gospel_link_cbck: Jn/3
 gospel_link: m=2&n=150&p=3
 
 tags: 사순
