--- a/_posts/2022/2022-07-17-martha.md
+++ b/_posts/2022/2022-07-17-martha.md
@@ -4,10 +4,13 @@ title: "연중 제 16주일 (농민 주일)"
 church: "취리히 한인천주교회"
 father: "이영덕 안토니오 신부님"
 first_reading: "창세기 18,1-10ㄴ"
+first_reading_link_cbck: Gn/18
 first_reading_link: m=1&n=101&p=18
 second_reading: "콜로새서 1,24-28"
+second_reading_link_cbck: Col/1
 second_reading_link: m=2&n=158&p=1
 gospel: "루카복음 10,38-42"
+gospel_link_cbck: Lk/10
 gospel_link: m=2&n=149&p=10
 image: "mary-martha.jpg"
 opening: "많은 사람들이 휴가를 갔을 때에도 누군가는 일을 해야 합니다. 우리가 쉬고 있을 때에도 누군가는 일을 하고 있습니다. 하느님이 항상 일을 하고 계시고 하느님이 일을 하지 않으시면 우리는 영원히 쉬게 됩니다."
@@ -17,7 +20,7 @@ closing: "저 담벼락 너머에 기도하시는 분들, 수녀님들 덕분에
 
 사람들이 휴가 간 뒤의 고요함이 좋습니다. 그러나 모두가 쉬기만 해서는 안 되고, 누군가는 일을 해야 합니다. 일은 쉽지 않지만, 누군가는 해야 합니다.
 
-저는 사제이다보니 초대를 많이 받습니다. 초대받아 이야기를 나누게 됩니다. 한국에서 신부님들은 저녁을 두번 드시기도 한답니다. 두부를 좋아하신다고 하면 한 댁에서 두부로 저녁을 드시고, 또 다음 댁에 가서 또 두부를 드시기도 합니다. 
+저는 사제이다보니 초대를 많이 받습니다. 초대받아 이야기를 나누게 됩니다. 한국에서 신부님들은 저녁을 두번 드시기도 한답니다. 두부를 좋아하신다고 하면 한 댁에서 두부로 저녁을 드시고, 또 다음 댁에 가서 또 두부를 드시기도 합니다.
 한달에 5-8번은 초대를 받아 식사를 하는 것 같습니다.
 항상 누군가는 부엌에서 일을 하고 있습니다. 아무도 부엌에 없다면 불안해집니다. 오늘 말씀에 나오는 마르타가 없으면 저녁은 배고픈 저녁이 됩니다.
 
