--- a/_posts/2022/2022-11-27-otto.md
+++ b/_posts/2022/2022-11-27-otto.md
@@ -2,10 +2,13 @@
 layout: post
 title: 대림 첫 주일
 first_reading: 이사야서 2,1-5
+first_reading_link_cbck: Ls/2
 first_reading_link: m=1&n=129&p=2
 second_reading: 로마서 13,11-14 ᄀ
+second_reading_link_cbck: Rom/13
 second_reading_link: m=2&n=152&p=13
 gospel: 마태오 복음서 24,37-44
+gospel_link_cbck: Mt/24
 gospel_link: m=2&n=147&p=24
 image: 루돌프옷토.jpeg
 tags: 대림
