--- a/_posts/2022/2022-6-12-bahn.md
+++ b/_posts/2022/2022-6-12-bahn.md
@@ -5,10 +5,13 @@ title: 지극히 거룩하신 삼위일체 대축일
 image: road.jpeg
 
 first_reading: 잠언 8,22-31
+first_reading_link_cbck: Prv/8
 first_reading_link: m=1&n=133&p=37
 second_reading: 로마서 5,1-5
+second_reading_link_cbck: Rom/5
 second_reading_link: m=2&n=152&p=5
 gospel: 요한 16,12-15
+gospel_link_cbck: Jn/16
 gospel_link: m=2&n=150&p=16
 ---
 
