--- a/_posts/2023/2023-1-22-homily.md
+++ b/_posts/2023/2023-1-22-homily.md
@@ -5,10 +5,13 @@ title: 설
 image: 146.png
 
 first_reading: 민수기 6,22-27
+first_reading_link_cbck: Nm/6
 first_reading_link: m=1&n=104&p=6
 second_reading: 야고보서 4,13-15
+second_reading_link_cbck: Jas/4 
 second_reading_link: m=2&n=166&p=4
 gospel: 루카 12,35-40
+gospel_link_cbck: Lk/12
 gospel_link: m=2&n=149&p=12
 
 
