--- a/_posts/2023/2023-5-14-homily.md
+++ b/_posts/2023/2023-5-14-homily.md
@@ -4,17 +4,20 @@ title:  부활 제6주일
 layout: post 
 image:  2023_5_14.jpg
 first_reading:  사도행전 8,5-8.14-17
+first_reading_link_cbck: Acts/8
 first_reading_link: m=2&n=151&p=8
 second_reading:  베드로 1서 3,15-18
+second_reading_link_cbck: 1Pt/3
 second_reading_link: m=2&n=167&p=3
 gospel:  요한 14,15-21
+gospel_link_cbck: Jn/14
 gospel_link: m=2&n=150&p=14
 
 ---
 
 휴가 차 한국에 있으면 예전에 알고 지내던 수사님들, 신부님들의 근황을 접합니다. 아니나 다를까 이번에도 그랬습니다. 나이가 지긋하신 한 수사님이 특별행사를 준비하신다는 소식을 들었습니다. 호기심이 동해 찾아봤습니다. 신자들을 위한 즉문즉답 행사에 관한 소식이 눈에 들어오더군요. 스님들의 영업방식을 벤치 마케팅하신 겁니다. 예전에도 그런 끼를 보이기는 하셨는데 그 사이 더 발전하셨다고 생각하고 내심 웃었습니다.
 
-사적인 문제를 공개적으로 얘기하고 답을 찾으려는 행동이 쉽게 이해가 되지는 않습니다. 그런데 오죽 했으면 그렇게 할까 싶습니다. 그래서 중생들을 탓하기 보다는 그 질문에 답을 줄 수 있다고 믿는 성직자들, 수도자들이 무책임을 탓해야 합니다. 왜 그럴까요? 잘 듣고 있으면 오가는 질문들이 별게 아니라는 것을 알 수 있습니다. 아이들 걱정, 시어머니와의 갈등, 직장에서 겪는 어려움들 정도에 지나지 않습니다. 그런데 과연 이 질문들을 독신생활을 하는 이들이, 그래서 아이들, 시어머니, 직장에 대해 아무 것도 모르는 이들이 시원하게 답해 줄 수 있을까요? 그럴 수 없습니다. 식당에서 일하시는 중년의 아주머니가 수도자들보다 훨씬 더 잘 대답해 주실 수 있습니다. 지하철 타고 출퇴근하시는 아저씨들, 쉬는 시간 잠깐 밖에 나와서 담배 피우는 직장인들이 훨씬 더 잘 대답할 수 있습니다. 이런 문제들에는 답이 있고, 그 답은 그것을 경험한 다른 사람들이 가지고 있으니까요. 그렇다면 과연 성직자들의 역할은 무엇일까요? 
+사적인 문제를 공개적으로 얘기하고 답을 찾으려는 행동이 쉽게 이해가 되지는 않습니다. 그런데 오죽 했으면 그렇게 할까 싶습니다. 그래서 중생들을 탓하기 보다는 그 질문에 답을 줄 수 있다고 믿는 성직자들, 수도자들이 무책임을 탓해야 합니다. 왜 그럴까요? 잘 듣고 있으면 오가는 질문들이 별게 아니라는 것을 알 수 있습니다. 아이들 걱정, 시어머니와의 갈등, 직장에서 겪는 어려움들 정도에 지나지 않습니다. 그런데 과연 이 질문들을 독신생활을 하는 이들이, 그래서 아이들, 시어머니, 직장에 대해 아무 것도 모르는 이들이 시원하게 답해 줄 수 있을까요? 그럴 수 없습니다. 식당에서 일하시는 중년의 아주머니가 수도자들보다 훨씬 더 잘 대답해 주실 수 있습니다. 지하철 타고 출퇴근하시는 아저씨들, 쉬는 시간 잠깐 밖에 나와서 담배 피우는 직장인들이 훨씬 더 잘 대답할 수 있습니다. 이런 문제들에는 답이 있고, 그 답은 그것을 경험한 다른 사람들이 가지고 있으니까요. 그렇다면 과연 성직자들의 역할은 무엇일까요?
 
 세상에는 즉시 답을 찾을 수 없는 커다란 물음이 있습니다. 아마 여러분들도 이런 질문을 품고 계실 것입니다. 성직자의 역할은 소소한 문제들에 답을 주는 게 아니라 이 큰 질문을 품고 있는 이들을 동반하는 것입니다. 그렇게 해서 그들이 찾고 있는 그 궁극적인 답에 함께 도달하는 것입니다. 즉각적인 답을 찾고 싶으신가요? 그러면 주변 사람들에게 물어보시면 됩니다. 영원한 답을 찾고 계신가요? 그러면 저희에게 오십시오. 영원하고 완벽한 답이신 그리스도께 함께 걸어갑시다.
 
@@ -31,10 +34,10 @@ gospel_link: m=2&n=150&p=14
 오늘 제1독서에서, 제자들이 요한과 베드로가 이미 세례를 받은 신자들에게 가서, 기도를 합니다. 무슨 일이 일어났나요? 치유가 되고 성령이 옵니다. 성령을 청하는 기도를 따로 합니다. 가톨릭에서는 세례성사와 견진성사가 있습니다.
 성령을 청하는 성사인 견진성사가 있습니다.
 
-오늘, 형제님들이 정성과 힘을 다해 식사를 준비했습니다. 저는 그렇게 못 살 거든요. 기쁜 마음으로 식사를 합시다. 그 전에 샴페인을 따겠습니다. 최근 생신을 맞으신 루치아 자매님부터 나오세요 
+오늘, 형제님들이 정성과 힘을 다해 식사를 준비했습니다. 저는 그렇게 못 살 거든요. 기쁜 마음으로 식사를 합시다. 그 전에 샴페인을 따겠습니다. 최근 생신을 맞으신 루치아 자매님부터 나오세요
 
 참고자료:
 
-<a href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=5743&keyword=&gubun=02">성령강림대축일</a> 
+<a href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=5743&keyword=&gubun=02">성령강림대축일</a>
 
-<a href="https://m.mariasarang.net/book/bbs_view.asp?index=tagbbs_gido7&no=7">성령강림 9일기도 (5/19-5/27)</a> 
+<a href="https://m.mariasarang.net/book/bbs_view.asp?index=tagbbs_gido7&no=7">성령강림 9일기도 (5/19-5/27)</a>
