--- a/future-dates/2023-10-22-homily.md
+++ b/future-dates/2023-10-22-homily.md
@@ -5,12 +5,15 @@ layout: post
 image:  
 first_reading:  이사야서 2,1-5
 
+first_reading_link_cbck: Ls/2
 first_reading_link: m=1&n=133&p=37
 second_reading:  로마서 10,9-18
 
+second_reading_link_cbck: Rom/
 second_reading_link: m=2&n=152&p=8
 gospel:  마태복음 28,16-20
 
+gospel_link_cbck: Jn/
 gospel_link: m=2&n=150&p=11
 
 ---
