--- a/future-dates/2023-10-8-homily.md
+++ b/future-dates/2023-10-8-homily.md
@@ -5,11 +5,14 @@ layout: post
 image:  
 bonstetten: true
 first_reading:  이사야서 5,1-7
+first_reading_link_cbck: Acts/
 first_reading_link: m=2&n=151&p=8
 second_reading: 필리피서 4,6-9
+second_reading_link_cbck: 1Pt/
 second_reading_link: m=2&n=167&p=3
 gospel: 마태복음 21,33-43
 
+gospel_link_cbck: Jn/
 gospel_link: m=2&n=150&p=14
 
 ---
