--- a/future-dates/2023-11-12-homily.md
+++ b/future-dates/2023-11-12-homily.md
@@ -5,10 +5,13 @@ layout: post
 image:  
 bonstetten: true
 first_reading: 지혜서 6,12-16
+first_reading_link_cbck: Wis/6
 first_reading_link: m=2&n=151&p=8
 second_reading: 테살로니카 1서  4,13-18
+second_reading_link_cbck: 1Pt/
 second_reading_link: m=2&n=167&p=3
 gospel:  마태복음 25,1-13
+gospel_link_cbck: Jn/
 gospel_link: m=2&n=150&p=14
 
 ---
