--- a/future-dates/2023-11-19-homily.md
+++ b/future-dates/2023-11-19-homily.md
@@ -5,10 +5,13 @@ layout: post
 image:  
 bonstetten: true
 first_reading:  잠언 31,10-13.19-20.30-31
+first_reading_link_cbck: Prv/31
 first_reading_link: m=2&n=151&p=8
 second_reading: 테살로니카 1서  5,1-6
+second_reading_link_cbck: 1Pt/
 second_reading_link: m=2&n=167&p=3
 gospel:  마태복음 25,14-30
+gospel_link_cbck: Jn/
 gospel_link: m=2&n=150&p=14
 
 ---
