--- a/future-dates/2023-5-28-homily.md
+++ b/future-dates/2023-5-28-homily.md
@@ -4,10 +4,13 @@ title:  성령 강림 대축일(청소년 주일)
 layout: post 
 image:  
 first_reading:  사도행전 2,1-11
+first_reading_link_cbck: Acts/
 first_reading_link: m=2&n=151&p=2
 second_reading:  코린토 1서 12,3ㄷ-7.12-13
+second_reading_link_cbck: 1Cor/
 second_reading_link: m=2&n=153&p=12
 gospel:  요한 20,19-23
+gospel_link_cbck: Jn/
 gospel_link: m=2&n=150&p=20
 
 ---
