--- a/future-dates/2023-6-11-homily.md
+++ b/future-dates/2023-6-11-homily.md
@@ -4,10 +4,13 @@ title:  지극히 거룩하신 그리스도의 성체 성혈 대축일
 layout: post 
 image:  
 first_reading:  신명기 8,2-3.14ㄴ-16ㄱ
+first_reading_link_cbck: Dt/8
 first_reading_link: m=1&n=105&p=8
 second_reading:  코린토 1서 10,16-17
+second_reading_link_cbck: 1Cor/
 second_reading_link: m=2&n=153&p=10
 gospel:  요한 6,51-58
+gospel_link_cbck: Jn/
 gospel_link: m=2&n=150&p=6
 
 ---
