--- a/future-dates/2023-6-18-homily.md
+++ b/future-dates/2023-6-18-homily.md
@@ -5,10 +5,13 @@ layout: post
 image:  
 bonstetten: true
 first_reading: 탈출기 19,2-6ㄱ
+first_reading_link_cbck: Ex/19
 first_reading_link: m=2&n=151&p=8
 second_reading:  로마서 5,6-11
+second_reading_link_cbck: 1Pt/
 second_reading_link: m=2&n=167&p=3
 gospel: 마태복음 9,36-10,8
+gospel_link_cbck: Jn/
 gospel_link: m=2&n=150&p=14
 
 ---
