--- a/future-dates/2023-6-4-homily.md
+++ b/future-dates/2023-6-4-homily.md
@@ -5,10 +5,13 @@ layout: post
 image:  
 bonstetten: true
 first_reading: 탈출기 34,4ㄱㄷ-6.8-9
+first_reading_link_cbck: Ex/34
 first_reading_link: m=2&n=151&p=8
 second_reading:  코린토 2서  13,11-13
+second_reading_link_cbck: 1Pt/
 second_reading_link: m=2&n=167&p=3
 gospel: 요한이 전한 거룩한 복음입니다.3,16-18
+gospel_link_cbck: Jn/
 gospel_link: m=2&n=150&p=14
 
 ---
