--- a/future-dates/2023-7-16-homily.md
+++ b/future-dates/2023-7-16-homily.md
@@ -4,10 +4,13 @@ title: 연중 제15주일(농민 주일)
 layout: post 
 image:  
 first_reading:  이사야서 55,10-11
+first_reading_link_cbck: Ls/55
 first_reading_link: m=1&n=129&p=55
 second_reading:  로마서 8,18-23
+second_reading_link_cbck: Rom/
 second_reading_link: m=2&n=152&p=8
 gospel:  마태 13,1-23
+gospel_link_cbck: Mt/13
 gospel_link: m=2&n=147&p=13
 
 ---
