--- a/future-dates/2023-9-24-homily.md
+++ b/future-dates/2023-9-24-homily.md
@@ -5,10 +5,13 @@ layout: post
 image:  
 bonstetten: true
 first_reading:  이사야서 55,6-9
+first_reading_link_cbck: Acts/
 first_reading_link: m=2&n=151&p=8
 second_reading:  필리피서 1,20ㄷ-24.27ㄱ
+second_reading_link_cbck: 1Pt/
 second_reading_link: m=2&n=167&p=3
 gospel:  마태복음 20,1-16
+gospel_link_cbck: Jn/
 gospel_link: m=2&n=150&p=14
 
 ---
